updated java version to 21 for release 0.8.0 and app/S3ClientConfiguration.java  added