@@ -9,13 +9,17 @@
  */
 package org.eclipse.hawkbit.repository.jpa;
 
+import static org.eclipse.hawkbit.repository.jpa.builder.JpaRolloutGroupCreate.addSuccessAndErrorConditionsAndActions;
+
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Proxy;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.atomic.AtomicLong;
 import java.util.stream.StreamSupport;
 
 import jakarta.persistence.EntityManager;
@@ -23,13 +27,13 @@ import jakarta.persistence.EntityManager;
 import lombok.extern.slf4j.Slf4j;
 import org.eclipse.hawkbit.repository.DeploymentManagement;
 import org.eclipse.hawkbit.repository.QuotaManagement;
+import org.eclipse.hawkbit.repository.RepositoryProperties;
 import org.eclipse.hawkbit.repository.RolloutApprovalStrategy;
 import org.eclipse.hawkbit.repository.RolloutExecutor;
 import org.eclipse.hawkbit.repository.RolloutGroupManagement;
 import org.eclipse.hawkbit.repository.RolloutHelper;
 import org.eclipse.hawkbit.repository.RolloutManagement;
 import org.eclipse.hawkbit.repository.TargetManagement;
-import org.eclipse.hawkbit.repository.event.remote.RolloutGroupDeletedEvent;
 import org.eclipse.hawkbit.repository.event.remote.RolloutStoppedEvent;
 import org.eclipse.hawkbit.repository.event.remote.entity.RolloutUpdatedEvent;
 import org.eclipse.hawkbit.repository.exception.AssignmentQuotaExceededException;
@@ -69,8 +73,6 @@ import org.springframework.data.domain.Sort.Direction;
 import org.springframework.transaction.PlatformTransactionManager;
 import org.springframework.transaction.TransactionException;
 
-import static org.eclipse.hawkbit.repository.jpa.builder.JpaRolloutGroupCreate.addSuccessAndErrorConditionsAndActions;
-
 /**
  * A Jpa implementation of {@link RolloutExecutor}
  */
@@ -81,7 +83,6 @@ public class JpaRolloutExecutor implements RolloutExecutor {
      * Max amount of targets that are handled in one transaction.
      */
     private static final int TRANSACTION_TARGETS = 5_000;
-
     /**
      * Maximum amount of actions that are deleted in one transaction.
      */
@@ -90,117 +91,123 @@ public class JpaRolloutExecutor implements RolloutExecutor {
     /**
      * Action statuses that result in a terminated action
      */
-    private static final List<Status> DEFAULT_ACTION_TERMINATION_STATUSES = Arrays.asList(Status.ERROR, Status.FINISHED,
-            Status.CANCELED);
+    private static final List<Status> DEFAULT_ACTION_TERMINATION_STATUSES = List.of(
+            Status.ERROR, Status.FINISHED, Status.CANCELED);
     /**
      * In case of DOWNLOAD_ONLY, actions can be finished with DOWNLOADED status.
      */
-    private static final List<Status> DOWNLOAD_ONLY_ACTION_TERMINATION_STATUSES = Arrays.asList(Status.ERROR,
-            Status.FINISHED, Status.CANCELED, Status.DOWNLOADED);
+    private static final List<Status> DOWNLOAD_ONLY_ACTION_TERMINATION_STATUSES = List.of(
+            Status.ERROR, Status.FINISHED, Status.CANCELED, Status.DOWNLOADED);
+    private static final Comparator<RolloutGroup> DESC_COMP = Comparator.comparingLong(RolloutGroup::getId).reversed();
+    private static final String TRANSACTION_ASSIGNING_TARGETS_TO_ROLLOUT_GROUP_FAILED = "Transaction assigning Targets to RolloutGroup failed";
 
-    private final RolloutTargetGroupRepository rolloutTargetGroupRepository;
-    private final EntityManager entityManager;
-    private final RolloutRepository rolloutRepository;
     private final ActionRepository actionRepository;
     private final RolloutGroupRepository rolloutGroupRepository;
-    private final AfterTransactionCommitExecutor afterCommit;
-    private final TenantAware tenantAware;
-    private final RolloutGroupManagement rolloutGroupManagement;
-    private final QuotaManagement quotaManagement;
-    private final DeploymentManagement deploymentManagement;
+    private final RolloutTargetGroupRepository rolloutTargetGroupRepository;
+    private final RolloutRepository rolloutRepository;
     private final TargetManagement targetManagement;
-    private final EventPublisherHolder eventPublisherHolder;
-    private final PlatformTransactionManager txManager;
-    private final RolloutApprovalStrategy rolloutApprovalStrategy;
-    private final RolloutGroupEvaluationManager evaluationManager;
+    private final DeploymentManagement deploymentManagement;
+    private final RolloutGroupManagement rolloutGroupManagement;
     private final RolloutManagement rolloutManagement;
-    
-    /**
-     * Constructor
-     */
-    public JpaRolloutExecutor(final RolloutTargetGroupRepository rolloutTargetGroupRepository,
-            final EntityManager entityManager, final RolloutRepository rolloutRepository,
+    private final QuotaManagement quotaManagement;
+    private final RolloutGroupEvaluationManager evaluationManager;
+    private final RolloutApprovalStrategy rolloutApprovalStrategy;
+    private final EntityManager entityManager;
+    private final PlatformTransactionManager txManager;
+    private final AfterTransactionCommitExecutor afterCommit;
+    private final EventPublisherHolder eventPublisherHolder;
+    private final TenantAware tenantAware;
+    private final RepositoryProperties repositoryProperties;
+    private final Map<Long, AtomicLong> lastDynamicGroupFill = new ConcurrentHashMap<>();
+
+    @SuppressWarnings("java:S107")
+    public JpaRolloutExecutor(
             final ActionRepository actionRepository, final RolloutGroupRepository rolloutGroupRepository,
-            final AfterTransactionCommitExecutor afterCommit, final TenantAware tenantAware,
-            final RolloutGroupManagement rolloutGroupManagement, final QuotaManagement quotaManagement,
-            final DeploymentManagement deploymentManagement, final TargetManagement targetManagement,
-            final EventPublisherHolder eventPublisherHolder, final PlatformTransactionManager txManager,
-            final RolloutApprovalStrategy rolloutApprovalStrategy,
-            final RolloutGroupEvaluationManager evaluationManager, final RolloutManagement rolloutManagement) {
-        this.rolloutTargetGroupRepository = rolloutTargetGroupRepository;
-        this.entityManager = entityManager;
-        this.rolloutRepository = rolloutRepository;
+            final RolloutTargetGroupRepository rolloutTargetGroupRepository,
+            final RolloutRepository rolloutRepository, final TargetManagement targetManagement,
+            final DeploymentManagement deploymentManagement, final RolloutGroupManagement rolloutGroupManagement,
+            final RolloutManagement rolloutManagement, final QuotaManagement quotaManagement,
+            final RolloutGroupEvaluationManager evaluationManager, final RolloutApprovalStrategy rolloutApprovalStrategy,
+            final EntityManager entityManager, final PlatformTransactionManager txManager,
+            final AfterTransactionCommitExecutor afterCommit, final EventPublisherHolder eventPublisherHolder,
+            final TenantAware tenantAware, final RepositoryProperties repositoryProperties) {
         this.actionRepository = actionRepository;
         this.rolloutGroupRepository = rolloutGroupRepository;
-        this.afterCommit = afterCommit;
-        this.tenantAware = tenantAware;
-        this.rolloutGroupManagement = rolloutGroupManagement;
-        this.quotaManagement = quotaManagement;
-        this.deploymentManagement = deploymentManagement;
+        this.rolloutTargetGroupRepository = rolloutTargetGroupRepository;
+        this.rolloutRepository = rolloutRepository;
         this.targetManagement = targetManagement;
-        this.eventPublisherHolder = eventPublisherHolder;
-        this.txManager = txManager;
-        this.rolloutApprovalStrategy = rolloutApprovalStrategy;
-        this.evaluationManager = evaluationManager;
+        this.deploymentManagement = deploymentManagement;
+        this.rolloutGroupManagement = rolloutGroupManagement;
         this.rolloutManagement = rolloutManagement;
+        this.quotaManagement = quotaManagement;
+        this.evaluationManager = evaluationManager;
+        this.rolloutApprovalStrategy = rolloutApprovalStrategy;
+        this.entityManager = entityManager;
+        this.txManager = txManager;
+        this.afterCommit = afterCommit;
+        this.eventPublisherHolder = eventPublisherHolder;
+        this.tenantAware = tenantAware;
+        this.repositoryProperties = repositoryProperties;
     }
 
     @Override
     public void execute(final Rollout rollout) {
-        log.debug("handle rollout {}", rollout.getId());
+        log.debug("Processing rollout {}", rollout.getId());
 
         switch (rollout.getStatus()) {
-        case CREATING:
-            handleCreateRollout((JpaRollout) rollout);
-            break;
-        case READY:
-            handleReadyRollout(rollout);
-            break;
-        case STARTING:
-            // the lastModifiedBy user is probably the user that has actually called the rollout start (unless overridden) - not the creator
-            SpringSecurityAuditorAware.setAuditorOverride(rollout.getLastModifiedBy());
-            try {
-                handleStartingRollout(rollout);
-            } finally {
-                // clear, ALWAYS, the set auditor override
-                SpringSecurityAuditorAware.clearAuditorOverride();
-            }
-            break;
-        case RUNNING:
-            handleRunningRollout((JpaRollout) rollout);
-            break;
-        case STOPPING:
-            // the lastModifiedBy user is probably the user that has actually called the rollout stop (unless overridden) - not the creator
-            SpringSecurityAuditorAware.setAuditorOverride(rollout.getLastModifiedBy());
-            try {
-                handleStopRollout((JpaRollout) rollout);
-            } finally {
-                // clear, ALWAYS, the set auditor override
-                SpringSecurityAuditorAware.clearAuditorOverride();
-            }
-            break;
-        case DELETING:
-            // the lastModifiedBy user is probably the user that has actually called the rollout delete (unless overridden) - not the creator
-            SpringSecurityAuditorAware.setAuditorOverride(rollout.getLastModifiedBy());
-            try {
-                handleDeleteRollout((JpaRollout) rollout);
-            } finally {
-                // clear, ALWAYS, the set auditor override
-                SpringSecurityAuditorAware.clearAuditorOverride();
-            }
-            break;
-        default:
-            log.error("Rollout in status {} not supposed to be handled!", rollout.getStatus());
-            break;
+            case CREATING:
+                handleCreateRollout((JpaRollout) rollout);
+                break;
+            case READY:
+                handleReadyRollout(rollout);
+                break;
+            case STARTING:
+                // the lastModifiedBy user is probably the user that has actually called the rollout start (unless overridden) - not the creator
+                SpringSecurityAuditorAware.setAuditorOverride(rollout.getLastModifiedBy());
+                try {
+                    handleStartingRollout((JpaRollout) rollout);
+                } finally {
+                    // clear, ALWAYS, the set auditor override
+                    SpringSecurityAuditorAware.clearAuditorOverride();
+                }
+                break;
+            case RUNNING:
+                handleRunningRollout((JpaRollout) rollout);
+                break;
+            case STOPPING:
+                // the lastModifiedBy user is probably the user that has actually called the rollout stop (unless overridden) - not the creator
+                SpringSecurityAuditorAware.setAuditorOverride(rollout.getLastModifiedBy());
+                try {
+                    handleStopRollout((JpaRollout) rollout);
+                } finally {
+                    // clear, ALWAYS, the set auditor override
+                    SpringSecurityAuditorAware.clearAuditorOverride();
+                }
+                break;
+            case DELETING:
+                // the lastModifiedBy user is probably the user that has actually called the rollout delete (unless overridden) - not the creator
+                SpringSecurityAuditorAware.setAuditorOverride(rollout.getLastModifiedBy());
+                try {
+                    handleDeleteRollout((JpaRollout) rollout);
+                } finally {
+                    // clear, ALWAYS, the set auditor override
+                    SpringSecurityAuditorAware.clearAuditorOverride();
+                }
+                break;
+            default:
+                log.error("Rollout in status {} not supposed to be handled!", rollout.getStatus());
+                break;
         }
+
+        log.debug("Rollout {} processed", rollout.getId());
     }
 
     private void handleCreateRollout(final JpaRollout rollout) {
         log.debug("handleCreateRollout called for rollout {}", rollout.getId());
 
         final List<RolloutGroup> rolloutGroups = rolloutGroupManagement.findByRollout(
-                PageRequest.of(0, quotaManagement.getMaxRolloutGroupsPerRollout(), Sort.by(Direction.ASC, "id")),
-                rollout.getId()).getContent();
+                rollout.getId(), PageRequest.of(0, quotaManagement.getMaxRolloutGroupsPerRollout(), Sort.by(Direction.ASC, "id"))
+        ).getContent();
 
         int readyGroups = 0;
         int totalTargets = 0;
@@ -211,25 +218,24 @@ public class JpaRolloutExecutor implements RolloutExecutor {
                 continue;
             }
 
-            final RolloutGroup filledGroup = fillRolloutGroupWithTargets(rollout, (JpaRolloutGroup) group,
-                    rolloutGroups);
+            final RolloutGroup filledGroup = fillRolloutGroupWithTargets(rollout, (JpaRolloutGroup) group, rolloutGroups);
             if (RolloutGroupStatus.READY == filledGroup.getStatus()) {
                 readyGroups++;
                 totalTargets += filledGroup.getTotalTargets();
             }
         }
 
-        // When all groups are ready the rollout status can be changed to be
-        // ready, too.
+        // When all groups are ready the rollout status can be changed to be ready, too.
         if (readyGroups == rolloutGroups.size()) {
             if (rollout.isDynamic() && !rolloutGroups.get(rolloutGroups.size() - 1).isDynamic()) {
                 // add first dynamic group one by using the last as a parent and as a pattern
-                createDynamicGroup(rollout, rolloutGroups.get(rolloutGroups.size() - 1), rolloutGroups.size(), RolloutGroupStatus.READY);
+                createDynamicGroup(
+                        rollout, (JpaRolloutGroup) rolloutGroups.get(rolloutGroups.size() - 1), rolloutGroups.size(), RolloutGroupStatus.READY);
             }
 
             if (!rolloutApprovalStrategy.isApprovalNeeded(rollout)) {
-                rollout.setStatus(RolloutStatus.READY);
                 log.debug("rollout {} creation done. Switch to READY.", rollout.getId());
+                rollout.setStatus(RolloutStatus.READY);
             } else {
                 log.debug("rollout {} creation done. Switch to WAITING_FOR_APPROVAL.", rollout.getId());
                 rollout.setStatus(RolloutStatus.WAITING_FOR_APPROVAL);
@@ -257,8 +263,7 @@ public class JpaRolloutExecutor implements RolloutExecutor {
         deleteScheduledActions(rollout, scheduledActions);
 
         // avoid another scheduler round and re-check if all scheduled actions
-        // has been cleaned up. we flush first to ensure that the we include the
-        // deletion above
+        // has been cleaned up. we flush first to ensure that will include the deletion above
         entityManager.flush();
         final boolean hasScheduledActionsLeft = actionRepository.countByRolloutIdAndStatus(rollout.getId(),
                 Status.SCHEDULED) > 0;
@@ -280,8 +285,8 @@ public class JpaRolloutExecutor implements RolloutExecutor {
         rollout.setStatus(RolloutStatus.DELETED);
         rollout.setDeleted(true);
         rolloutRepository.save(rollout);
-
-        sendRolloutGroupDeletedEvents(rollout);
+//
+//        sendRolloutGroupDeletedEvents(rollout);
     }
 
     private void handleStopRollout(final JpaRollout rollout) {
@@ -303,62 +308,57 @@ public class JpaRolloutExecutor implements RolloutExecutor {
 
         rolloutGroupRepository.findByRolloutAndStatusNotIn(rollout,
                 Arrays.asList(RolloutGroupStatus.FINISHED, RolloutGroupStatus.ERROR)).forEach(rolloutGroup -> {
-                    rolloutGroup.setStatus(RolloutGroupStatus.FINISHED);
-                    rolloutGroupRepository.save(rolloutGroup);
-                });
+            rolloutGroup.setStatus(RolloutGroupStatus.FINISHED);
+            rolloutGroupRepository.save(rolloutGroup);
+        });
 
         rollout.setStatus(RolloutStatus.FINISHED);
         rolloutRepository.save(rollout);
 
-        final List<Long> groupIds = rollout.getRolloutGroups().stream().map(RolloutGroup::getId)
-                .collect(Collectors.toList());
-
+        final List<Long> groupIds = rollout.getRolloutGroups().stream().map(RolloutGroup::getId).toList();
         afterCommit.afterCommit(() -> eventPublisherHolder.getEventPublisher().publishEvent(new RolloutStoppedEvent(
                 tenantAware.getCurrentTenant(), eventPublisherHolder.getApplicationId(), rollout.getId(), groupIds)));
     }
 
     private void handleReadyRollout(final Rollout rollout) {
         if (rollout.getStartAt() != null && rollout.getStartAt() <= System.currentTimeMillis()) {
-            log.debug(
-                    "handleReadyRollout called for rollout {} with autostart beyond define time. Switch to STARTING",
-                    rollout.getId());
+            log.debug("handleReadyRollout called for rollout {} with autostart beyond define time. Switch to STARTING", rollout.getId());
             rolloutManagement.start(rollout.getId());
         }
     }
 
-    private void handleStartingRollout(final Rollout rollout) {
+    private void handleStartingRollout(final JpaRollout rollout) {
         log.debug("handleStartingRollout called for rollout {}", rollout.getId());
 
         if (ensureAllGroupsAreScheduled(rollout)) {
             startFirstRolloutGroup(rollout);
+
+            rollout.setStatus(RolloutStatus.RUNNING);
+            rollout.setLastCheck(0);
+            rolloutRepository.save(rollout);
         }
     }
 
     private void handleRunningRollout(final JpaRollout rollout) {
         log.debug("handleRunningRollout called for rollout {}", rollout.getId());
 
-        if (rollout.isDynamic()) {
-            if (fillDynamicRolloutGroupsWithTargets(rollout)) {
-                log.debug("Dynamic group created for rollout {}", rollout.getId());
-                return;
-            }
+        if (rollout.isDynamic() && fillDynamicRolloutGroupsWithTargets(rollout)) {
+            log.debug("Dynamic group created for rollout {}", rollout.getId());
+            return;
         }
 
-        final List<JpaRolloutGroup> rolloutGroupsRunning =
-                rollout.getRolloutGroups().stream()
+        final List<JpaRolloutGroup> runningGroups = rollout.getRolloutGroups().stream()
                         .filter(group -> group.getStatus() == RolloutGroupStatus.RUNNING)
                         .map(JpaRolloutGroup.class::cast)
                         .toList();
 
-        if (rolloutGroupsRunning.isEmpty()) {
-            // no running rollouts, probably there was an error
-            // somewhere at the latest group. And the latest group has
-            // been switched from running into error state. So we need
-            // to find the latest group which
+        if (runningGroups.isEmpty()) {
+            // no running rollouts, probably there was an error somewhere at the latest group. And the latest group has
+            // been switched from running into error state. So we need to find the latest group which
             executeLatestRolloutGroup(rollout);
         } else {
-            log.debug("Rollout {} has {} running groups", rollout.getId(), rolloutGroupsRunning.size());
-            executeRolloutGroups(rollout, rolloutGroupsRunning, rollout.getRolloutGroups().get(rollout.getRolloutGroups().size() - 1));
+            log.debug("Rollout {} has {} running groups", rollout.getId(), runningGroups.size());
+            executeRunningGroups(rollout, runningGroups, rollout.getRolloutGroups().get(rollout.getRolloutGroups().size() - 1));
         }
 
         if (isRolloutComplete(rollout)) {
@@ -369,7 +369,7 @@ public class JpaRolloutExecutor implements RolloutExecutor {
     }
 
     private void hardDeleteRollout(final JpaRollout rollout) {
-        sendRolloutGroupDeletedEvents(rollout);
+//        sendRolloutGroupDeletedEvents(rollout);
         rolloutRepository.delete(rollout);
     }
 
@@ -378,9 +378,9 @@ public class JpaRolloutExecutor implements RolloutExecutor {
 
         if (hasScheduledActions) {
             try {
-                final Iterable<JpaAction> iterable = scheduledActions::iterator;
-                final List<Long> actionIds = StreamSupport.stream(iterable.spliterator(), false).map(Action::getId)
-                        .collect(Collectors.toList());
+                final List<Long> actionIds = StreamSupport.stream(scheduledActions.spliterator(), false)
+                        .map(Action::getId)
+                        .toList();
                 actionRepository.deleteByIdIn(actionIds);
                 afterCommit.afterCommit(() -> eventPublisherHolder.getEventPublisher()
                         .publishEvent(new RolloutUpdatedEvent(rollout, eventPublisherHolder.getApplicationId())));
@@ -394,13 +394,13 @@ public class JpaRolloutExecutor implements RolloutExecutor {
         return actionRepository.findByRolloutIdAndStatus(PageRequest.of(0, TRANSACTION_ACTIONS), rollout.getId(),
                 Status.SCHEDULED);
     }
-
-    private void sendRolloutGroupDeletedEvents(final JpaRollout rollout) {
-        final List<Long> groupIds = rollout.getRolloutGroups().stream().map(RolloutGroup::getId).toList();
-        afterCommit.afterCommit(() -> groupIds.forEach(rolloutGroupId -> eventPublisherHolder.getEventPublisher()
-                .publishEvent(new RolloutGroupDeletedEvent(tenantAware.getCurrentTenant(), rolloutGroupId,
-                        JpaRolloutGroup.class, eventPublisherHolder.getApplicationId()))));
-    }
+//
+//    private void sendRolloutGroupDeletedEvents(final JpaRollout rollout) {
+//        final List<Long> groupIds = rollout.getRolloutGroups().stream().map(RolloutGroup::getId).toList();
+//        afterCommit.afterCommit(() -> groupIds.forEach(rolloutGroupId -> eventPublisherHolder.getEventPublisher()
+//                .publishEvent(new RolloutGroupDeletedEvent(tenantAware.getCurrentTenant(), rolloutGroupId,
+//                        JpaRolloutGroup.class, eventPublisherHolder.getApplicationId()))));
+//    }
 
     private boolean isRolloutComplete(final JpaRollout rollout) {
         // ensure that changes in the same transaction count
@@ -410,9 +410,7 @@ public class JpaRolloutExecutor implements RolloutExecutor {
         return groupsActiveLeft == 0;
     }
 
-    private static final Comparator<RolloutGroup> DESC_COMP = Comparator.comparingLong(RolloutGroup::getId).reversed();
     private void executeLatestRolloutGroup(final JpaRollout rollout) {
-        // was - rolloutGroupRepository.findByRolloutAndStatusNotOrderByIdDesc(rollout, RolloutGroupStatus.SCHEDULED);
         final List<JpaRolloutGroup> latestRolloutGroup = rollout.getRolloutGroups().stream()
                 .filter(group -> group.getStatus() != RolloutGroupStatus.SCHEDULED)
                 .sorted(DESC_COMP)
@@ -426,12 +424,12 @@ public class JpaRolloutExecutor implements RolloutExecutor {
 
     // fakes getTotalTargets count to match expected for the last dynamic group
     // so the evaluation to use total targets to properly
-    private RolloutGroup evalProxy(final RolloutGroup group, final List<JpaRolloutGroup> rolloutGroups) {
+    private RolloutGroup evalProxy(final RolloutGroup group) {
         if (group.isDynamic()) {
-            final int expected = Math.max((int)group.getTargetPercentage(), 1);
+            final int expected = Math.max((int) group.getTargetPercentage(), 1);
             return (RolloutGroup) Proxy.newProxyInstance(
                     RolloutGroup.class.getClassLoader(),
-                    new Class<?>[] {RolloutGroup.class},
+                    new Class<?>[] { RolloutGroup.class },
                     (proxy, method, args) -> {
                         if ("getTotalTargets".equals(method.getName())) {
                             return expected;
@@ -448,26 +446,24 @@ public class JpaRolloutExecutor implements RolloutExecutor {
         }
     }
 
-    private void executeRolloutGroups(final JpaRollout rollout, final List<JpaRolloutGroup> rolloutGroups, final RolloutGroup lastRolloutGroup) {
-        for (final JpaRolloutGroup rolloutGroup : rolloutGroups) {
+    private void executeRunningGroups(final JpaRollout rollout, final List<JpaRolloutGroup> runningGroups, final RolloutGroup lastGroup) {
+        for (final JpaRolloutGroup rolloutGroup : runningGroups) {
             final long targetCount = countTargetsFrom(rolloutGroup);
             if (rolloutGroup.getTotalTargets() != targetCount) {
                 updateTotalTargetCount(rolloutGroup, targetCount);
             }
 
-            final RolloutGroup evalProxy = rolloutGroup == rolloutGroups.get(rolloutGroups.size() - 1) ?
-                    evalProxy(rolloutGroup, rolloutGroups) : rolloutGroup;
-            // error state check, do we need to stop the whole
-            // rollout because of error?
+            final RolloutGroup evalProxy = rolloutGroup == runningGroups.get(runningGroups.size() - 1) ?
+                    evalProxy(rolloutGroup) : rolloutGroup;
+            // error state check, do we need to stop the whole rollout because of error?
             final boolean isError = checkErrorState(rollout, evalProxy);
             if (isError) {
                 log.info("Rollout {} {} has error, calling error action", rollout.getName(), rollout.getId());
                 callErrorAction(rollout, rolloutGroup);
             } else {
-                // not in error so check finished state, do we need to
-                // start the next group?
+                // not in error so check finished state, do we need to start the next group?
                 checkSuccessCondition(rollout, rolloutGroup, evalProxy, rolloutGroup.getSuccessCondition());
-                if (!(rolloutGroup == lastRolloutGroup && rolloutGroup.isDynamic()) && isRolloutGroupComplete(rollout, rolloutGroup)) {
+                if (!(rolloutGroup == lastGroup && rolloutGroup.isDynamic()) && isRolloutGroupComplete(rollout, rolloutGroup)) {
                     rolloutGroup.setStatus(RolloutGroupStatus.FINISHED);
                     rolloutGroupRepository.save(rolloutGroup);
                 }
@@ -476,9 +472,8 @@ public class JpaRolloutExecutor implements RolloutExecutor {
     }
 
     private void updateTotalTargetCount(final JpaRolloutGroup rolloutGroup, final long countTargetsOfRolloutGroup) {
-        final JpaRollout jpaRollout = (JpaRollout) rolloutGroup.getRollout();
-        final long updatedTargetCount = jpaRollout.getTotalTargets()
-                - (rolloutGroup.getTotalTargets() - countTargetsOfRolloutGroup);
+        final JpaRollout jpaRollout = rolloutGroup.getRollout();
+        final long updatedTargetCount = jpaRollout.getTotalTargets() - (rolloutGroup.getTotalTargets() - countTargetsOfRolloutGroup);
         jpaRollout.setTotalTargets(updatedTargetCount);
         rolloutGroup.setTotalTargets((int) countTargetsOfRolloutGroup);
         rolloutRepository.save(jpaRollout);
@@ -528,7 +523,7 @@ public class JpaRolloutExecutor implements RolloutExecutor {
         }
     }
 
-    private boolean checkSuccessCondition(final Rollout rollout, final RolloutGroup rolloutGroup, final RolloutGroup evalProxy,
+    private void checkSuccessCondition(final Rollout rollout, final RolloutGroup rolloutGroup, final RolloutGroup evalProxy,
             final RolloutGroupSuccessCondition successCondition) {
         log.trace("Checking finish condition {} on rolloutgroup {}", successCondition, rolloutGroup);
         try {
@@ -540,11 +535,9 @@ public class JpaRolloutExecutor implements RolloutExecutor {
             } else {
                 log.debug("Rolloutgroup {} is still running", rolloutGroup);
             }
-            return isFinished;
         } catch (final EvaluatorNotConfiguredException e) {
             log.error("Something bad happened when accessing the finish condition or success action bean {}",
                     successCondition.name(), e);
-            return false;
         }
     }
 
@@ -552,60 +545,56 @@ public class JpaRolloutExecutor implements RolloutExecutor {
         evaluationManager.getSuccessActionEvaluator(rolloutGroup.getSuccessAction()).exec(rollout, rolloutGroup);
     }
 
-    private void startFirstRolloutGroup(final Rollout rollout) {
+    private void startFirstRolloutGroup(final JpaRollout rollout) {
         log.debug("startFirstRolloutGroup called for rollout {}", rollout.getId());
         RolloutHelper.verifyRolloutInStatus(rollout, RolloutStatus.STARTING);
-        final JpaRollout jpaRollout = (JpaRollout) rollout;
 
-        final List<JpaRolloutGroup> rolloutGroups = rolloutGroupRepository.findByRolloutOrderByIdAsc(jpaRollout);
+        final List<JpaRolloutGroup> rolloutGroups = rolloutGroupRepository.findByRolloutOrderByIdAsc(rollout);
         final JpaRolloutGroup rolloutGroup = rolloutGroups.get(0);
         if (rolloutGroup.getParent() != null) {
-            throw new RolloutIllegalStateException("First Group is not the first group.");
+            throw new RolloutIllegalStateException("First found group is not the first group (has a parent).");
         }
 
-        deploymentManagement.startScheduledActionsByRolloutGroupParent(rollout.getId(),
-                rollout.getDistributionSet().getId(), null);
+        deploymentManagement.startScheduledActionsByRolloutGroupParent(
+                rollout.getId(), rollout.getDistributionSet().getId(), null);
 
         rolloutGroup.setStatus(RolloutGroupStatus.RUNNING);
         rolloutGroupRepository.save(rolloutGroup);
-
-        jpaRollout.setStatus(RolloutStatus.RUNNING);
-        jpaRollout.setLastCheck(0);
-        rolloutRepository.save(jpaRollout);
     }
 
     private boolean ensureAllGroupsAreScheduled(final Rollout rollout) {
-        final JpaRollout jpaRollout = (JpaRollout) rollout;
+        final List<JpaRolloutGroup> groupsToBeScheduled = rolloutGroupRepository.findByRolloutAndStatus(rollout, RolloutGroupStatus.READY);
+        if (groupsToBeScheduled.isEmpty()) {
+            return true;
+        }
 
-        final List<JpaRolloutGroup> groupsToBeScheduled = rolloutGroupRepository.findByRolloutAndStatus(rollout,
-                RolloutGroupStatus.READY);
-        final long scheduledGroups = groupsToBeScheduled.stream()
-                .filter(group -> scheduleRolloutGroup(jpaRollout, group)).count();
-
+        final long scheduledGroups = groupsToBeScheduled.stream().filter(group -> scheduleRolloutGroup((JpaRollout) rollout, group)).count();
+        entityManager.flush(); // flush groups so scheduled group to start to have scheduled event
         return scheduledGroups == groupsToBeScheduled.size();
     }
 
-    private RolloutGroup fillRolloutGroupWithTargets(final JpaRollout rollout, final JpaRolloutGroup group,
-            final List<RolloutGroup> rolloutGroups) {
+    private JpaRolloutGroup fillRolloutGroupWithTargets(
+            final JpaRollout rollout, final JpaRolloutGroup group, final List<RolloutGroup> rolloutGroups) {
+        // TODO - is that needed? in execute already has been checked that it is in CREATING
+        // if it has been paused/deleted meanwhile - no problem, anyway - couldn't be prevented race condition
         RolloutHelper.verifyRolloutInStatus(rollout, RolloutStatus.CREATING);
 
-        final String groupTargetFilter = RolloutHelper.getGroupTargetFilter(
-                RolloutHelper.getTargetFilterQuery(rollout), group);
+        final String groupTargetFilter = RolloutHelper.getGroupTargetFilter(RolloutHelper.getTargetFilterQuery(rollout), group);
 
-        final List<Long> readyGroups = RolloutHelper.getGroupsByStatusIncludingGroup(rollout.getRolloutGroups(),
-                RolloutGroupStatus.READY, group);
+        final List<Long> readyGroups = RolloutHelper.getGroupsByStatusIncludingGroup(
+                rollout.getRolloutGroups(), RolloutGroupStatus.READY, group);
 
-        long targetsInGroupFilter;
-        if (!RolloutHelper.isRolloutRetried(rollout.getTargetFilterQuery())) {
+        final long targetsInGroupFilter;
+        if (!RolloutHelper.isRolloutRetried(rollout.getTargetFilterQuery())) { // default case
             targetsInGroupFilter = DeploymentHelper.runInNewTransaction(txManager,
-                "countAllTargetsByTargetFilterQueryAndNotInRolloutGroups",
-                count -> targetManagement.countByRsqlAndNotInRolloutGroupsAndCompatibleAndUpdatable(readyGroups,
-                        groupTargetFilter, rollout.getDistributionSet().getType()));
-        } else {
+                    "countByRsqlAndNotInRolloutGroupsAndCompatibleAndUpdatable",
+                    count -> targetManagement.countByRsqlAndNotInRolloutGroupsAndCompatibleAndUpdatable(
+                            groupTargetFilter, readyGroups, rollout.getDistributionSet().getType()));
+        } else { // if it is a rollout retry
             targetsInGroupFilter = DeploymentHelper.runInNewTransaction(txManager,
-                "countByFailedRolloutAndNotInRolloutGroupsAndCompatible",
-                count -> targetManagement.countByFailedRolloutAndNotInRolloutGroups(readyGroups,
-                    RolloutHelper.getIdFromRetriedTargetFilter(rollout.getTargetFilterQuery())));
+                    "countByFailedRolloutAndNotInRolloutGroupsAndCompatible",
+                    count -> targetManagement.countByFailedRolloutAndNotInRolloutGroups(
+                            RolloutHelper.getIdFromRetriedTargetFilter(rollout.getTargetFilterQuery()), readyGroups));
         }
 
         final double percentFromTheRest;
@@ -620,7 +609,7 @@ public class JpaRolloutExecutor implements RolloutExecutor {
                 "countRolloutTargetGroupByRolloutGroup",
                 count -> rolloutTargetGroupRepository.countByRolloutGroup(group));
 
-        // Switch the Group status to READY, when there are enough Targets in the Group
+        // if there are enough Targets in the group, switch the group status to READY,
         if (currentlyInGroup >= expectedInGroup) {
             group.setStatus(RolloutGroupStatus.READY);
             return rolloutGroupRepository.save(group);
@@ -628,12 +617,10 @@ public class JpaRolloutExecutor implements RolloutExecutor {
 
         try {
             long targetsLeftToAdd = expectedInGroup - currentlyInGroup;
-
             do {
-                // Add up to TRANSACTION_TARGETS of the left targets
-                // In case a TransactionException is thrown this loop aborts
-                final long assigned = assignTargetsToGroupInNewTransaction(rollout, group, groupTargetFilter,
-                        Math.min(TRANSACTION_TARGETS, targetsLeftToAdd));
+                // Add up to TRANSACTION_TARGETS of the left targets. In case a TransactionException is thrown this loop aborts
+                final long assigned = assignTargetsToGroupInNewTransaction(
+                        rollout, group, groupTargetFilter, Math.min(TRANSACTION_TARGETS, targetsLeftToAdd));
                 if (assigned == 0) {
                     break; // percent > 100 or some could have disappeared
                 } else {
@@ -642,24 +629,23 @@ public class JpaRolloutExecutor implements RolloutExecutor {
             } while (targetsLeftToAdd > 0);
 
             group.setStatus(RolloutGroupStatus.READY);
-            group.setTotalTargets(
-                    DeploymentHelper.runInNewTransaction(txManager, "countRolloutTargetGroupByRolloutGroup",
+            group.setTotalTargets(DeploymentHelper.runInNewTransaction(txManager,
+                    "countRolloutTargetGroupByRolloutGroup",
                             count -> rolloutTargetGroupRepository.countByRolloutGroup(group)).intValue());
             return rolloutGroupRepository.save(group);
-
         } catch (final TransactionException e) {
-            log.warn("Transaction assigning Targets to RolloutGroup failed", e);
+            log.warn(TRANSACTION_ASSIGNING_TARGETS_TO_ROLLOUT_GROUP_FAILED, e);
             return group;
         }
     }
 
-    private Long assignTargetsToGroupInNewTransaction(final JpaRollout rollout, final RolloutGroup group,
-            final String targetFilter, final long limit) {
+    private Long assignTargetsToGroupInNewTransaction(
+            final JpaRollout rollout, final RolloutGroup group, final String targetFilter, final long limit) {
         return DeploymentHelper.runInNewTransaction(txManager, "assignTargetsToRolloutGroup", status -> {
             final PageRequest pageRequest = PageRequest.of(0, Math.toIntExact(limit));
-            final List<Long> readyGroups = RolloutHelper.getGroupsByStatusIncludingGroup(rollout.getRolloutGroups(),
-                    RolloutGroupStatus.READY, group);
-            Slice<Target> targets;
+            final List<Long> readyGroups = RolloutHelper.getGroupsByStatusIncludingGroup(
+                    rollout.getRolloutGroups(), RolloutGroupStatus.READY, group);
+            final Slice<Target> targets;
             if (!RolloutHelper.isRolloutRetried(rollout.getTargetFilterQuery())) {
                 targets = targetManagement.findByTargetFilterQueryAndNotInRolloutGroupsAndCompatibleAndUpdatable(
                         pageRequest, readyGroups, targetFilter, rollout.getDistributionSet().getType());
@@ -668,7 +654,7 @@ public class JpaRolloutExecutor implements RolloutExecutor {
                         pageRequest, readyGroups, RolloutHelper.getIdFromRetriedTargetFilter(rollout.getTargetFilterQuery()));
             }
 
-            createAssignmentOfTargetsToGroup(targets, group);
+            rolloutTargetGroupRepository.saveAll(targets.stream().map(target -> new RolloutTargetGroup(group, target)).toList());
 
             return Long.valueOf(targets.getNumberOfElements());
         });
@@ -676,30 +662,28 @@ public class JpaRolloutExecutor implements RolloutExecutor {
 
     // return if group change is made
     private boolean fillDynamicRolloutGroupsWithTargets(final JpaRollout rollout) {
-        RolloutHelper.verifyRolloutInStatus(rollout, RolloutStatus.RUNNING);
-        final List<RolloutGroup> rolloutGroups = rollout.getRolloutGroups();
-
-        final JpaRolloutGroup group = (JpaRolloutGroup)rolloutGroups.get(rolloutGroups.size() - 1);
-
-        if (group.getStatus() == RolloutGroupStatus.FINISHED) {
-            createDynamicGroup(rollout, group, rolloutGroups.size(), RolloutGroupStatus.RUNNING);
-            return true;
-        } else if (group.getStatus() != RolloutGroupStatus.RUNNING) {
+        final AtomicLong lastFill = lastDynamicGroupFill.computeIfAbsent(rollout.getId(), id -> new AtomicLong(0));
+        final long now = System.currentTimeMillis();
+        if (now - lastFill.get() < repositoryProperties.getDynamicRolloutsMinInvolvePeriodMS()) {
+            // too early to make another dynamic involvement attempt
             return false;
         }
 
-        // expected as last full group
-        final long expectedInGroup = Math.max((int)group.getTargetPercentage(), 1);
+        RolloutHelper.verifyRolloutInStatus(rollout, RolloutStatus.RUNNING);
+        final List<RolloutGroup> rolloutGroups = rollout.getRolloutGroups();
 
+        final JpaRolloutGroup group = (JpaRolloutGroup) rolloutGroups.get(rolloutGroups.size() - 1);
+
+        final long expectedInGroup = Math.max((int) group.getTargetPercentage(), 1);
         final long currentlyInGroup = group.getTotalTargets();
-        if (currentlyInGroup >= expectedInGroup) {
-            // the last one is filled. create new and start filling it
+        if (currentlyInGroup >= expectedInGroup || group.getStatus() == RolloutGroupStatus.FINISHED) {
+            // the last one is full. create new and start filling it on the next iteration
             createDynamicGroup(rollout, group, rolloutGroups.size(), RolloutGroupStatus.SCHEDULED);
+            // don't update lastFill - want to run again next time to start filling in
             return true;
         }
 
-        // there are more to be filled for that group
-        // do this until there are more matching
+        // there are more to be filled for the last group do this until there are more matching
         try {
             long targetsLeftToAdd = expectedInGroup - currentlyInGroup;
             final String groupTargetFilter = RolloutHelper.getGroupTargetFilter(
@@ -711,7 +695,7 @@ public class JpaRolloutExecutor implements RolloutExecutor {
             do {
                 // Add up to TRANSACTION_TARGETS actions of the left targets
                 // In case a TransactionException is thrown this loop aborts
-                final long createdActions = createActionsForDynamicGroupInNewTransaction(rollout, group, groupTargetFilter,
+                final int createdActions = createActionsForDynamicGroupInNewTransaction(rollout, group, groupTargetFilter,
                         Math.min(TRANSACTION_TARGETS, targetsLeftToAdd));
                 if (createdActions == 0) {
                     break; // no more to assign
@@ -724,23 +708,23 @@ public class JpaRolloutExecutor implements RolloutExecutor {
             if (newActions > 0) {
                 updateTotalTargetCount(group, group.getTotalTargets() + newActions);
 
-                if (targetsLeftToAdd == 0) {
-                    // this is filled create a new one in scheduled state
-                    createDynamicGroup(rollout, group, rolloutGroups.size(), RolloutGroupStatus.SCHEDULED);
-                    return true;
-                }
-
                 // TODO - try to return false and proceed with handleRunningRollout
                 // the problem is that OptimisticLockException is thrown in that case
+
+                // don't update lastFill - want to run again next time in case there are more
                 return true;
             }
         } catch (final TransactionException e) {
-            log.warn("Transaction assigning Targets to RolloutGroup failed", e);
+            log.warn(TRANSACTION_ASSIGNING_TARGETS_TO_ROLLOUT_GROUP_FAILED, e);
         }
+
+        // set to skip for some time
+        lastFill.set(now);
         return false;
     }
 
-    private void createDynamicGroup(final JpaRollout rollout, final RolloutGroup lastGroup, final int groupCount, final RolloutGroupStatus status) {
+    private void createDynamicGroup(final JpaRollout rollout, final JpaRolloutGroup lastGroup, final int groupCount,
+            final RolloutGroupStatus status) {
         try {
             RolloutHelper.verifyRolloutGroupAmount(groupCount + 1, quotaManagement);
         } catch (final AssignmentQuotaExceededException e) {
@@ -751,9 +735,11 @@ public class JpaRolloutExecutor implements RolloutExecutor {
             }
             return;
         }
+
         final JpaRolloutGroup group = new JpaRolloutGroup();
         final String lastGroupWithoutSuffix = "group-" + groupCount;
-        final String suffix = lastGroup.getName().startsWith(lastGroupWithoutSuffix) ? lastGroup.getName().substring(lastGroupWithoutSuffix.length()) : "";
+        final String suffix = lastGroup.getName().startsWith(lastGroupWithoutSuffix) ? lastGroup.getName()
+                .substring(lastGroupWithoutSuffix.length()) : "";
         final String nameAndDesc = "group-" + (groupCount + 1) + suffix;
         group.setName(nameAndDesc);
         group.setDescription(nameAndDesc);
@@ -781,7 +767,7 @@ public class JpaRolloutExecutor implements RolloutExecutor {
         ((JpaRolloutManagement) rolloutManagement).publishRolloutGroupCreatedEventAfterCommit(savedGroup, rollout);
     }
 
-    private Long createActionsForDynamicGroupInNewTransaction(final JpaRollout rollout, final RolloutGroup group,
+    private int createActionsForDynamicGroupInNewTransaction(final JpaRollout rollout, final RolloutGroup group,
             final String targetFilter, final long limit) {
         return DeploymentHelper.runInNewTransaction(txManager, "createActionsForRolloutDynamicGroup", status -> {
             final PageRequest pageRequest = PageRequest.of(0, Math.toIntExact(limit));
@@ -791,14 +777,19 @@ public class JpaRolloutExecutor implements RolloutExecutor {
                     rolloutGroupRepository.findByRolloutOrderByIdAsc(rollout).get(0).getId(),
                     targetFilter, rollout.getDistributionSet().getType());
 
-            if (targets.getNumberOfElements() > 0) {
-                final DistributionSet distributionSet = rollout.getDistributionSet();
-                final ActionType actionType = rollout.getActionType();
-                final long forceTime = rollout.getForcedTime();
-                createActions(targets.getContent(), distributionSet, actionType, forceTime, rollout, group);
+            if (targets.getNumberOfElements() == 0) {
+                return 0;
             }
 
-            return Long.valueOf(targets.getNumberOfElements());
+            final DistributionSet distributionSet = rollout.getDistributionSet();
+            final ActionType actionType = rollout.getActionType();
+            final long forceTime = rollout.getForcedTime();
+            final List<Action> newActions = createActions(targets.getContent(), distributionSet, actionType, forceTime, rollout, group);
+            if (!newActions.isEmpty() && group.getStatus() == RolloutGroupStatus.RUNNING) {
+                deploymentManagement.startScheduledActions(newActions);
+            }
+
+            return newActions.size();
         });
     }
 
@@ -830,25 +821,25 @@ public class JpaRolloutExecutor implements RolloutExecutor {
         try {
             long actionsCreated;
             do {
-                actionsCreated = createActionsForTargetsInNewTransaction(rollout, group, TRANSACTION_TARGETS);
+                actionsCreated = createActionsForTargetsInNewTransaction(rollout, group);
                 totalActionsCreated += actionsCreated;
             } while (actionsCreated > 0);
 
         } catch (final TransactionException e) {
-            log.warn("Transaction assigning Targets to RolloutGroup failed", e);
+            log.warn(TRANSACTION_ASSIGNING_TARGETS_TO_ROLLOUT_GROUP_FAILED, e);
             return 0;
         }
         return totalActionsCreated;
     }
 
-    private Long createActionsForTargetsInNewTransaction(
-            final Rollout rollout, final RolloutGroup group, final int limit) {
+    private Long createActionsForTargetsInNewTransaction(final Rollout rollout, final RolloutGroup group) {
         return DeploymentHelper.runInNewTransaction(txManager, "createActionsForTargets", status -> {
-            final Slice<Target> targets =
-                    targetManagement.findByInRolloutGroupWithoutAction(PageRequest.of(0, limit), group.getId());
+            final Slice<Target> targets = targetManagement.findByInRolloutGroupWithoutAction(
+                    PageRequest.of(0, JpaRolloutExecutor.TRANSACTION_TARGETS), group.getId());
 
             if (targets.getNumberOfElements() > 0) {
                 final DistributionSet distributionSet = rollout.getDistributionSet();
+                entityManager.detach(distributionSet); // LAZY_LOAD - if lazy loaded with different session
                 final ActionType actionType = rollout.getActionType();
                 final long forceTime = rollout.getForcedTime();
                 createActions(targets.getContent(), distributionSet, actionType, forceTime, rollout, group);
@@ -858,50 +849,44 @@ public class JpaRolloutExecutor implements RolloutExecutor {
         });
     }
 
-    private void createAssignmentOfTargetsToGroup(final Slice<Target> targets, final RolloutGroup group) {
-        targets.forEach(target -> rolloutTargetGroupRepository.save(new RolloutTargetGroup(group, target)));
-    }
-
     /**
-     * Creates an action entry into the action repository. In case of existing
-     * scheduled actions the scheduled actions gets canceled. A scheduled action
-     * is created in-active for static and running for dynamic groups.
+     * Creates an action entry into the action repository. In case of existing scheduled actions the scheduled actions gets canceled.
+     * A scheduled action is created in-active for static and running for dynamic groups.
      */
-    private void createActions(final Collection<Target> targets, final DistributionSet distributionSet,
-            final ActionType actionType, final Long forcedTime, final Rollout rollout,
-            final RolloutGroup rolloutGroup) {
-        // cancel all current scheduled actions for this target. E.g. an action
-        // is already scheduled and a next action is created then cancel the
-        // current scheduled action to cancel. E.g. a new scheduled action is
-        // created.
-        final List<Long> targetIds = targets.stream().map(Target::getId).collect(Collectors.toList());
+    private List<Action> createActions(final Collection<Target> targets, final DistributionSet distributionSet,
+            final ActionType actionType, final Long forcedTime, final Rollout rollout, final RolloutGroup rolloutGroup) {
+        // cancel all current scheduled actions for this target. E.g. an action is already scheduled and a next action is created
+        // then cancel the current scheduled action to cancel. E.g. a new scheduled action is created.
+        final List<Long> targetIds = targets.stream().map(Target::getId).toList();
         deploymentManagement.cancelInactiveScheduledActionsForTargets(targetIds);
-        targets.forEach(target -> {
-            assertActionsPerTargetQuota(target, 1);
+        return targets.stream()
+                .map(target -> {
+                    assertActionsPerTargetQuota(target, 1);
 
-            final JpaAction action = new JpaAction();
-            action.setTarget(target);
-            action.setActive(rolloutGroup.isDynamic());
-            action.setDistributionSet(distributionSet);
-            action.setActionType(actionType);
-            action.setForcedTime(forcedTime);
-            action.setStatus(rolloutGroup.isDynamic() ? Status.RUNNING : Status.SCHEDULED);
-            action.setRollout(rollout);
-            action.setRolloutGroup(rolloutGroup);
-            action.setInitiatedBy(rollout.getCreatedBy());
-            rollout.getWeight().ifPresent(action::setWeight);
-            actionRepository.save(action);
-        });
+                    final JpaAction action = new JpaAction();
+                    action.setTarget(target);
+                    action.setActive(false);
+                    action.setDistributionSet(distributionSet);
+                    action.setActionType(actionType);
+                    action.setForcedTime(forcedTime);
+                    action.setStatus(Status.SCHEDULED);
+                    action.setRollout(rollout);
+                    action.setRolloutGroup(rolloutGroup);
+                    action.setInitiatedBy(rollout.getCreatedBy());
+                    rollout.getWeight().ifPresent(action::setWeight);
+                    actionRepository.save(action);
+
+                    return action;
+                })
+                .map(Action.class::cast)
+                .toList();
     }
 
     /**
-     * Enforces the quota defining the maximum number of {@link Action}s per
-     * {@link Target}.
+     * Enforces the quota defining the maximum number of {@link Action}s per {@link Target}.
      *
-     * @param target
-     *            The target
-     * @param requested
-     *            number of actions to check
+     * @param target the target
+     * @param requested number of actions to check
      */
     private void assertActionsPerTargetQuota(final Target target, final int requested) {
         final int quota = quotaManagement.getMaxActionsPerTarget();
