@@ -26,7 +26,6 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.function.Function;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.Query;
@@ -53,18 +52,19 @@ import org.eclipse.hawkbit.repository.exception.IncompatibleTargetTypeException;
 import org.eclipse.hawkbit.repository.exception.IncompleteDistributionSetException;
 import org.eclipse.hawkbit.repository.exception.InsufficientPermissionException;
 import org.eclipse.hawkbit.repository.exception.MultiAssignmentIsNotEnabledException;
+import org.eclipse.hawkbit.repository.jpa.Jpa;
 import org.eclipse.hawkbit.repository.jpa.JpaManagementHelper;
 import org.eclipse.hawkbit.repository.jpa.acm.AccessController;
 import org.eclipse.hawkbit.repository.jpa.configuration.Constants;
 import org.eclipse.hawkbit.repository.jpa.executor.AfterTransactionCommitExecutor;
+import org.eclipse.hawkbit.repository.jpa.model.AbstractJpaBaseEntity_;
 import org.eclipse.hawkbit.repository.jpa.model.JpaAction;
 import org.eclipse.hawkbit.repository.jpa.model.JpaActionStatus;
-import org.eclipse.hawkbit.repository.jpa.model.JpaActionStatus_;
 import org.eclipse.hawkbit.repository.jpa.model.JpaDistributionSet;
 import org.eclipse.hawkbit.repository.jpa.model.JpaTarget;
+import org.eclipse.hawkbit.repository.jpa.model.JpaTarget_;
 import org.eclipse.hawkbit.repository.jpa.repository.ActionRepository;
 import org.eclipse.hawkbit.repository.jpa.repository.ActionStatusRepository;
-import org.eclipse.hawkbit.repository.jpa.repository.DistributionSetRepository;
 import org.eclipse.hawkbit.repository.jpa.repository.TargetRepository;
 import org.eclipse.hawkbit.repository.jpa.rsql.RSQLUtility;
 import org.eclipse.hawkbit.repository.jpa.specifications.ActionSpecifications;
@@ -123,19 +123,28 @@ public class JpaDeploymentManagement extends JpaActionManagement implements Depl
      * Maximum amount of Actions that are started at once.
      */
     private static final int ACTION_PAGE_LIMIT = 1000;
-
-    private static final String QUERY_DELETE_ACTIONS_BY_STATE_AND_LAST_MODIFIED_DEFAULT = "DELETE FROM sp_action WHERE tenant=#tenant AND status IN (%s) AND last_modified_at<#last_modified_at LIMIT "
-            + ACTION_PAGE_LIMIT;
-
+    private static final String QUERY_DELETE_ACTIONS_BY_STATE_AND_LAST_MODIFIED_DEFAULT =
+            "DELETE FROM sp_action " +
+                    "WHERE tenant=" + Jpa.nativeQueryParamPrefix() + "tenant" +
+                    " AND status IN (%s)" +
+                    " AND last_modified_at<" + Jpa.nativeQueryParamPrefix() + "last_modified_at LIMIT " + ACTION_PAGE_LIMIT;
     private static final EnumMap<Database, String> QUERY_DELETE_ACTIONS_BY_STATE_AND_LAST_MODIFIED;
 
     static {
         QUERY_DELETE_ACTIONS_BY_STATE_AND_LAST_MODIFIED = new EnumMap<>(Database.class);
-        QUERY_DELETE_ACTIONS_BY_STATE_AND_LAST_MODIFIED.put(Database.SQL_SERVER, "DELETE TOP (" + ACTION_PAGE_LIMIT
-                + ") FROM sp_action WHERE tenant=#tenant AND status IN (%s) AND last_modified_at<#last_modified_at ");
-        QUERY_DELETE_ACTIONS_BY_STATE_AND_LAST_MODIFIED.put(Database.POSTGRESQL,
-                "DELETE FROM sp_action WHERE id IN (SELECT id FROM sp_action WHERE tenant=#tenant AND status IN (%s) AND last_modified_at<#last_modified_at LIMIT "
-                        + ACTION_PAGE_LIMIT + ")");
+        QUERY_DELETE_ACTIONS_BY_STATE_AND_LAST_MODIFIED.put(
+                Database.SQL_SERVER,
+                "DELETE TOP (" + ACTION_PAGE_LIMIT + ") FROM sp_action " +
+                        "WHERE tenant=" + Jpa.nativeQueryParamPrefix() + "tenant" +
+                        " AND status IN (%s)" +
+                        " AND last_modified_at<" + Jpa.nativeQueryParamPrefix() + "last_modified_at ");
+        QUERY_DELETE_ACTIONS_BY_STATE_AND_LAST_MODIFIED.put(
+                Database.POSTGRESQL,
+                "DELETE FROM sp_action " +
+                        "WHERE id IN (SELECT id FROM sp_action " +
+                        "WHERE tenant=" + Jpa.nativeQueryParamPrefix() + "tenant" +
+                        " AND status IN (%s)" +
+                        " AND last_modified_at<" + Jpa.nativeQueryParamPrefix() + "last_modified_at LIMIT " + ACTION_PAGE_LIMIT + ")");
     }
 
     private final EntityManager entityManager;
@@ -153,7 +162,9 @@ public class JpaDeploymentManagement extends JpaActionManagement implements Depl
     private final Database database;
     private final RetryTemplate retryTemplate;
 
-    public JpaDeploymentManagement(final EntityManager entityManager, final ActionRepository actionRepository,
+    @SuppressWarnings("java:S107")
+    public JpaDeploymentManagement(
+            final EntityManager entityManager, final ActionRepository actionRepository,
             final DistributionSetManagement distributionSetManagement, final TargetRepository targetRepository,
             final ActionStatusRepository actionStatusRepository, final AuditorAware<String> auditorProvider,
             final EventPublisherHolder eventPublisherHolder, final AfterTransactionCommitExecutor afterCommit,
@@ -184,8 +195,26 @@ public class JpaDeploymentManagement extends JpaActionManagement implements Depl
 
     @Override
     @Transactional(isolation = Isolation.READ_COMMITTED)
+    public List<DistributionSetAssignmentResult> assignDistributionSets(final List<DeploymentRequest> deploymentRequests) {
+        return assignDistributionSets0(tenantAware.getCurrentUsername(), deploymentRequests, null);
+    }
+
+    @Override
+    @Transactional(isolation = Isolation.READ_COMMITTED)
+    public List<DistributionSetAssignmentResult> assignDistributionSets(
+            final String initiatedBy, final List<DeploymentRequest> deploymentRequests, final String actionMessage) {
+        return assignDistributionSets0(initiatedBy, deploymentRequests, actionMessage);
+    }
+
+    private List<DistributionSetAssignmentResult> assignDistributionSets0(
+            final String initiatedBy, final List<DeploymentRequest> deploymentRequests, final String actionMessage) {
+        WeightValidationHelper.usingContext(systemSecurityContext, tenantConfigurationManagement).validate(deploymentRequests);
+        return assignDistributionSets(initiatedBy, deploymentRequests, actionMessage, onlineDsAssignmentStrategy);
+    }
+
+    @Override
     public List<DistributionSetAssignmentResult> offlineAssignedDistributionSets(
-            final Collection<Entry<String, Long>> assignments) {
+            final Collection<Entry<String, Long>> assignments, final String initiatedBy) {
         final Collection<Entry<String, Long>> distinctAssignments = assignments.stream().distinct().toList();
         enforceMaxAssignmentsPerRequest(distinctAssignments.size());
 
@@ -200,29 +229,421 @@ public class JpaDeploymentManagement extends JpaActionManagement implements Depl
 
     @Override
     @Transactional(isolation = Isolation.READ_COMMITTED)
-    public List<DistributionSetAssignmentResult> assignDistributionSets(
-            final List<DeploymentRequest> deploymentRequests) {
-        return assignDistributionSets(tenantAware.getCurrentUsername(), deploymentRequests, null);
+    public List<DistributionSetAssignmentResult> offlineAssignedDistributionSets(final Collection<Entry<String, Long>> assignments) {
+        return offlineAssignedDistributionSets(assignments, tenantAware.getCurrentUsername());
     }
 
     @Override
     @Transactional(isolation = Isolation.READ_COMMITTED)
-    public List<DistributionSetAssignmentResult> assignDistributionSets(final String initiatedBy,
-            final List<DeploymentRequest> deploymentRequests, final String actionMessage) {
-        WeightValidationHelper.usingContext(systemSecurityContext, tenantConfigurationManagement)
-                .validate(deploymentRequests);
-        return assignDistributionSets(initiatedBy, deploymentRequests, actionMessage, onlineDsAssignmentStrategy);
+    @Retryable(retryFor = { ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX,
+            backoff = @Backoff(delay = Constants.TX_RT_DELAY))
+    public Action cancelAction(final long actionId) {
+        return cancelAction0(actionId);
     }
 
-    private List<DistributionSetAssignmentResult> assignDistributionSets(final String initiatedBy,
+    private Action cancelAction0(final long actionId) {
+        log.debug("cancelAction({})", actionId);
+
+        final JpaAction action = actionRepository.findById(actionId)
+                .orElseThrow(() -> new EntityNotFoundException(Action.class, actionId));
+
+        if (action.isCancelingOrCanceled()) {
+            throw new CancelActionNotAllowedException("Actions in canceling or canceled state cannot be canceled");
+        }
+
+        assertTargetUpdateAllowed(action);
+
+        if (action.isActive()) {
+            log.debug("action ({}) was still active. Change to {}.", action, Status.CANCELING);
+            action.setStatus(Status.CANCELING);
+
+            // document that the status has been retrieved
+            actionStatusRepository.save(new JpaActionStatus(action, Status.CANCELING, System.currentTimeMillis(),
+                    RepositoryConstants.SERVER_MESSAGE_PREFIX + "manual cancelation requested"));
+            final Action saveAction = actionRepository.save(action);
+
+            onlineDsAssignmentStrategy.cancelAssignment(action);
+
+            return saveAction;
+        } else {
+            throw new CancelActionNotAllowedException(action.getId() + " is not active and cannot be canceled");
+        }
+    }
+
+    @Override
+    public long countActionsByTarget(final String rsqlParam, final String controllerId) {
+        assertTargetReadAllowed(controllerId);
+
+        final List<Specification<JpaAction>> specList = Arrays.asList(
+                RSQLUtility.buildRsqlSpecification(rsqlParam, ActionFields.class, virtualPropertyReplacer, database),
+                ActionSpecifications.byTargetControllerId(controllerId));
+
+        return JpaManagementHelper.countBySpec(actionRepository, specList);
+    }
+
+    @Override
+    public long countActionsAll() {
+        return actionRepository.count();
+    }
+
+    @Override
+    public long countActions(final String rsqlParam) {
+        final List<Specification<JpaAction>> specList = List.of(
+                RSQLUtility.buildRsqlSpecification(rsqlParam, ActionFields.class, virtualPropertyReplacer, database));
+        return JpaManagementHelper.countBySpec(actionRepository, specList);
+    }
+
+    @Override
+    public long countActionsByTarget(final String controllerId) {
+        assertTargetReadAllowed(controllerId);
+        return actionRepository.countByTargetControllerId(controllerId);
+    }
+
+    @Override
+    public Optional<Action> findAction(final long actionId) {
+        return actionRepository.findById(actionId)
+                .filter(action -> targetRepository.exists(TargetSpecifications.hasId(action.getTarget().getId())))
+                .map(JpaAction.class::cast);
+    }
+
+    @Override
+    public Slice<Action> findActionsAll(final Pageable pageable) {
+        return JpaManagementHelper.findAllWithoutCountBySpec(actionRepository, pageable, null);
+    }
+
+    @Override
+    public Slice<Action> findActions(final String rsqlParam, final Pageable pageable) {
+        final List<Specification<JpaAction>> specList = List.of(
+                RSQLUtility.buildRsqlSpecification(rsqlParam, ActionFields.class, virtualPropertyReplacer, database));
+        return JpaManagementHelper.findAllWithoutCountBySpec(actionRepository, pageable, specList);
+    }
+
+    @Override
+    public Page<Action> findActionsByTarget(final String rsqlParam, final String controllerId,
+            final Pageable pageable) {
+        assertTargetReadAllowed(controllerId);
+
+        final List<Specification<JpaAction>> specList = Arrays.asList(
+                RSQLUtility.buildRsqlSpecification(rsqlParam, ActionFields.class, virtualPropertyReplacer, database),
+                ActionSpecifications.byTargetControllerId(controllerId));
+
+        return JpaManagementHelper.findAllWithCountBySpec(actionRepository, specList, pageable);
+    }
+
+    @Override
+    public Slice<Action> findActionsByTarget(final String controllerId, final Pageable pageable) {
+        assertTargetReadAllowed(controllerId);
+        return actionRepository.findAll(ActionSpecifications.byTargetControllerId(controllerId), pageable)
+                .map(Action.class::cast);
+    }
+
+    @Override
+    public Page<ActionStatus> findActionStatusByAction(final Pageable pageReq, final long actionId) {
+        assertActionExistsAndAccessible(actionId);
+
+        return actionStatusRepository.findByActionId(pageReq, actionId);
+    }
+
+    @Override
+    public long countActionStatusByAction(final long actionId) {
+        assertActionExistsAndAccessible(actionId);
+
+        return actionStatusRepository.countByActionId(actionId);
+    }
+
+    // action is already got and there are checked read permissions - do not check
+    // permissions
+    // and UI which is to be removed
+    @Override
+    public Page<String> findMessagesByActionStatusId(final Pageable pageable, final long actionStatusId) {
+        final CriteriaBuilder cb = entityManager.getCriteriaBuilder();
+
+        final CriteriaQuery<String> msgQuery = cb.createQuery(String.class);
+        final Root<JpaActionStatus> as = msgQuery.from(JpaActionStatus.class);
+        final ListJoin<JpaActionStatus, String> join = as.joinList("messages", JoinType.LEFT);
+        final CriteriaQuery<String> selMsgQuery = msgQuery.select(join);
+        selMsgQuery.where(cb.equal(as.get(AbstractJpaBaseEntity_.id), actionStatusId));
+
+        final List<String> result = new ArrayList<>(entityManager.createQuery(selMsgQuery)
+                .setFirstResult((int) pageable.getOffset()).setMaxResults(pageable.getPageSize()).getResultList());
+
+        return new PageImpl<>(result, pageable, result.size());
+    }
+
+    @Override
+    public Optional<Action> findActionWithDetails(final long actionId) {
+        return actionRepository.findWithDetailsById(actionId)
+                .filter(action -> targetRepository.exists(TargetSpecifications.hasId(action.getTarget().getId())));
+    }
+
+    @Override
+    public Page<Action> findActiveActionsByTarget(final Pageable pageable, final String controllerId) {
+        assertTargetReadAllowed(controllerId);
+        return actionRepository
+                .findAll(ActionSpecifications.byTargetControllerIdAndActive(controllerId, true), pageable)
+                .map(Action.class::cast);
+    }
+
+    @Override
+    public Page<Action> findInActiveActionsByTarget(final Pageable pageable, final String controllerId) {
+        assertTargetReadAllowed(controllerId);
+        return actionRepository
+                .findAll(ActionSpecifications.byTargetControllerIdAndActive(controllerId, false), pageable)
+                .map(Action.class::cast);
+    }
+
+    @Override
+    public List<Action> findActiveActionsWithHighestWeight(final String controllerId, final int maxActionCount) {
+        assertTargetReadAllowed(controllerId);
+        return findActiveActionsWithHighestWeightConsideringDefault(controllerId, maxActionCount);
+    }
+
+    @Override
+    @Transactional(isolation = Isolation.READ_COMMITTED)
+    @Retryable(retryFor = { ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX,
+            backoff = @Backoff(delay = Constants.TX_RT_DELAY))
+    public Action forceQuitAction(final long actionId) {
+        return forceQuitAction0(actionId);
+    }
+
+    private Action forceQuitAction0(final long actionId) {
+        final JpaAction action = actionRepository.findById(actionId)
+                .orElseThrow(() -> new EntityNotFoundException(Action.class, actionId));
+
+        if (!action.isCancelingOrCanceled()) {
+            throw new ForceQuitActionNotAllowedException(action.getId() + " is not canceled yet and cannot be force quit");
+        }
+
+        if (!action.isActive()) {
+            throw new ForceQuitActionNotAllowedException(action.getId() + " is not active and cannot be force quit");
+        }
+
+        assertTargetUpdateAllowed(action);
+
+        log.warn("action ({}) was still active and has been force quite.", action);
+
+        // document that the status has been retrieved
+        actionStatusRepository.save(new JpaActionStatus(action, Status.CANCELED, System.currentTimeMillis(),
+                RepositoryConstants.SERVER_MESSAGE_PREFIX + "A force quit has been performed."));
+
+        DeploymentHelper.successCancellation(action, actionRepository, targetRepository);
+
+        return actionRepository.save(action);
+    }
+
+    @Override
+    @Transactional
+    @Retryable(retryFor = { ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX,
+            backoff = @Backoff(delay = Constants.TX_RT_DELAY))
+    public Action forceTargetAction(final long actionId) {
+        final JpaAction action = actionRepository.findById(actionId).map(this::assertTargetUpdateAllowed)
+                .orElseThrow(() -> new EntityNotFoundException(Action.class, actionId));
+
+        if (!action.isForcedOrTimeForced()) {
+            action.setActionType(ActionType.FORCED);
+            return actionRepository.save(action);
+        }
+        return action;
+    }
+
+    @Override
+    @Transactional(isolation = Isolation.READ_COMMITTED)
+    @Retryable(retryFor = { ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX,
+            backoff = @Backoff(delay = Constants.TX_RT_DELAY))
+    public void cancelInactiveScheduledActionsForTargets(final List<Long> targetIds) {
+        if (!isMultiAssignmentsEnabled()) {
+            targetRepository.getAccessController().ifPresent(v -> {
+                if (targetRepository.count(AccessController.Operation.UPDATE, TargetSpecifications.hasIdIn(targetIds)) != targetIds.size()) {
+                    throw new EntityNotFoundException(Target.class, targetIds);
+                }
+            });
+            actionRepository.switchStatus(Status.CANCELED, targetIds, false, Status.SCHEDULED);
+        } else {
+            log.debug("The Multi Assignments feature is enabled: No need to cancel inactive scheduled actions.");
+        }
+    }
+
+    @Override
+    public void startScheduledActionsByRolloutGroupParent(final long rolloutId, final long distributionSetId, final Long rolloutGroupParentId) {
+        while (DeploymentHelper.runInNewTransaction(
+                txManager,
+                "startScheduledActions-" + rolloutId,
+                status -> {
+                    final PageRequest pageRequest = PageRequest.of(0, ACTION_PAGE_LIMIT);
+                    final Page<Action> groupScheduledActions;
+                    if (rolloutGroupParentId == null) {
+                        groupScheduledActions = actionRepository.findByRolloutIdAndRolloutGroupParentIsNullAndStatus(pageRequest, rolloutId,
+                                Action.Status.SCHEDULED);
+                    } else {
+                        groupScheduledActions = actionRepository.findByRolloutIdAndRolloutGroupParentIdAndStatus(pageRequest, rolloutId,
+                                rolloutGroupParentId, Action.Status.SCHEDULED);
+                    }
+
+                    if (groupScheduledActions.getContent().isEmpty()) {
+                        return 0L;
+                    } else {
+                        // self invocation won't check @PreAuthorize but it is already checked for the method
+                        startScheduledActions(groupScheduledActions.getContent());
+                        return groupScheduledActions.getTotalElements();
+                    }
+                }) > 0) ;
+    }
+
+    @Override
+    public void startScheduledActions(final List<Action> rolloutGroupActions) {
+        // Close actions already assigned and collect pending assignments
+        final List<JpaAction> pendingTargetAssignments = rolloutGroupActions.stream()
+                .map(JpaAction.class::cast)
+                .map(this::closeActionIfSetWasAlreadyAssigned)
+                .filter(Objects::nonNull)
+                .toList();
+        if (pendingTargetAssignments.isEmpty()) {
+            return;
+        }
+        // check if old actions needs to be canceled first
+        final List<Action> newTargetAssignments = startScheduledActionsAndHandleOpenCancellationFirst(pendingTargetAssignments);
+        if (!newTargetAssignments.isEmpty()) {
+            onlineDsAssignmentStrategy.sendDeploymentEvents(newTargetAssignments.get(0).getDistributionSet().getId(), newTargetAssignments);
+        }
+    }
+
+    @Override
+    public Optional<DistributionSet> getAssignedDistributionSet(final String controllerId) {
+        return targetRepository.findWithDetailsByControllerId(controllerId, JpaTarget_.GRAPH_TARGET_ASSIGNED_DISTRIBUTION_SET)
+                .map(JpaTarget::getAssignedDistributionSet);
+    }
+
+    @Override
+    public Optional<DistributionSet> getInstalledDistributionSet(final String controllerId) {
+        return targetRepository.findWithDetailsByControllerId(controllerId, JpaTarget_.GRAPH_TARGET_INSTALLED_DISTRIBUTION_SET)
+                .map(JpaTarget::getInstalledDistributionSet);
+    }
+
+    @Override
+    @Transactional(readOnly = false)
+    public int deleteActionsByStatusAndLastModifiedBefore(final Set<Status> status, final long lastModified) {
+        if (status.isEmpty()) {
+            return 0;
+        }
+
+        // We use a native query here because Spring JPA does not support to specify a LIMIT clause on a DELETE statement.
+        // However, for this specific use case (action cleanup), we must specify a row limit to reduce the overall load of
+        // the database.
+        final List<Integer> statusList = status.stream().map(Status::ordinal).toList();
+
+        final Query deleteQuery = entityManager.createNativeQuery(String.format(
+                getQueryForDeleteActionsByStatusAndLastModifiedBeforeString(database),
+                Jpa.formatNativeQueryInClause("status", statusList)));
+
+        deleteQuery.setParameter("tenant", tenantAware.getCurrentTenant().toUpperCase());
+        Jpa.setNativeQueryInParameter(deleteQuery, "status", statusList);
+        deleteQuery.setParameter("last_modified_at", lastModified);
+
+        log.debug("Action cleanup: Executing the following (native) query: {}", deleteQuery);
+        return deleteQuery.executeUpdate();
+    }
+
+    @Override
+    public boolean hasPendingCancellations(final Long targetId) {
+        // target access checked in assertTargetReadAllowed
+        assertTargetReadAllowed(targetId);
+        return actionRepository
+                .exists(ActionSpecifications.byTargetIdAndIsActiveAndStatus(targetId, Action.Status.CANCELING));
+    }
+
+    @Override
+    @Transactional
+    public void cancelActionsForDistributionSet(final CancelationType cancelationType, final DistributionSet distributionSet) {
+        actionRepository.findAll(ActionSpecifications.byDistributionSetIdAndActiveAndStatusIsNot(distributionSet.getId(), Status.CANCELING))
+                .forEach(action -> {
+                    try {
+                        assertTargetUpdateAllowed(action);
+                        cancelAction0(action.getId());
+                        log.debug("Action {} canceled", action.getId());
+                    } catch (final InsufficientPermissionException e) {
+                        log.trace("Could not cancel action {} due to insufficient permissions.", action.getId(), e);
+                    } catch (final EntityNotFoundException e) {
+                        log.trace("Could not cancel action {} due to entity not found exception.", action.getId(), e);
+                    }
+                });
+        if (cancelationType == CancelationType.FORCE) {
+            actionRepository.findAll(ActionSpecifications.byDistributionSetIdAndActive(distributionSet.getId()))
+                    .forEach(action -> {
+                        try {
+                            assertTargetUpdateAllowed(action);
+                            forceQuitAction0(action.getId());
+                            log.debug("Action {} force canceled (force)", action.getId());
+                        } catch (final InsufficientPermissionException e) {
+                            log.trace("Could not cancel action {} due to insufficient permissions.", action.getId(), e);
+                        } catch (final EntityNotFoundException e) {
+                            log.trace("Could not cancel action {} due to entity not found exception.", action.getId(),
+                                    e);
+                        }
+                    });
+        }
+    }
+
+    protected ActionRepository getActionRepository() {
+        return actionRepository;
+    }
+
+    protected boolean isActionsAutocloseEnabled() {
+        return getConfigValue(REPOSITORY_ACTIONS_AUTOCLOSE_ENABLED, Boolean.class);
+    }
+
+    private static Map<Long, List<TargetWithActionType>> convertRequest(final Collection<DeploymentRequest> deploymentRequests) {
+        return deploymentRequests.stream().collect(
+                Collectors.groupingBy(DeploymentRequest::getDistributionSetId,
+                        Collectors.mapping(DeploymentRequest::getTargetWithActionType, Collectors.toList())));
+    }
+
+    /**
+     * split tIDs length into max entries in-statement because many database have
+     * a constraint of max entries in in-statements e.g. Oracle with maximum 1000
+     * elements, so we need to split the entries here and execute multiple
+     * statements
+     */
+    private static List<List<Long>> getTargetEntitiesAsChunks(final List<JpaTarget> targetEntities) {
+        return ListUtils.partition(targetEntities.stream().map(Target::getId).toList(), Constants.MAX_ENTRIES_IN_STATEMENT);
+    }
+
+    private static DistributionSetAssignmentResult buildAssignmentResult(
+            final JpaDistributionSet distributionSet,
+            final List<JpaAction> assignedActions, final int totalTargetsForAssignment) {
+        final int alreadyAssignedTargetsCount = totalTargetsForAssignment - assignedActions.size();
+
+        return new DistributionSetAssignmentResult(distributionSet, alreadyAssignedTargetsCount, assignedActions);
+    }
+
+    private static String getQueryForDeleteActionsByStatusAndLastModifiedBeforeString(final Database database) {
+        return QUERY_DELETE_ACTIONS_BY_STATE_AND_LAST_MODIFIED.getOrDefault(database,
+                QUERY_DELETE_ACTIONS_BY_STATE_AND_LAST_MODIFIED_DEFAULT);
+    }
+
+    private static RetryTemplate createRetryTemplate() {
+        final RetryTemplate template = new RetryTemplate();
+
+        final FixedBackOffPolicy backOffPolicy = new FixedBackOffPolicy();
+        backOffPolicy.setBackOffPeriod(Constants.TX_RT_DELAY);
+        template.setBackOffPolicy(backOffPolicy);
+
+        final SimpleRetryPolicy retryPolicy = new SimpleRetryPolicy(Constants.TX_RT_MAX,
+                Collections.singletonMap(ConcurrencyFailureException.class, true));
+        template.setRetryPolicy(retryPolicy);
+
+        return template;
+    }
+
+    private List<DistributionSetAssignmentResult> assignDistributionSets(
+            final String initiatedBy,
             final List<DeploymentRequest> deploymentRequests, final String actionMessage,
             final AbstractDsAssignmentStrategy strategy) {
         final List<DeploymentRequest> validatedRequests = validateAndFilterRequestForAssignments(deploymentRequests);
         final Map<Long, List<TargetWithActionType>> assignmentsByDsIds = convertRequest(validatedRequests);
 
         final List<DistributionSetAssignmentResult> results = assignmentsByDsIds.entrySet().stream()
-                .map(entry -> assignDistributionSetToTargetsWithRetry(initiatedBy, entry.getKey(), entry.getValue(),
-                        actionMessage, strategy))
+                .map(entry -> assignDistributionSetToTargetsWithRetry(
+                        initiatedBy, entry.getKey(), entry.getValue(), actionMessage, strategy))
                 .toList();
         strategy.sendDeploymentEvents(results);
         return results;
@@ -246,7 +667,9 @@ public class JpaDeploymentManagement extends JpaActionManagement implements Depl
     private void checkForMultiAssignment(final Collection<DeploymentRequest> deploymentRequests) {
         if (!isMultiAssignmentsEnabled()) {
             final long distinctTargetsInRequest = deploymentRequests.stream()
-                    .map(request -> request.getTargetWithActionType().getControllerId()).distinct().count();
+                    .map(request -> request.getTargetWithActionType().getControllerId())
+                    .distinct()
+                    .count();
             if (distinctTargetsInRequest < deploymentRequests.size()) {
                 throw new MultiAssignmentIsNotEnabledException();
             }
@@ -259,14 +682,16 @@ public class JpaDeploymentManagement extends JpaActionManagement implements Depl
     }
 
     private void checkForTargetTypeCompatibility(final List<DeploymentRequest> deploymentRequests) {
-        final List<String> controllerIds = deploymentRequests.stream().map(DeploymentRequest::getControllerId)
-                .distinct().toList();
+        final List<String> controllerIds = deploymentRequests.stream()
+                .map(DeploymentRequest::getControllerId)
+                .distinct()
+                .toList();
         final List<Long> distSetIds = deploymentRequests.stream().map(DeploymentRequest::getDistributionSetId)
-                .distinct().toList();
+                .distinct()
+                .toList();
 
         if (controllerIds.size() > 1 && distSetIds.size() > 1) {
-            throw new IllegalStateException(
-                    "Assigning multiple Distribution Sets to multiple Targets simultaneously is not allowed!");
+            throw new IllegalStateException("Assigning multiple Distribution Sets to multiple Targets simultaneously is not allowed!");
         }
 
         if (distSetIds.size() == 1) {
@@ -282,7 +707,10 @@ public class JpaDeploymentManagement extends JpaActionManagement implements Depl
                 .stream()
                 .map(ids -> targetRepository.findAll(TargetSpecifications.hasControllerIdIn(ids)
                         .and(TargetSpecifications.notCompatibleWithDistributionSetType(distSetType.getId()))))
-                .flatMap(List::stream).map(Target::getTargetType).map(TargetType::getName).collect(Collectors.toSet());
+                .flatMap(List::stream)
+                .map(Target::getTargetType)
+                .map(TargetType::getName)
+                .collect(Collectors.toSet());
 
         if (!incompatibleTargetTypes.isEmpty()) {
             throw new IncompatibleTargetTypeException(incompatibleTargetTypes, distSetType.getName());
@@ -290,18 +718,19 @@ public class JpaDeploymentManagement extends JpaActionManagement implements Depl
     }
 
     private void checkCompatibilityForMultiDsAssignment(final String controllerId, final List<Long> distSetIds) {
-        final Target target = targetRepository.findOne(TargetSpecifications.hasControllerId(controllerId))
-                .orElseThrow(() -> new EntityNotFoundException(Target.class, controllerId));
+        final Target target = targetRepository.getByControllerId(controllerId);
 
         if (target.getTargetType() != null) {
             // we assume that list of assigned DS is less than
             // MAX_ENTRIES_IN_STATEMENT
             final Set<DistributionSetType> incompatibleDistSetTypes = distributionSetManagement.get(distSetIds).stream()
-                    .map(DistributionSet::getType).collect(Collectors.toSet());
+                    .map(DistributionSet::getType)
+                    .collect(Collectors.toSet());
             incompatibleDistSetTypes.removeAll(target.getTargetType().getCompatibleDistributionSetTypes());
 
             if (!incompatibleDistSetTypes.isEmpty()) {
-                final Set<String> distSetTypeNames = incompatibleDistSetTypes.stream().map(DistributionSetType::getName)
+                final Set<String> distSetTypeNames = incompatibleDistSetTypes.stream()
+                        .map(DistributionSetType::getName)
                         .collect(Collectors.toSet());
                 throw new IncompatibleTargetTypeException(target.getTargetType().getName(), distSetTypeNames);
             }
@@ -309,8 +738,10 @@ public class JpaDeploymentManagement extends JpaActionManagement implements Depl
     }
 
     private List<DeploymentRequest> filterByTargetUpdatable(final List<DeploymentRequest> deploymentRequests) {
-        final List<String> controllerIds = deploymentRequests.stream().map(DeploymentRequest::getControllerId)
-                .distinct().toList();
+        final List<String> controllerIds = deploymentRequests.stream()
+                .map(DeploymentRequest::getControllerId)
+                .distinct()
+                .toList();
 
         final List<String> found = targetRepository
                 .findAll(AccessController.Operation.UPDATE, TargetSpecifications.hasControllerIdIn(controllerIds))
@@ -322,18 +753,11 @@ public class JpaDeploymentManagement extends JpaActionManagement implements Depl
         return deploymentRequests;
     }
 
-    private static Map<Long, List<TargetWithActionType>> convertRequest(
-            final Collection<DeploymentRequest> deploymentRequests) {
-        return deploymentRequests.stream().collect(Collectors.groupingBy(DeploymentRequest::getDistributionSetId,
-                Collectors.mapping(DeploymentRequest::getTargetWithActionType, Collectors.toList())));
-    }
-
     private DistributionSetAssignmentResult assignDistributionSetToTargetsWithRetry(final String initiatedBy,
             final Long dsId, final Collection<TargetWithActionType> targetsWithActionType, final String actionMessage,
             final AbstractDsAssignmentStrategy assignmentStrategy) {
         final RetryCallback<DistributionSetAssignmentResult, ConcurrencyFailureException> retryCallback =
-                retryContext -> assignDistributionSetToTargets(
-                        initiatedBy, dsId, targetsWithActionType, actionMessage, assignmentStrategy);
+                retryContext -> assignDistributionSetToTargets(initiatedBy, dsId, targetsWithActionType, actionMessage, assignmentStrategy);
         return retryTemplate.execute(retryCallback);
     }
 
@@ -350,29 +774,22 @@ public class JpaDeploymentManagement extends JpaActionManagement implements Depl
      * to {@link TargetUpdateStatus#IN_SYNC} <br/>
      * D. does not send a {@link TargetAssignDistributionSetEvent}.<br/>
      *
-     * @param initiatedBy
-     *            the username of the user who initiated the assignment
-     * @param dsId
-     *            the ID of the distribution set to assign
-     * @param targetsWithActionType
-     *            a list of all targets and their action type
-     * @param actionMessage
-     *            an optional message to be written into the action status
-     * @param assignmentStrategy
-     *            the assignment strategy (online /offline)
+     * @param initiatedBy the username of the user who initiated the assignment
+     * @param dsId the ID of the distribution set to assign
+     * @param targetsWithActionType a list of all targets and their action type
+     * @param actionMessage an optional message to be written into the action status
+     * @param assignmentStrategy the assignment strategy (online /offline)
      * @return the assignment result
-     *
-     * @throws IncompleteDistributionSetException
-     *             if mandatory {@link SoftwareModuleType} are not assigned as
-     *             define by the {@link DistributionSetType}.
+     * @throws IncompleteDistributionSetException if mandatory {@link SoftwareModuleType} are not assigned as define by the
+     *         {@link DistributionSetType}.
      */
-    private DistributionSetAssignmentResult assignDistributionSetToTargets(final String initiatedBy, final Long dsId,
+    private DistributionSetAssignmentResult assignDistributionSetToTargets(
+            final String initiatedBy, final Long dsId,
             final Collection<TargetWithActionType> targetsWithActionType, final String actionMessage,
             final AbstractDsAssignmentStrategy assignmentStrategy) {
-        final JpaDistributionSet distributionSet =
-                (JpaDistributionSet) distributionSetManagement.getValidAndComplete(dsId);
+        final JpaDistributionSet distributionSet = (JpaDistributionSet) distributionSetManagement.getValidAndComplete(dsId);
 
-        if (((JpaDistributionSetManagement)distributionSetManagement).isImplicitLockApplicable(distributionSet)) {
+        if (((JpaDistributionSetManagement) distributionSetManagement).isImplicitLockApplicable(distributionSet)) {
             // without new transaction DS changed event is not thrown
             DeploymentHelper.runInNewTransaction(txManager, "Implicit lock", status -> {
                 distributionSetManagement.lock(distributionSet.getId());
@@ -380,28 +797,28 @@ public class JpaDeploymentManagement extends JpaActionManagement implements Depl
             });
         }
 
-        final List<String> providedTargetIds = targetsWithActionType.stream().map(TargetWithActionType::getControllerId)
-                .distinct().toList();
+        final List<String> providedTargetIds = targetsWithActionType.stream()
+                .map(TargetWithActionType::getControllerId)
+                .distinct()
+                .toList();
 
         final List<String> existingTargetIds = ListUtils.partition(providedTargetIds, Constants.MAX_ENTRIES_IN_STATEMENT)
                 .stream()
-                .map(ids -> targetRepository.findAll(AccessController.Operation.UPDATE,
-                        TargetSpecifications.hasControllerIdIn(ids)))
-                .flatMap(List::stream).map(JpaTarget::getControllerId).toList();
+                .map(ids -> targetRepository.findAll(AccessController.Operation.UPDATE, TargetSpecifications.hasControllerIdIn(ids)))
+                .flatMap(List::stream).map(JpaTarget::getControllerId)
+                .toList();
 
-        final List<JpaTarget> targetEntities = assignmentStrategy.findTargetsForAssignment(existingTargetIds,
-                distributionSet.getId());
-
+        final List<JpaTarget> targetEntities = assignmentStrategy.findTargetsForAssignment(existingTargetIds, distributionSet.getId());
         if (targetEntities.isEmpty()) {
             return allTargetsAlreadyAssignedResult(distributionSet, existingTargetIds.size());
         }
 
         final List<TargetWithActionType> existingTargetsWithActionType = targetsWithActionType.stream()
-                .filter(target -> existingTargetIds.contains(target.getControllerId())).toList();
+                .filter(target -> existingTargetIds.contains(target.getControllerId()))
+                .toList();
 
-        final List<JpaAction> assignedActions = doAssignDistributionSetToTargets(initiatedBy,
-                existingTargetsWithActionType, actionMessage, assignmentStrategy, distributionSet,
-                targetEntities);
+        final List<JpaAction> assignedActions = doAssignDistributionSetToTargets(
+                initiatedBy, existingTargetsWithActionType, actionMessage, assignmentStrategy, distributionSet, targetEntities);
         return buildAssignmentResult(distributionSet, assignedActions, existingTargetsWithActionType.size());
     }
 
@@ -424,39 +841,18 @@ public class JpaDeploymentManagement extends JpaActionManagement implements Depl
             closeOrCancelActiveActions(assignmentStrategy, targetEntitiesIdsChunks);
         }
         // cancel all scheduled actions which are in-active, these actions were
-        // not active before and the manual assignment which has been done
-        // cancels them
+        // not active before and the manual assignment which has been done cancels them
         targetEntitiesIdsChunks.forEach(this::cancelInactiveScheduledActionsForTargets);
-        setAssignedDistributionSetAndTargetUpdateStatus(assignmentStrategy, distributionSetEntity,
-                targetEntitiesIdsChunks);
-        final Map<TargetWithActionType, JpaAction> assignedActions = createActions(initiatedBy, targetsWithActionType,
-                targetEntities, assignmentStrategy, distributionSetEntity);
-        // create initial action status when action is created so we remember
+        setAssignedDistributionSetAndTargetUpdateStatus(assignmentStrategy, distributionSetEntity, targetEntitiesIdsChunks);
+        final Map<TargetWithActionType, JpaAction> assignedActions = createActions(
+                targetsWithActionType, targetEntities, distributionSetEntity, assignmentStrategy, initiatedBy);
+        // create initial action status when action is created, so we remember
         // the initial running status because we will change the status
-        // of the action itself and with this action status we have a nicer
-        // action history.
+        // of the action itself and with this action status we have a nicer action history.
         createActionsStatus(assignedActions, assignmentStrategy, actionMessage);
 
         detachEntitiesAndSendTargetUpdatedEvents(distributionSetEntity, targetEntities, assignmentStrategy);
         return new ArrayList<>(assignedActions.values());
-    }
-
-    /**
-     * split tIDs length into max entries in-statement because many database have
-     * constraint of max entries in in-statements e.g. Oracle with maximum 1000
-     * elements, so we need to split the entries here and execute multiple
-     * statements
-     */
-    private static List<List<Long>> getTargetEntitiesAsChunks(final List<JpaTarget> targetEntities) {
-        return ListUtils.partition(targetEntities.stream().map(Target::getId).collect(Collectors.toList()),
-                Constants.MAX_ENTRIES_IN_STATEMENT);
-    }
-
-    private static DistributionSetAssignmentResult buildAssignmentResult(final JpaDistributionSet distributionSet,
-            final List<JpaAction> assignedActions, final int totalTargetsForAssignment) {
-        final int alreadyAssignedTargetsCount = totalTargetsForAssignment - assignedActions.size();
-
-        return new DistributionSetAssignmentResult(distributionSet, alreadyAssignedTargetsCount, assignedActions);
     }
 
     private void enforceMaxAssignmentsPerRequest(final int requestedActions) {
@@ -475,8 +871,7 @@ public class JpaDeploymentManagement extends JpaActionManagement implements Depl
                 quota, Action.class, Target.class, actionRepository::countByTargetControllerId));
     }
 
-    private void closeOrCancelActiveActions(final AbstractDsAssignmentStrategy assignmentStrategy,
-            final List<List<Long>> targetIdsChunks) {
+    private void closeOrCancelActiveActions(final AbstractDsAssignmentStrategy assignmentStrategy, final List<List<Long>> targetIdsChunks) {
         if (isActionsAutocloseEnabled()) {
             assignmentStrategy.closeActiveActions(targetIdsChunks);
         } else {
@@ -484,36 +879,17 @@ public class JpaDeploymentManagement extends JpaActionManagement implements Depl
         }
     }
 
-    @Override
-    @Transactional(isolation = Isolation.READ_COMMITTED)
-    @Retryable(include = {
-            ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX, backoff = @Backoff(delay = Constants.TX_RT_DELAY))
-    public void cancelInactiveScheduledActionsForTargets(final List<Long> targetIds) {
-        if (!isMultiAssignmentsEnabled()) {
-            targetRepository.getAccessController().ifPresent(v -> {
-                if (targetRepository.count(AccessController.Operation.UPDATE,
-                        TargetSpecifications.hasIdIn(targetIds)) != targetIds.size()) {
-                    throw new EntityNotFoundException(Target.class, targetIds);
-                }
-            });
-            actionRepository.switchStatus(Status.CANCELED, targetIds, false, Status.SCHEDULED);
-        } else {
-            log.debug("The Multi Assignments feature is enabled: No need to cancel inactive scheduled actions.");
-        }
-    }
-
-    private void setAssignedDistributionSetAndTargetUpdateStatus(final AbstractDsAssignmentStrategy assignmentStrategy,
+    private void setAssignedDistributionSetAndTargetUpdateStatus(
+            final AbstractDsAssignmentStrategy assignmentStrategy,
             final JpaDistributionSet set, final List<List<Long>> targetIdsChunks) {
         final String currentUser = auditorProvider.getCurrentAuditor().orElse(null);
         assignmentStrategy.setAssignedDistributionSetAndTargetStatus(set, targetIdsChunks, currentUser);
     }
 
-    private Map<TargetWithActionType, JpaAction> createActions(final String initiatedBy,
-            final Collection<TargetWithActionType> targetsWithActionType, final List<JpaTarget> targets,
-            final AbstractDsAssignmentStrategy assignmentStrategy, final JpaDistributionSet set) {
-
+    private Map<TargetWithActionType, JpaAction> createActions(
+            final Collection<TargetWithActionType> targetsWithActionType, final List<JpaTarget> targets, final JpaDistributionSet set,
+            final AbstractDsAssignmentStrategy assignmentStrategy, final String initiatedBy) {
         final Map<TargetWithActionType, JpaAction> persistedActions = new LinkedHashMap<>();
-
         for (final TargetWithActionType twt : targetsWithActionType) {
             final JpaAction targetAction = assignmentStrategy.createTargetAction(initiatedBy, twt, targets, set);
             if (targetAction != null) {
@@ -523,7 +899,8 @@ public class JpaDeploymentManagement extends JpaActionManagement implements Depl
         return persistedActions;
     }
 
-    private void createActionsStatus(final Map<TargetWithActionType, JpaAction> actions,
+    private void createActionsStatus(
+            final Map<TargetWithActionType, JpaAction> actions,
             final AbstractDsAssignmentStrategy assignmentStrategy, final String actionMessage) {
         actionStatusRepository.saveAll(actions.entrySet().stream().map(entry -> {
             final JpaAction action = entry.getValue();
@@ -576,130 +953,7 @@ public class JpaDeploymentManagement extends JpaActionManagement implements Depl
         assignmentStrategy.sendTargetUpdatedEvents(set, targets);
     }
 
-    @Override
-    @Transactional(isolation = Isolation.READ_COMMITTED)
-    @Retryable(include = {
-            ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX, backoff = @Backoff(delay = Constants.TX_RT_DELAY))
-    public Action cancelAction(final long actionId) {
-        log.debug("cancelAction({})", actionId);
-
-        final JpaAction action = actionRepository.findById(actionId)
-                .orElseThrow(() -> new EntityNotFoundException(Action.class, actionId));
-
-        if (action.isCancelingOrCanceled()) {
-            throw new CancelActionNotAllowedException("Actions in canceling or canceled state cannot be canceled");
-        }
-
-        assertTargetUpdateAllowed(action);
-
-        if (action.isActive()) {
-            log.debug("action ({}) was still active. Change to {}.", action, Status.CANCELING);
-            action.setStatus(Status.CANCELING);
-
-            // document that the status has been retrieved
-            actionStatusRepository.save(new JpaActionStatus(action, Status.CANCELING, System.currentTimeMillis(),
-                    RepositoryConstants.SERVER_MESSAGE_PREFIX + "manual cancelation requested"));
-            final Action saveAction = actionRepository.save(action);
-
-            onlineDsAssignmentStrategy.cancelAssignment(action);
-
-            return saveAction;
-        } else {
-            throw new CancelActionNotAllowedException(action.getId() + " is not active and cannot be canceled");
-        }
-    }
-
-    @Override
-    @Transactional(isolation = Isolation.READ_COMMITTED)
-    @Retryable(include = {
-            ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX, backoff = @Backoff(delay = Constants.TX_RT_DELAY))
-    public Action forceQuitAction(final long actionId) {
-        final JpaAction action = actionRepository.findById(actionId)
-                .orElseThrow(() -> new EntityNotFoundException(Action.class, actionId));
-
-        if (!action.isCancelingOrCanceled()) {
-            throw new ForceQuitActionNotAllowedException(
-                    action.getId() + " is not canceled yet and cannot be force quit");
-        }
-
-        if (!action.isActive()) {
-            throw new ForceQuitActionNotAllowedException(action.getId() + " is not active and cannot be force quit");
-        }
-
-        assertTargetUpdateAllowed(action);
-
-        log.warn("action ({}) was still active and has been force quite.", action);
-
-        // document that the status has been retrieved
-        actionStatusRepository.save(new JpaActionStatus(action, Status.CANCELED, System.currentTimeMillis(),
-                RepositoryConstants.SERVER_MESSAGE_PREFIX + "A force quit has been performed."));
-
-        DeploymentHelper.successCancellation(action, actionRepository, targetRepository);
-
-        return actionRepository.save(action);
-    }
-
-    @Override
-    public long startScheduledActionsByRolloutGroupParent(final long rolloutId, final long distributionSetId,
-            final Long rolloutGroupParentId) {
-        long totalActionsCount = 0L;
-        long lastStartedActionsCount;
-        do {
-            lastStartedActionsCount = startScheduledActionsByRolloutGroupParentInNewTransaction(rolloutId,
-                    distributionSetId, rolloutGroupParentId, ACTION_PAGE_LIMIT);
-            totalActionsCount += lastStartedActionsCount;
-        } while (lastStartedActionsCount > 0);
-
-        return totalActionsCount;
-    }
-
-    private long startScheduledActionsByRolloutGroupParentInNewTransaction(final Long rolloutId,
-            final Long distributionSetId, final Long rolloutGroupParentId, final int limit) {
-        return DeploymentHelper.runInNewTransaction(txManager, "startScheduledActions-" + rolloutId, status -> {
-            final Page<Action> rolloutGroupActions = findActionsByRolloutAndRolloutGroupParent(rolloutId,
-                    rolloutGroupParentId, limit);
-
-            if (rolloutGroupActions.getContent().isEmpty()) {
-                return 0L;
-            }
-
-            final List<Action> newTargetAssignments = handleTargetAssignments(rolloutGroupActions);
-
-            if (!newTargetAssignments.isEmpty()) {
-                onlineDsAssignmentStrategy.sendDeploymentEvents(distributionSetId, newTargetAssignments);
-            }
-
-            return rolloutGroupActions.getTotalElements();
-        });
-    }
-
-    private List<Action> handleTargetAssignments(final Page<Action> rolloutGroupActions) {
-        // Close actions already assigned and collect pending assignments
-        final List<JpaAction> pendingTargetAssignments = rolloutGroupActions.getContent().stream()
-                .map(JpaAction.class::cast).map(this::closeActionIfSetWasAlreadyAssigned).filter(Objects::nonNull)
-                .collect(Collectors.toList());
-        if (pendingTargetAssignments.isEmpty()) {
-            return new ArrayList<>(pendingTargetAssignments);
-        }
-        // check if old actions needs to be canceled first
-        return startScheduledActionsAndHandleOpenCancellationFirst(pendingTargetAssignments);
-    }
-
-    private Page<Action> findActionsByRolloutAndRolloutGroupParent(final Long rolloutId,
-            final Long rolloutGroupParentId, final int limit) {
-
-        final PageRequest pageRequest = PageRequest.of(0, limit);
-        if (rolloutGroupParentId == null) {
-            return actionRepository.findByRolloutIdAndRolloutGroupParentIsNullAndStatus(pageRequest, rolloutId,
-                    Action.Status.SCHEDULED);
-        } else {
-            return actionRepository.findByRolloutIdAndRolloutGroupParentIdAndStatus(pageRequest, rolloutId,
-                    rolloutGroupParentId, Action.Status.SCHEDULED);
-        }
-    }
-
     private JpaAction closeActionIfSetWasAlreadyAssigned(final JpaAction action) {
-
         if (isMultiAssignmentsEnabled()) {
             return action;
         }
@@ -732,8 +986,7 @@ public class JpaDeploymentManagement extends JpaActionManagement implements Depl
     }
 
     private void closeOrCancelOpenDeviceActions(final List<JpaAction> actions) {
-        final List<Long> targetIds = actions.stream().map(JpaAction::getTarget).map(Target::getId)
-                .collect(Collectors.toList());
+        final List<Long> targetIds = actions.stream().map(JpaAction::getTarget).map(Target::getId).toList();
         if (isActionsAutocloseEnabled()) {
             onlineDsAssignmentStrategy.closeObsoleteUpdateActions(targetIds);
         } else {
@@ -758,10 +1011,10 @@ public class JpaDeploymentManagement extends JpaActionManagement implements Depl
     private void setAssignmentOnTargets(final List<JpaAction> actions) {
         final List<JpaTarget> assignedDsTargets = actions.stream().map(savedAction -> {
             final JpaTarget mergedTarget = (JpaTarget) entityManager.merge(savedAction.getTarget());
-            mergedTarget.setAssignedDistributionSet(savedAction.getDistributionSet());
+            mergedTarget.setAssignedDistributionSet((JpaDistributionSet) savedAction.getDistributionSet());
             mergedTarget.setUpdateStatus(TargetUpdateStatus.PENDING);
             return mergedTarget;
-        }).collect(Collectors.toList());
+        }).toList();
 
         targetRepository.saveAll(assignedDsTargets);
     }
@@ -771,237 +1024,8 @@ public class JpaDeploymentManagement extends JpaActionManagement implements Depl
         actionStatus.setAction(action);
         actionStatus.setOccurredAt(action.getCreatedAt());
         actionStatus.setStatus(Status.RUNNING);
-        actionStatus.addMessage(RepositoryConstants.SERVER_MESSAGE_PREFIX
-                + "Distribution Set is already assigned. Skipping this action.");
+        actionStatus.addMessage(RepositoryConstants.SERVER_MESSAGE_PREFIX + "Distribution Set is already assigned. Skipping this action.");
         actionStatusRepository.save(actionStatus);
-    }
-
-    @Override
-    public Optional<Action> findAction(final long actionId) {
-        return actionRepository.findById(actionId)
-                .filter(action -> targetRepository.exists(TargetSpecifications.hasId(action.getTarget().getId())))
-                .map(JpaAction.class::cast);
-    }
-
-    @Override
-    public Optional<Action> findActionWithDetails(final long actionId) {
-        return actionRepository.findWithDetailsById(actionId)
-                .filter(action -> targetRepository.exists(TargetSpecifications.hasId(action.getTarget().getId())));
-    }
-
-    @Override
-    public Slice<Action> findActionsByTarget(final String controllerId, final Pageable pageable) {
-        assertTargetReadAllowed(controllerId);
-        return actionRepository.findAll(ActionSpecifications.byTargetControllerId(controllerId), pageable)
-                .map(Action.class::cast);
-    }
-
-    @Override
-    public Page<Action> findActionsByTarget(final String rsqlParam, final String controllerId,
-            final Pageable pageable) {
-        assertTargetReadAllowed(controllerId);
-
-        final List<Specification<JpaAction>> specList = Arrays.asList(
-                RSQLUtility.buildRsqlSpecification(rsqlParam, ActionFields.class, virtualPropertyReplacer, database),
-                ActionSpecifications.byTargetControllerId(controllerId));
-
-        return JpaManagementHelper.findAllWithCountBySpec(actionRepository, pageable, specList);
-    }
-
-    @Override
-    public Page<Action> findActiveActionsByTarget(final Pageable pageable, final String controllerId) {
-        assertTargetReadAllowed(controllerId);
-        return actionRepository
-                .findAll(ActionSpecifications.byTargetControllerIdAndActive(controllerId, true), pageable)
-                .map(Action.class::cast);
-    }
-
-    @Override
-    public Page<Action> findInActiveActionsByTarget(final Pageable pageable, final String controllerId) {
-        assertTargetReadAllowed(controllerId);
-        return actionRepository
-                .findAll(ActionSpecifications.byTargetControllerIdAndActive(controllerId, false), pageable)
-                .map(Action.class::cast);
-    }
-
-    @Override
-    public List<Action> findActiveActionsWithHighestWeight(final String controllerId, final int maxActionCount) {
-        assertTargetReadAllowed(controllerId);
-        return findActiveActionsWithHighestWeightConsideringDefault(controllerId, maxActionCount);
-    }
-
-    @Override
-    public long countActionsByTarget(final String controllerId) {
-        assertTargetReadAllowed(controllerId);
-        return actionRepository.countByTargetControllerId(controllerId);
-    }
-
-    @Override
-    public long countActionsByTarget(final String rsqlParam, final String controllerId) {
-        assertTargetReadAllowed(controllerId);
-
-        final List<Specification<JpaAction>> specList = Arrays.asList(
-                RSQLUtility.buildRsqlSpecification(rsqlParam, ActionFields.class, virtualPropertyReplacer, database),
-                ActionSpecifications.byTargetControllerId(controllerId));
-
-        return JpaManagementHelper.countBySpec(actionRepository, specList);
-    }
-
-    @Override
-    @Transactional
-    @Retryable(include = {
-            ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX, backoff = @Backoff(delay = Constants.TX_RT_DELAY))
-    public Action forceTargetAction(final long actionId) {
-        final JpaAction action = actionRepository.findById(actionId).map(this::assertTargetUpdateAllowed)
-                .orElseThrow(() -> new EntityNotFoundException(Action.class, actionId));
-
-        if (!action.isForcedOrTimeForced()) {
-            action.setActionType(ActionType.FORCED);
-            return actionRepository.save(action);
-        }
-        return action;
-    }
-
-    @Override
-    public Page<ActionStatus> findActionStatusByAction(final Pageable pageReq, final long actionId) {
-        assertActionExistsAndAccessible(actionId);
-
-        return actionStatusRepository.findByActionId(pageReq, actionId);
-    }
-
-    @Override
-    public long countActionStatusByAction(final long actionId) {
-        assertActionExistsAndAccessible(actionId);
-
-        return actionStatusRepository.countByActionId(actionId);
-    }
-
-    // action is already got and there are checked read permissions - do not check
-    // permissions
-    // and UI which is to be removed
-    @Override
-    public Page<String> findMessagesByActionStatusId(final Pageable pageable, final long actionStatusId) {
-        final CriteriaBuilder cb = entityManager.getCriteriaBuilder();
-
-        final CriteriaQuery<String> msgQuery = cb.createQuery(String.class);
-        final Root<JpaActionStatus> as = msgQuery.from(JpaActionStatus.class);
-        final ListJoin<JpaActionStatus, String> join = as.joinList("messages", JoinType.LEFT);
-        final CriteriaQuery<String> selMsgQuery = msgQuery.select(join);
-        selMsgQuery.where(cb.equal(as.get(JpaActionStatus_.id), actionStatusId));
-
-        final List<String> result = new ArrayList<>(entityManager.createQuery(selMsgQuery)
-                .setFirstResult((int) pageable.getOffset()).setMaxResults(pageable.getPageSize()).getResultList());
-
-        return new PageImpl<>(result, pageable, result.size());
-    }
-
-    @Override
-    public long countMessagesByActionStatusId(final long actionStatusId) {
-        final CriteriaBuilder cb = entityManager.getCriteriaBuilder();
-
-        final CriteriaQuery<Long> countMsgQuery = cb.createQuery(Long.class);
-        final Root<JpaActionStatus> countMsgQueryFrom = countMsgQuery.distinct(true).from(JpaActionStatus.class);
-        final ListJoin<JpaActionStatus, String> cJoin = countMsgQueryFrom.joinList("messages", JoinType.LEFT);
-        countMsgQuery.select(cb.count(cJoin))
-                .where(cb.equal(countMsgQueryFrom.get(JpaActionStatus_.id), actionStatusId));
-
-        return entityManager.createQuery(countMsgQuery).getSingleResult();
-    }
-
-    @Override
-    public long countActionsAll() {
-        return actionRepository.count();
-    }
-
-    @Override
-    public long countActions(final String rsqlParam) {
-        final List<Specification<JpaAction>> specList = List.of(
-                RSQLUtility.buildRsqlSpecification(rsqlParam, ActionFields.class, virtualPropertyReplacer, database));
-        return JpaManagementHelper.countBySpec(actionRepository, specList);
-    }
-
-    @Override
-    public Slice<Action> findActionsAll(final Pageable pageable) {
-        return JpaManagementHelper.findAllWithoutCountBySpec(actionRepository, pageable, null);
-    }
-
-    @Override
-    public Slice<Action> findActions(final String rsqlParam, final Pageable pageable) {
-        final List<Specification<JpaAction>> specList = List.of(
-                RSQLUtility.buildRsqlSpecification(rsqlParam, ActionFields.class, virtualPropertyReplacer, database));
-        return JpaManagementHelper.findAllWithoutCountBySpec(actionRepository, pageable, specList);
-    }
-
-    @Override
-    public Optional<DistributionSet> getAssignedDistributionSet(final String controllerId) {
-        return targetRepository
-                .findOne(TargetSpecifications.hasControllerId(controllerId))
-                .map(JpaTarget::getAssignedDistributionSet);
-    }
-
-    @Override
-    public Optional<DistributionSet> getInstalledDistributionSet(final String controllerId) {
-        return targetRepository
-                .findOne(TargetSpecifications.hasControllerId(controllerId))
-                .map(JpaTarget::getInstalledDistributionSet);
-    }
-
-    @Override
-    @Transactional(readOnly = false)
-    public int deleteActionsByStatusAndLastModifiedBefore(final Set<Status> status, final long lastModified) {
-        if (status.isEmpty()) {
-            return 0;
-        }
-        /*
-         * We use a native query here because Spring JPA does not support to specify a
-         * LIMIT clause on a DELETE statement. However, for this specific use case
-         * (action cleanup), we must specify a row limit to reduce the overall load on
-         * the database.
-         */
-
-        final int statusCount = status.size();
-        final Status[] statusArr = status.toArray(new Status[statusCount]);
-
-        final String queryStr = String.format(getQueryForDeleteActionsByStatusAndLastModifiedBeforeString(database),
-                formatInClauseWithNumberKeys(statusCount));
-        final Query deleteQuery = entityManager.createNativeQuery(queryStr);
-
-        IntStream.range(0, statusCount)
-                .forEach(i -> deleteQuery.setParameter(String.valueOf(i), statusArr[i].ordinal()));
-        deleteQuery.setParameter("tenant", tenantAware.getCurrentTenant().toUpperCase());
-        deleteQuery.setParameter("last_modified_at", lastModified);
-
-        log.debug("Action cleanup: Executing the following (native) query: {}", deleteQuery);
-        return deleteQuery.executeUpdate();
-    }
-
-    @Override
-    public boolean hasPendingCancellations(final Long targetId) {
-        // target access checked in assertTargetReadAllowed
-        assertTargetReadAllowed(targetId);
-        return actionRepository
-                .exists(ActionSpecifications.byTargetIdAndIsActiveAndStatus(targetId, Action.Status.CANCELING));
-    }
-
-    private static String getQueryForDeleteActionsByStatusAndLastModifiedBeforeString(final Database database) {
-        return QUERY_DELETE_ACTIONS_BY_STATE_AND_LAST_MODIFIED.getOrDefault(database,
-                QUERY_DELETE_ACTIONS_BY_STATE_AND_LAST_MODIFIED_DEFAULT);
-    }
-
-    private static String formatInClauseWithNumberKeys(final int count) {
-        return formatInClause(IntStream.range(0, count).mapToObj(String::valueOf).collect(Collectors.toList()));
-    }
-
-    private static String formatInClause(final Collection<String> elements) {
-        return "#" + String.join(",#", elements);
-    }
-
-    protected ActionRepository getActionRepository() {
-        return actionRepository;
-    }
-
-    protected boolean isActionsAutocloseEnabled() {
-        return getConfigValue(REPOSITORY_ACTIONS_AUTOCLOSE_ENABLED, Boolean.class);
     }
 
     private boolean isMultiAssignmentsEnabled() {
@@ -1019,54 +1043,6 @@ public class JpaDeploymentManagement extends JpaActionManagement implements Depl
                 .runAsSystem(() -> tenantConfigurationManagement.getConfigurationValue(key, valueType).getValue());
     }
 
-    private static RetryTemplate createRetryTemplate() {
-        final RetryTemplate template = new RetryTemplate();
-
-        final FixedBackOffPolicy backOffPolicy = new FixedBackOffPolicy();
-        backOffPolicy.setBackOffPeriod(Constants.TX_RT_DELAY);
-        template.setBackOffPolicy(backOffPolicy);
-
-        final SimpleRetryPolicy retryPolicy = new SimpleRetryPolicy(Constants.TX_RT_MAX,
-                Collections.singletonMap(ConcurrencyFailureException.class, true));
-        template.setRetryPolicy(retryPolicy);
-
-        return template;
-    }
-
-    @Override
-    @Transactional
-    public void cancelActionsForDistributionSet(final CancelationType cancelationType,
-            final DistributionSet distributionSet) {
-        actionRepository.findAll(ActionSpecifications
-                .byDistributionSetIdAndActiveAndStatusIsNot(distributionSet.getId(), Status.CANCELING))
-                .forEach(action -> {
-                    try {
-                        assertTargetUpdateAllowed(action);
-                        cancelAction(action.getId());
-                        log.debug("Action {} canceled", action.getId());
-                    } catch (final InsufficientPermissionException e) {
-                        log.trace("Could not cancel action {} due to insufficient permissions.", action.getId(), e);
-                    } catch (final EntityNotFoundException e) {
-                        log.trace("Could not cancel action {} due to entity not found exception.", action.getId(), e);
-                    }
-                });
-        if (cancelationType == CancelationType.FORCE) {
-            actionRepository.findAll(ActionSpecifications.byDistributionSetIdAndActive(distributionSet.getId()))
-                    .forEach(action -> {
-                        try {
-                            assertTargetUpdateAllowed(action);
-                            forceQuitAction(action.getId());
-                            log.debug("Action {} force canceled", action.getId());
-                        } catch (final InsufficientPermissionException e) {
-                            log.trace("Could not cancel action {} due to insufficient permissions.", action.getId(), e);
-                        } catch (final EntityNotFoundException e) {
-                            log.trace("Could not cancel action {} due to entity not found exception.", action.getId(),
-                                    e);
-                        }
-                    });
-        }
-    }
-
     private void assertTargetReadAllowed(final Long targetId) {
         if (!targetRepository.existsById(targetId)) {
             throw new EntityNotFoundException(Target.class, targetId);
@@ -1080,12 +1056,12 @@ public class JpaDeploymentManagement extends JpaActionManagement implements Depl
     }
 
     private JpaAction assertTargetUpdateAllowed(final JpaAction action) {
-        targetRepository.findOne(TargetSpecifications.hasId(action.getTarget().getId())).ifPresentOrElse(target -> {
-            targetRepository.getAccessController()
-                    .ifPresent(acm -> acm.assertOperationAllowed(AccessController.Operation.UPDATE, target));
-        }, () -> {
-            throw new EntityNotFoundException(Action.class, action);
-        });
+        targetRepository.findOne(TargetSpecifications.hasId(action.getTarget().getId())).ifPresentOrElse(
+                target -> targetRepository.getAccessController()
+                        .ifPresent(acm -> acm.assertOperationAllowed(AccessController.Operation.UPDATE, target)),
+                () -> {
+                    throw new EntityNotFoundException(Action.class, action);
+                });
         return action;
     }
 
