@@ -13,8 +13,8 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
+import org.eclipse.hawkbit.im.authentication.SpPermission;
 import org.eclipse.hawkbit.repository.DistributionSetTagFields;
 import org.eclipse.hawkbit.repository.DistributionSetTagManagement;
 import org.eclipse.hawkbit.repository.TargetTagManagement;
@@ -27,7 +27,6 @@ import org.eclipse.hawkbit.repository.jpa.acm.AccessController;
 import org.eclipse.hawkbit.repository.jpa.builder.JpaTagCreate;
 import org.eclipse.hawkbit.repository.jpa.configuration.Constants;
 import org.eclipse.hawkbit.repository.jpa.model.JpaDistributionSetTag;
-import org.eclipse.hawkbit.repository.jpa.model.JpaDistributionSetType;
 import org.eclipse.hawkbit.repository.jpa.repository.DistributionSetRepository;
 import org.eclipse.hawkbit.repository.jpa.repository.DistributionSetTagRepository;
 import org.eclipse.hawkbit.repository.jpa.rsql.RSQLUtility;
@@ -44,26 +43,24 @@ import org.springframework.data.jpa.domain.Specification;
 import org.springframework.orm.jpa.vendor.Database;
 import org.springframework.retry.annotation.Backoff;
 import org.springframework.retry.annotation.Retryable;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.validation.annotation.Validated;
 
 /**
  * JPA implementation of {@link TargetTagManagement}.
- *
  */
 @Transactional(readOnly = true)
 @Validated
 public class JpaDistributionSetTagManagement implements DistributionSetTagManagement {
 
     private final DistributionSetTagRepository distributionSetTagRepository;
-
     private final DistributionSetRepository distributionSetRepository;
-
     private final VirtualPropertyReplacer virtualPropertyReplacer;
-
     private final Database database;
 
-    public JpaDistributionSetTagManagement(final DistributionSetTagRepository distributionSetTagRepository,
+    public JpaDistributionSetTagManagement(
+            final DistributionSetTagRepository distributionSetTagRepository,
             final DistributionSetRepository distributionSetRepository,
             final VirtualPropertyReplacer virtualPropertyReplacer, final Database database) {
         this.distributionSetTagRepository = distributionSetTagRepository;
@@ -74,11 +71,32 @@ public class JpaDistributionSetTagManagement implements DistributionSetTagManage
 
     @Override
     @Transactional
-    @Retryable(include = {
-            ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX, backoff = @Backoff(delay = Constants.TX_RT_DELAY))
+    @Retryable(retryFor = { ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX,
+            backoff = @Backoff(delay = Constants.TX_RT_DELAY))
+    public List<DistributionSetTag> create(final Collection<TagCreate> dst) {
+        final List<JpaDistributionSetTag> toCreate = dst.stream()
+                .map(JpaTagCreate.class::cast)
+                .map(JpaTagCreate::buildDistributionSetTag)
+                .toList();
+        return Collections.unmodifiableList(distributionSetTagRepository.saveAll(AccessController.Operation.CREATE, toCreate));
+    }
+
+    @Override
+    @Transactional
+    @Retryable(retryFor = { ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX,
+            backoff = @Backoff(delay = Constants.TX_RT_DELAY))
+    @PreAuthorize(SpPermission.SpringEvalExpressions.HAS_AUTH_CREATE_REPOSITORY)
+    public DistributionSetTag create(final TagCreate c) {
+        return distributionSetTagRepository.save(AccessController.Operation.CREATE, ((JpaTagCreate) c).buildDistributionSetTag());
+    }
+
+    @Override
+    @Transactional
+    @Retryable(retryFor = { ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX,
+            backoff = @Backoff(delay = Constants.TX_RT_DELAY))
+    @PreAuthorize(SpPermission.SpringEvalExpressions.HAS_AUTH_UPDATE_REPOSITORY)
     public DistributionSetTag update(final TagUpdate u) {
         final GenericTagUpdate update = (GenericTagUpdate) u;
-
         final JpaDistributionSetTag tag = distributionSetTagRepository.findById(update.getId())
                 .orElseThrow(() -> new EntityNotFoundException(DistributionSetTag.class, update.getId()));
 
@@ -90,84 +108,27 @@ public class JpaDistributionSetTagManagement implements DistributionSetTagManage
     }
 
     @Override
-    public Optional<DistributionSetTag> getByName(final String name) {
-        return distributionSetTagRepository.findByNameEquals(name);
+    @Transactional
+    @Retryable(retryFor = { ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX,
+            backoff = @Backoff(delay = Constants.TX_RT_DELAY))
+    public void delete(final long id) {
+        distributionSetTagRepository.deleteById(id);
     }
 
     @Override
     @Transactional
-    @Retryable(include = {
-            ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX, backoff = @Backoff(delay = Constants.TX_RT_DELAY))
-    public DistributionSetTag create(final TagCreate c) {
-        final JpaTagCreate create = (JpaTagCreate) c;
-        return distributionSetTagRepository.save(AccessController.Operation.CREATE, create.buildDistributionSetTag());
-    }
-
-    @Override
-    @Transactional
-    @Retryable(include = {
-            ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX, backoff = @Backoff(delay = Constants.TX_RT_DELAY))
-    public List<DistributionSetTag> create(final Collection<TagCreate> dst) {
-        final List<JpaDistributionSetTag> toCreate = dst.stream().map(JpaTagCreate.class::cast)
-                .map(JpaTagCreate::buildDistributionSetTag).toList();
-        return Collections
-                .unmodifiableList(distributionSetTagRepository.saveAll(AccessController.Operation.CREATE, toCreate));
-    }
-
-    @Override
-    @Transactional
-    @Retryable(include = {
-            ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX, backoff = @Backoff(delay = Constants.TX_RT_DELAY))
-    public void delete(final String tagName) {
-        final JpaDistributionSetTag dsTag = distributionSetTagRepository
-                .findOne(DistributionSetTagSpecifications.byName(tagName))
-                .orElseThrow(() -> new EntityNotFoundException(DistributionSetTag.class, tagName));
-
-        distributionSetTagRepository.delete(dsTag);
-    }
-
-    @Override
-    public Slice<DistributionSetTag> findAll(final Pageable pageable) {
-        return JpaManagementHelper.findAllWithoutCountBySpec(distributionSetTagRepository, pageable, null);
-    }
-
-    @Override
-    public Page<DistributionSetTag> findByRsql(final Pageable pageable, final String rsqlParam) {
-        final Specification<JpaDistributionSetTag> spec = RSQLUtility.buildRsqlSpecification(rsqlParam, DistributionSetTagFields.class,
-                virtualPropertyReplacer, database);
-
-        return JpaManagementHelper.findAllWithCountBySpec(distributionSetTagRepository, pageable,
-                Collections.singletonList(spec));
-    }
-
-    @Override
-    public Page<DistributionSetTag> findByDistributionSet(final Pageable pageable, final long distributionSetId) {
-        if (!distributionSetRepository.existsById(distributionSetId)) {
-            throw new EntityNotFoundException(DistributionSet.class, distributionSetId);
-        }
-
-        return JpaManagementHelper.findAllWithCountBySpec(distributionSetTagRepository, pageable,
-                Collections.singletonList(TagSpecification.ofDistributionSet(distributionSetId)));
-    }
-
-    @Override
-    @Transactional
-    @Retryable(include = {
-            ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX, backoff = @Backoff(delay = Constants.TX_RT_DELAY))
+    @Retryable(retryFor = { ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX,
+            backoff = @Backoff(delay = Constants.TX_RT_DELAY))
     public void delete(final Collection<Long> ids) {
         final List<JpaDistributionSetTag> setsFound = distributionSetTagRepository.findAllById(ids);
 
         if (setsFound.size() < ids.size()) {
-            throw new EntityNotFoundException(DistributionSetTag.class, ids,
-                    setsFound.stream().map(DistributionSetTag::getId).collect(Collectors.toList()));
+            throw new EntityNotFoundException(
+                    DistributionSetTag.class, ids,
+                    setsFound.stream().map(DistributionSetTag::getId).toList());
         }
 
         distributionSetTagRepository.deleteAll(setsFound);
-    }
-
-    @Override
-    public List<DistributionSetTag> get(final Collection<Long> ids) {
-        return Collections.unmodifiableList(distributionSetTagRepository.findAllById(ids));
     }
 
     @Override
@@ -176,11 +137,8 @@ public class JpaDistributionSetTagManagement implements DistributionSetTagManage
     }
 
     @Override
-    @Transactional
-    @Retryable(include = {
-            ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX, backoff = @Backoff(delay = Constants.TX_RT_DELAY))
-    public void delete(final long id) {
-        distributionSetTagRepository.deleteById(id);
+    public List<DistributionSetTag> get(final Collection<Long> ids) {
+        return Collections.unmodifiableList(distributionSetTagRepository.findAllById(ids));
     }
 
     @Override
@@ -191,5 +149,45 @@ public class JpaDistributionSetTagManagement implements DistributionSetTagManage
     @Override
     public long count() {
         return distributionSetTagRepository.count();
+    }
+
+
+    @Override
+    public Slice<DistributionSetTag> findAll(final Pageable pageable) {
+        return JpaManagementHelper.findAllWithoutCountBySpec(distributionSetTagRepository, pageable, null);
+    }
+
+    @Override
+    public Page<DistributionSetTag> findByRsql(final String rsqlParam, final Pageable pageable) {
+        final Specification<JpaDistributionSetTag> spec = RSQLUtility.buildRsqlSpecification(
+                rsqlParam, DistributionSetTagFields.class, virtualPropertyReplacer, database);
+        return JpaManagementHelper.findAllWithCountBySpec(distributionSetTagRepository, Collections.singletonList(spec), pageable);
+    }
+
+    @Override
+    public Optional<DistributionSetTag> findByName(final String name) {
+        return distributionSetTagRepository.findByNameEquals(name);
+    }
+
+    @Override
+    public Page<DistributionSetTag> findByDistributionSet(final Pageable pageable, final long distributionSetId) {
+        if (!distributionSetRepository.existsById(distributionSetId)) {
+            throw new EntityNotFoundException(DistributionSet.class, distributionSetId);
+        }
+
+        return JpaManagementHelper.findAllWithCountBySpec(distributionSetTagRepository,
+                Collections.singletonList(TagSpecification.ofDistributionSet(distributionSetId)), pageable
+        );
+    }
+
+    @Override
+    @Transactional
+    @Retryable(retryFor = { ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX,
+            backoff = @Backoff(delay = Constants.TX_RT_DELAY))
+    public void delete(final String tagName) {
+        final JpaDistributionSetTag dsTag = distributionSetTagRepository
+                .findOne(DistributionSetTagSpecifications.byName(tagName))
+                .orElseThrow(() -> new EntityNotFoundException(DistributionSetTag.class, tagName));
+        distributionSetTagRepository.delete(dsTag);
     }
 }
