@@ -19,10 +19,7 @@ import java.util.stream.Collectors;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.criteria.CriteriaBuilder;
 import jakarta.persistence.criteria.CriteriaQuery;
-import jakarta.persistence.criteria.Join;
-import jakarta.persistence.criteria.JoinType;
 import jakarta.persistence.criteria.ListJoin;
-import jakarta.persistence.criteria.Order;
 import jakarta.persistence.criteria.Predicate;
 import jakarta.persistence.criteria.Root;
 
@@ -32,11 +29,9 @@ import org.eclipse.hawkbit.repository.RolloutStatusCache;
 import org.eclipse.hawkbit.repository.TargetFields;
 import org.eclipse.hawkbit.repository.exception.EntityNotFoundException;
 import org.eclipse.hawkbit.repository.jpa.JpaManagementHelper;
-import org.eclipse.hawkbit.repository.jpa.model.JpaAction;
-import org.eclipse.hawkbit.repository.jpa.model.JpaAction_;
+import org.eclipse.hawkbit.repository.jpa.model.AbstractJpaBaseEntity_;
 import org.eclipse.hawkbit.repository.jpa.model.JpaRolloutGroup;
 import org.eclipse.hawkbit.repository.jpa.model.JpaRolloutGroup_;
-import org.eclipse.hawkbit.repository.jpa.model.JpaRollout_;
 import org.eclipse.hawkbit.repository.jpa.model.JpaTarget;
 import org.eclipse.hawkbit.repository.jpa.model.JpaTarget_;
 import org.eclipse.hawkbit.repository.jpa.model.RolloutTargetGroup;
@@ -47,21 +42,17 @@ import org.eclipse.hawkbit.repository.jpa.repository.RolloutRepository;
 import org.eclipse.hawkbit.repository.jpa.repository.TargetRepository;
 import org.eclipse.hawkbit.repository.jpa.rsql.RSQLUtility;
 import org.eclipse.hawkbit.repository.jpa.specifications.TargetSpecifications;
-import org.eclipse.hawkbit.repository.model.Action;
 import org.eclipse.hawkbit.repository.model.Rollout;
 import org.eclipse.hawkbit.repository.model.Rollout.RolloutStatus;
 import org.eclipse.hawkbit.repository.model.RolloutGroup;
 import org.eclipse.hawkbit.repository.model.Target;
-import org.eclipse.hawkbit.repository.model.TargetWithActionStatus;
 import org.eclipse.hawkbit.repository.model.TotalTargetCountActionStatus;
 import org.eclipse.hawkbit.repository.model.TotalTargetCountStatus;
 import org.eclipse.hawkbit.repository.rsql.VirtualPropertyReplacer;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
 import org.springframework.data.jpa.domain.Specification;
-import org.springframework.data.jpa.repository.query.QueryUtils;
 import org.springframework.orm.jpa.vendor.Database;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.CollectionUtils;
@@ -75,26 +66,20 @@ import org.springframework.validation.annotation.Validated;
 public class JpaRolloutGroupManagement implements RolloutGroupManagement {
 
     private final RolloutGroupRepository rolloutGroupRepository;
-
     private final RolloutRepository rolloutRepository;
-
     private final ActionRepository actionRepository;
-
     private final TargetRepository targetRepository;
-
     private final EntityManager entityManager;
-
     private final VirtualPropertyReplacer virtualPropertyReplacer;
-
     private final RolloutStatusCache rolloutStatusCache;
-
     private final Database database;
 
+    @SuppressWarnings("java:S107")
     public JpaRolloutGroupManagement(final RolloutGroupRepository rolloutGroupRepository,
-                              final RolloutRepository rolloutRepository, final ActionRepository actionRepository,
-                              final TargetRepository targetRepository, final EntityManager entityManager,
-                              final VirtualPropertyReplacer virtualPropertyReplacer, final RolloutStatusCache rolloutStatusCache,
-                              final Database database) {
+            final RolloutRepository rolloutRepository, final ActionRepository actionRepository,
+            final TargetRepository targetRepository, final EntityManager entityManager,
+            final VirtualPropertyReplacer virtualPropertyReplacer, final RolloutStatusCache rolloutStatusCache,
+            final Database database) {
         this.rolloutGroupRepository = rolloutGroupRepository;
         this.rolloutRepository = rolloutRepository;
         this.actionRepository = actionRepository;
@@ -106,55 +91,20 @@ public class JpaRolloutGroupManagement implements RolloutGroupManagement {
     }
 
     @Override
-    public Optional<RolloutGroup> get(final long rolloutGroupId) {
-        return rolloutGroupRepository.findById(rolloutGroupId).map(RolloutGroup.class::cast);
-    }
-
-    @Override
-    public Page<RolloutGroup> findByRollout(final Pageable pageable, final long rolloutId) {
-        throwEntityNotFoundExceptionIfRolloutDoesNotExist(rolloutId);
-
-        return JpaManagementHelper.convertPage(rolloutGroupRepository.findByRolloutId(rolloutId, pageable), pageable);
-    }
-
-    @Override
-    public Page<RolloutGroup> findByRolloutAndRsql(final Pageable pageable, final long rolloutId,
-            final String rsqlParam) {
-        throwEntityNotFoundExceptionIfRolloutDoesNotExist(rolloutId);
-
-        final List<Specification<JpaRolloutGroup>> specList = Arrays.asList(
-                RSQLUtility.buildRsqlSpecification(rsqlParam, RolloutGroupFields.class, virtualPropertyReplacer,
-                        database),
-                (root, query, cb) -> cb.equal(root.get(JpaRolloutGroup_.rollout).get(JpaRollout_.id), rolloutId));
-
-        return JpaManagementHelper.findAllWithCountBySpec(rolloutGroupRepository, pageable, specList);
-    }
-
-    private void throwEntityNotFoundExceptionIfRolloutDoesNotExist(final Long rolloutId) {
-        if (!rolloutRepository.existsById(rolloutId)) {
-            throw new EntityNotFoundException(Rollout.class, rolloutId);
-        }
-    }
-
-    @Override
-    public Page<RolloutGroup> findByRolloutWithDetailedStatus(final Pageable pageable, final long rolloutId) {
+    public Page<RolloutGroup> findByRolloutWithDetailedStatus(final long rolloutId, final Pageable pageable) {
         throwEntityNotFoundExceptionIfRolloutDoesNotExist(rolloutId);
 
         final Page<JpaRolloutGroup> rolloutGroups = rolloutGroupRepository.findByRolloutId(rolloutId, pageable);
-        final List<Long> rolloutGroupIds = rolloutGroups.getContent().stream().map(RolloutGroup::getId)
-                .collect(Collectors.toList());
-
+        final List<Long> rolloutGroupIds = rolloutGroups.getContent().stream().map(RolloutGroup::getId).toList();
         if (rolloutGroupIds.isEmpty()) {
             // groups might have been already deleted, so return empty list.
             return new PageImpl<>(Collections.emptyList());
         }
 
-        final Map<Long, List<TotalTargetCountActionStatus>> allStatesForRollout = getStatusCountItemForRolloutGroup(
-                rolloutGroupIds);
-
+        final Map<Long, List<TotalTargetCountActionStatus>> allStatesForRollout = getStatusCountItemForRolloutGroup(rolloutGroupIds);
         for (final JpaRolloutGroup rolloutGroup : rolloutGroups) {
             final TotalTargetCountStatus totalTargetCountStatus = new TotalTargetCountStatus(
-                    allStatesForRollout.get(rolloutGroup.getId()), (long)rolloutGroup.getTotalTargets(),
+                    allStatesForRollout.get(rolloutGroup.getId()), (long) rolloutGroup.getTotalTargets(),
                     rolloutGroup.getRollout().getActionType());
             rolloutGroup.setTotalTargetCountStatus(totalTargetCountStatus);
         }
@@ -163,25 +113,37 @@ public class JpaRolloutGroupManagement implements RolloutGroupManagement {
     }
 
     @Override
-    public Page<RolloutGroup> findByRolloutAndRsqlWithDetailedStatus(final Pageable pageable, final long rolloutId,
-            final String rsqlParam) {
+    public Optional<RolloutGroup> get(final long rolloutGroupId) {
+        return rolloutGroupRepository.findById(rolloutGroupId).map(RolloutGroup.class::cast);
+    }
+
+    @Override
+    public Page<RolloutGroup> findByRolloutAndRsql(final long rolloutId, final String rsqlParam, final Pageable pageable) {
         throwEntityNotFoundExceptionIfRolloutDoesNotExist(rolloutId);
 
-        final Page<RolloutGroup> rolloutGroups = findByRolloutAndRsql(pageable, rolloutId, rsqlParam);
-        final List<Long> rolloutGroupIds = rolloutGroups.getContent().stream().map(RolloutGroup::getId)
-                .collect(Collectors.toList());
+        final List<Specification<JpaRolloutGroup>> specList = Arrays.asList(
+                RSQLUtility.buildRsqlSpecification(rsqlParam, RolloutGroupFields.class, virtualPropertyReplacer,
+                        database),
+                (root, query, cb) -> cb.equal(root.get(JpaRolloutGroup_.rollout).get(AbstractJpaBaseEntity_.id), rolloutId));
 
+        return JpaManagementHelper.findAllWithCountBySpec(rolloutGroupRepository, specList, pageable);
+    }
+
+    @Override
+    public Page<RolloutGroup> findByRolloutAndRsqlWithDetailedStatus(final long rolloutId, final String rsqlParam, final Pageable pageable) {
+        throwEntityNotFoundExceptionIfRolloutDoesNotExist(rolloutId);
+
+        final Page<RolloutGroup> rolloutGroups = findByRolloutAndRsql(rolloutId, rsqlParam, pageable);
+        final List<Long> rolloutGroupIds = rolloutGroups.getContent().stream().map(RolloutGroup::getId).toList();
         if (rolloutGroupIds.isEmpty()) {
-            // groups might already deleted, so return empty list.
+            // groups might already have been deleted, so return empty list.
             return new PageImpl<>(Collections.emptyList());
         }
 
-        final Map<Long, List<TotalTargetCountActionStatus>> allStatesForRollout = getStatusCountItemForRolloutGroup(
-                rolloutGroupIds);
-
+        final Map<Long, List<TotalTargetCountActionStatus>> allStatesForRollout = getStatusCountItemForRolloutGroup(rolloutGroupIds);
         for (final RolloutGroup rolloutGroup : rolloutGroups) {
             final TotalTargetCountStatus totalTargetCountStatus = new TotalTargetCountStatus(
-                    allStatesForRollout.get(rolloutGroup.getId()), Long.valueOf(rolloutGroup.getTotalTargets()),
+                    allStatesForRollout.get(rolloutGroup.getId()), (long) rolloutGroup.getTotalTargets(),
                     rolloutGroup.getRollout().getActionType());
             ((JpaRolloutGroup) rolloutGroup).setTotalTargetCountStatus(totalTargetCountStatus);
         }
@@ -190,10 +152,56 @@ public class JpaRolloutGroupManagement implements RolloutGroupManagement {
     }
 
     @Override
+    public Page<RolloutGroup> findByRollout(final long rolloutId, final Pageable pageable) {
+        throwEntityNotFoundExceptionIfRolloutDoesNotExist(rolloutId);
+
+        return JpaManagementHelper.convertPage(rolloutGroupRepository.findByRolloutId(rolloutId, pageable), pageable);
+    }
+
+    @Override
+    public long countByRollout(final long rolloutId) {
+        throwEntityNotFoundExceptionIfRolloutDoesNotExist(rolloutId);
+
+        return rolloutGroupRepository.countByRolloutId(rolloutId);
+    }
+
+    @Override
+    public Page<Target> findTargetsOfRolloutGroup(final long rolloutGroupId, final Pageable page) {
+        final JpaRolloutGroup rolloutGroup = rolloutGroupRepository.findById(rolloutGroupId)
+                .orElseThrow(() -> new EntityNotFoundException(RolloutGroup.class, rolloutGroupId));
+
+        if (isRolloutStatusReady(rolloutGroup)) {
+            // in case of status ready the action has not been created yet and
+            // the relation information between target and rollout-group is
+            // stored in the #TargetRolloutGroup.
+            return JpaManagementHelper.findAllWithCountBySpec(
+                    targetRepository,
+                    Collections.singletonList(TargetSpecifications.isInRolloutGroup(rolloutGroupId)), page
+            );
+        }
+        return JpaManagementHelper.findAllWithCountBySpec(targetRepository,
+                Collections.singletonList(TargetSpecifications.isInActionRolloutGroup(rolloutGroupId)), page
+        );
+    }
+
+    @Override
+    public Page<Target> findTargetsOfRolloutGroupByRsql(final Pageable pageable, final long rolloutGroupId, final String rsqlParam) {
+        throwExceptionIfRolloutGroupDoesNotExist(rolloutGroupId);
+
+        final List<Specification<JpaTarget>> specList = Arrays.asList(
+                RSQLUtility.buildRsqlSpecification(rsqlParam, TargetFields.class, virtualPropertyReplacer, database),
+                (root, query, cb) -> {
+                    final ListJoin<JpaTarget, RolloutTargetGroup> rolloutTargetJoin = root.join(JpaTarget_.rolloutTargetGroup);
+                    return cb.equal(rolloutTargetJoin.get(RolloutTargetGroup_.rolloutGroup).get(AbstractJpaBaseEntity_.id), rolloutGroupId);
+                });
+
+        return JpaManagementHelper.findAllWithCountBySpec(targetRepository, specList, pageable);
+    }
+
+    @Override
     public Optional<RolloutGroup> getWithDetailedStatus(final long rolloutGroupId) {
         final Optional<RolloutGroup> rolloutGroup = get(rolloutGroupId);
-
-        if (!rolloutGroup.isPresent()) {
+        if (rolloutGroup.isEmpty()) {
             return rolloutGroup;
         }
 
@@ -207,124 +215,11 @@ public class JpaRolloutGroupManagement implements RolloutGroupManagement {
             rolloutStatusCache.putRolloutGroupStatus(rolloutGroupId, rolloutStatusCountItems);
         }
 
-        final TotalTargetCountStatus totalTargetCountStatus = new TotalTargetCountStatus(rolloutStatusCountItems,
-                Long.valueOf(jpaRolloutGroup.getTotalTargets()), jpaRolloutGroup.getRollout().getActionType());
+        final TotalTargetCountStatus totalTargetCountStatus = new TotalTargetCountStatus(
+                rolloutStatusCountItems, (long) jpaRolloutGroup.getTotalTargets(), jpaRolloutGroup.getRollout().getActionType());
         jpaRolloutGroup.setTotalTargetCountStatus(totalTargetCountStatus);
         return rolloutGroup;
 
-    }
-
-    private Map<Long, List<TotalTargetCountActionStatus>> getStatusCountItemForRolloutGroup(final List<Long> groupIds) {
-        final Map<Long, List<TotalTargetCountActionStatus>> fromCache = rolloutStatusCache
-                .getRolloutGroupStatus(groupIds);
-
-        final List<Long> rolloutGroupIds = groupIds.stream().filter(id -> !fromCache.containsKey(id))
-                .collect(Collectors.toList());
-
-        if (!rolloutGroupIds.isEmpty()) {
-            final List<TotalTargetCountActionStatus> resultList = actionRepository
-                    .getStatusCountByRolloutGroupId(rolloutGroupIds);
-            final Map<Long, List<TotalTargetCountActionStatus>> fromDb = resultList.stream()
-                    .collect(Collectors.groupingBy(TotalTargetCountActionStatus::getId));
-
-            rolloutStatusCache.putRolloutGroupStatus(fromDb);
-
-            fromCache.putAll(fromDb);
-        }
-
-        return fromCache;
-    }
-
-    @Override
-    public Page<Target> findTargetsOfRolloutGroupByRsql(final Pageable pageable, final long rolloutGroupId,
-            final String rsqlParam) {
-        throwExceptionIfRolloutGroupDoesNotExist(rolloutGroupId);
-
-        final List<Specification<JpaTarget>> specList = Arrays.asList(
-                RSQLUtility.buildRsqlSpecification(rsqlParam, TargetFields.class, virtualPropertyReplacer, database),
-                (root, query, cb) -> {
-                    final ListJoin<JpaTarget, RolloutTargetGroup> rolloutTargetJoin = root
-                            .join(JpaTarget_.rolloutTargetGroup);
-                    return cb.equal(rolloutTargetJoin.get(RolloutTargetGroup_.rolloutGroup).get(JpaRolloutGroup_.id),
-                            rolloutGroupId);
-                });
-
-        return JpaManagementHelper.findAllWithCountBySpec(targetRepository, pageable, specList);
-    }
-
-    @Override
-    public Page<Target> findTargetsOfRolloutGroup(final Pageable page, final long rolloutGroupId) {
-        final JpaRolloutGroup rolloutGroup = rolloutGroupRepository.findById(rolloutGroupId)
-                .orElseThrow(() -> new EntityNotFoundException(RolloutGroup.class, rolloutGroupId));
-
-        if (isRolloutStatusReady(rolloutGroup)) {
-            // in case of status ready the action has not been created yet and
-            // the relation information between target and rollout-group is
-            // stored in the #TargetRolloutGroup.
-            return JpaManagementHelper.findAllWithCountBySpec(targetRepository, page,
-                    Collections.singletonList(TargetSpecifications.isInRolloutGroup(rolloutGroupId)));
-        }
-        return JpaManagementHelper.findAllWithCountBySpec(targetRepository, page,
-                Collections.singletonList(TargetSpecifications.isInActionRolloutGroup(rolloutGroupId)));
-    }
-
-    private static boolean isRolloutStatusReady(final RolloutGroup rolloutGroup) {
-        return rolloutGroup != null && (RolloutStatus.READY == rolloutGroup.getRollout().getStatus());
-    }
-
-    @Override
-    public Page<TargetWithActionStatus> findAllTargetsOfRolloutGroupWithActionStatus(final Pageable pageRequest,
-            final long rolloutGroupId) {
-
-        throwExceptionIfRolloutGroupDoesNotExist(rolloutGroupId);
-
-        final CriteriaBuilder cb = entityManager.getCriteriaBuilder();
-        final CriteriaQuery<Object[]> query = cb.createQuery(Object[].class);
-        final Root<RolloutTargetGroup> targetRoot = query.distinct(true).from(RolloutTargetGroup.class);
-        final Join<RolloutTargetGroup, JpaTarget> targetJoin = targetRoot.join(RolloutTargetGroup_.target);
-        final ListJoin<RolloutTargetGroup, JpaAction> actionJoin = targetRoot.join(RolloutTargetGroup_.actions,
-                JoinType.LEFT);
-
-        final CriteriaQuery<Object[]> multiselect = query
-                .multiselect(targetJoin, actionJoin.get(JpaAction_.status),
-                        actionJoin.get(JpaAction_.lastActionStatusCode))
-                .where(getRolloutGroupTargetWithRolloutGroupJoinCondition(rolloutGroupId, cb, targetRoot))
-                .orderBy(getOrderBy(pageRequest, cb, targetJoin, actionJoin));
-        final List<TargetWithActionStatus> targetWithActionStatus = entityManager.createQuery(multiselect)
-                .setFirstResult((int) pageRequest.getOffset()).setMaxResults(pageRequest.getPageSize()).getResultList()
-                .stream().map(this::getTargetWithActionStatusFromQuery).collect(Collectors.toList());
-
-        return new PageImpl<>(targetWithActionStatus, pageRequest, 0);
-    }
-
-    private Predicate getRolloutGroupTargetWithRolloutGroupJoinCondition(final long rolloutGroupId,
-            final CriteriaBuilder cb, final Root<RolloutTargetGroup> targetRoot) {
-        return cb.equal(targetRoot.get(RolloutTargetGroup_.rolloutGroup).get(JpaRolloutGroup_.id), //
-                rolloutGroupId);
-    }
-
-    private TargetWithActionStatus getTargetWithActionStatusFromQuery(final Object[] o) {
-        return new TargetWithActionStatus((Target) o[0], (Action.Status) o[1], (Integer) o[2]);
-    }
-
-    private List<Order> getOrderBy(final Pageable pageRequest, final CriteriaBuilder cb,
-            final Join<RolloutTargetGroup, JpaTarget> targetJoin,
-            final ListJoin<RolloutTargetGroup, JpaAction> actionJoin) {
-
-        return pageRequest.getSort().get().flatMap(order -> {
-            final List<Order> orders;
-            final String property = order.getProperty();
-            // we consider status, last_action_status_code as property from
-            // JpaAction ...
-            if ("status".equals(property) || "lastActionStatusCode".equals(property)) {
-                orders = QueryUtils.toOrders(Sort.by(order.getDirection(), property), actionJoin, cb);
-            }
-            // ... and every other property from JpaTarget
-            else {
-                orders = QueryUtils.toOrders(Sort.by(order.getDirection(), property), targetJoin, cb);
-            }
-            return orders.stream();
-        }).collect(Collectors.toList());
     }
 
     @Override
@@ -339,17 +234,43 @@ public class JpaRolloutGroupManagement implements RolloutGroupManagement {
         return entityManager.createQuery(countQuery).getSingleResult();
     }
 
+    private static boolean isRolloutStatusReady(final RolloutGroup rolloutGroup) {
+        return rolloutGroup != null && (RolloutStatus.READY == rolloutGroup.getRollout().getStatus());
+    }
+
+    private void throwEntityNotFoundExceptionIfRolloutDoesNotExist(final Long rolloutId) {
+        if (!rolloutRepository.existsById(rolloutId)) {
+            throw new EntityNotFoundException(Rollout.class, rolloutId);
+        }
+    }
+
+    private Map<Long, List<TotalTargetCountActionStatus>> getStatusCountItemForRolloutGroup(final List<Long> groupIds) {
+        final Map<Long, List<TotalTargetCountActionStatus>> fromCache = rolloutStatusCache
+                .getRolloutGroupStatus(groupIds);
+
+        final List<Long> rolloutGroupIds = groupIds.stream().filter(id -> !fromCache.containsKey(id)).toList();
+        if (!rolloutGroupIds.isEmpty()) {
+            final List<TotalTargetCountActionStatus> resultList = actionRepository
+                    .getStatusCountByRolloutGroupIds(rolloutGroupIds);
+            final Map<Long, List<TotalTargetCountActionStatus>> fromDb = resultList.stream()
+                    .collect(Collectors.groupingBy(TotalTargetCountActionStatus::getId));
+
+            rolloutStatusCache.putRolloutGroupStatus(fromDb);
+
+            fromCache.putAll(fromDb);
+        }
+
+        return fromCache;
+    }
+
+    private Predicate getRolloutGroupTargetWithRolloutGroupJoinCondition(final long rolloutGroupId,
+            final CriteriaBuilder cb, final Root<RolloutTargetGroup> targetRoot) {
+        return cb.equal(targetRoot.get(RolloutTargetGroup_.rolloutGroup).get(AbstractJpaBaseEntity_.id), rolloutGroupId);
+    }
+
     private void throwExceptionIfRolloutGroupDoesNotExist(final Long rolloutGroupId) {
         if (!rolloutGroupRepository.existsById(rolloutGroupId)) {
             throw new EntityNotFoundException(RolloutGroup.class, rolloutGroupId);
         }
     }
-
-    @Override
-    public long countByRollout(final long rolloutId) {
-        throwEntityNotFoundExceptionIfRolloutDoesNotExist(rolloutId);
-
-        return rolloutGroupRepository.countByRolloutId(rolloutId);
-    }
-
 }
