@@ -18,15 +18,17 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.concurrent.CompletableFuture;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
 import jakarta.validation.ConstraintDeclarationException;
 import jakarta.validation.Valid;
 import jakarta.validation.ValidationException;
-
 import jakarta.validation.constraints.NotNull;
+
 import lombok.extern.slf4j.Slf4j;
+import org.eclipse.hawkbit.ContextAware;
 import org.eclipse.hawkbit.repository.DistributionSetManagement;
 import org.eclipse.hawkbit.repository.QuotaManagement;
 import org.eclipse.hawkbit.repository.RepositoryProperties;
@@ -37,7 +39,6 @@ import org.eclipse.hawkbit.repository.RolloutManagement;
 import org.eclipse.hawkbit.repository.RolloutStatusCache;
 import org.eclipse.hawkbit.repository.TargetManagement;
 import org.eclipse.hawkbit.repository.TenantConfigurationManagement;
-import org.eclipse.hawkbit.ContextAware;
 import org.eclipse.hawkbit.repository.builder.DynamicRolloutGroupTemplate;
 import org.eclipse.hawkbit.repository.builder.GenericRolloutUpdate;
 import org.eclipse.hawkbit.repository.builder.RolloutCreate;
@@ -51,6 +52,7 @@ import org.eclipse.hawkbit.repository.jpa.JpaManagementHelper;
 import org.eclipse.hawkbit.repository.jpa.builder.JpaRolloutGroupCreate;
 import org.eclipse.hawkbit.repository.jpa.configuration.Constants;
 import org.eclipse.hawkbit.repository.jpa.executor.AfterTransactionCommitExecutor;
+import org.eclipse.hawkbit.repository.jpa.model.AbstractJpaBaseEntity_;
 import org.eclipse.hawkbit.repository.jpa.model.JpaDistributionSet;
 import org.eclipse.hawkbit.repository.jpa.model.JpaRollout;
 import org.eclipse.hawkbit.repository.jpa.model.JpaRolloutGroup;
@@ -77,7 +79,6 @@ import org.eclipse.hawkbit.repository.model.TotalTargetCountStatus;
 import org.eclipse.hawkbit.repository.model.helper.EventPublisherHolder;
 import org.eclipse.hawkbit.repository.rsql.VirtualPropertyReplacer;
 import org.eclipse.hawkbit.security.SystemSecurityContext;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.dao.ConcurrencyFailureException;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -89,10 +90,8 @@ import org.springframework.orm.jpa.vendor.Database;
 import org.springframework.retry.annotation.Backoff;
 import org.springframework.retry.annotation.Retryable;
 import org.springframework.scheduling.annotation.Async;
-import org.springframework.scheduling.annotation.AsyncResult;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.CollectionUtils;
-import org.springframework.util.concurrent.ListenableFuture;
 import org.springframework.validation.annotation.Validated;
 
 /**
@@ -106,105 +105,105 @@ public class JpaRolloutManagement implements RolloutManagement {
     private static final List<RolloutStatus> ACTIVE_ROLLOUTS = Arrays.asList(RolloutStatus.CREATING,
             RolloutStatus.DELETING, RolloutStatus.STARTING, RolloutStatus.READY, RolloutStatus.RUNNING,
             RolloutStatus.STOPPING);
-
     private static final List<RolloutStatus> ROLLOUT_STATUS_STOPPABLE = Arrays.asList(RolloutStatus.RUNNING,
             RolloutStatus.CREATING, RolloutStatus.PAUSED, RolloutStatus.READY, RolloutStatus.STARTING,
             RolloutStatus.WAITING_FOR_APPROVAL, RolloutStatus.APPROVAL_DENIED);
 
-    @Autowired
-    private RepositoryProperties repositoryProperties;
-
-    @Autowired
-    private RolloutRepository rolloutRepository;
-
-    @Autowired
-    private RolloutGroupRepository rolloutGroupRepository;
-
-    @Autowired
-    private ActionRepository actionRepository;
-
-    @Autowired
-    private AfterTransactionCommitExecutor afterCommit;
-
-    @Autowired
-    private QuotaManagement quotaManagement;
-
-    @Autowired
-    private RolloutStatusCache rolloutStatusCache;
-
-    @Autowired
-    private StartNextGroupRolloutGroupSuccessAction startNextRolloutGroupAction;
-
+    private final RolloutRepository rolloutRepository;
+    private final RolloutGroupRepository rolloutGroupRepository;
+    private final RolloutApprovalStrategy rolloutApprovalStrategy;
+    private final StartNextGroupRolloutGroupSuccessAction startNextRolloutGroupAction;
+    private final RolloutStatusCache rolloutStatusCache;
+    private final ActionRepository actionRepository;
     private final TargetManagement targetManagement;
     private final DistributionSetManagement distributionSetManagement;
-    private final VirtualPropertyReplacer virtualPropertyReplacer;
-    private final RolloutApprovalStrategy rolloutApprovalStrategy;
     private final TenantConfigurationManagement tenantConfigurationManagement;
-    private final SystemSecurityContext systemSecurityContext;
+    private final QuotaManagement quotaManagement;
+    private final AfterTransactionCommitExecutor afterCommit;
     private final EventPublisherHolder eventPublisherHolder;
+    private final VirtualPropertyReplacer virtualPropertyReplacer;
+    private final SystemSecurityContext systemSecurityContext;
     private final ContextAware contextAware;
     private final Database database;
+    private final RepositoryProperties repositoryProperties;
 
-    public JpaRolloutManagement(final TargetManagement targetManagement,
-            final DistributionSetManagement distributionSetManagement, final EventPublisherHolder eventPublisherHolder,
-            final VirtualPropertyReplacer virtualPropertyReplacer, final Database database,
+    @SuppressWarnings("java:S107")
+    public JpaRolloutManagement(
+            final RolloutRepository rolloutRepository,
+            final RolloutGroupRepository rolloutGroupRepository,
             final RolloutApprovalStrategy rolloutApprovalStrategy,
+            final StartNextGroupRolloutGroupSuccessAction startNextRolloutGroupAction,
+            final RolloutStatusCache rolloutStatusCache,
+            final ActionRepository actionRepository,
+            final TargetManagement targetManagement,
+            final DistributionSetManagement distributionSetManagement,
             final TenantConfigurationManagement tenantConfigurationManagement,
-            final SystemSecurityContext systemSecurityContext,
-            final ContextAware contextAware) {
+            final QuotaManagement quotaManagement,
+            final AfterTransactionCommitExecutor afterCommit, final EventPublisherHolder eventPublisherHolder,
+            final VirtualPropertyReplacer virtualPropertyReplacer,
+            final SystemSecurityContext systemSecurityContext, final ContextAware contextAware, final Database database,
+            final RepositoryProperties repositoryProperties) {
+        this.rolloutRepository = rolloutRepository;
+        this.rolloutGroupRepository = rolloutGroupRepository;
+        this.rolloutApprovalStrategy = rolloutApprovalStrategy;
+        this.startNextRolloutGroupAction = startNextRolloutGroupAction;
+        this.rolloutStatusCache = rolloutStatusCache;
+        this.actionRepository = actionRepository;
         this.targetManagement = targetManagement;
         this.distributionSetManagement = distributionSetManagement;
-        this.virtualPropertyReplacer = virtualPropertyReplacer;
-        this.database = database;
-        this.rolloutApprovalStrategy = rolloutApprovalStrategy;
         this.tenantConfigurationManagement = tenantConfigurationManagement;
-        this.systemSecurityContext = systemSecurityContext;
+        this.quotaManagement = quotaManagement;
+        this.afterCommit = afterCommit;
         this.eventPublisherHolder = eventPublisherHolder;
+        this.virtualPropertyReplacer = virtualPropertyReplacer;
+        this.systemSecurityContext = systemSecurityContext;
         this.contextAware = contextAware;
+        this.database = database;
+        this.repositoryProperties = repositoryProperties;
+    }
+
+    public static String createRolloutLockKey(final String tenant) {
+        return tenant + "-rollout";
+    }
+
+    public void publishRolloutGroupCreatedEventAfterCommit(final RolloutGroup group, final Rollout rollout) {
+        afterCommit.afterCommit(() -> eventPublisherHolder.getEventPublisher().publishEvent(
+                new RolloutGroupCreatedEvent(group, rollout.getId(), eventPublisherHolder.getApplicationId())));
     }
 
     @Override
-    public Page<Rollout> findAll(final Pageable pageable, final boolean deleted) {
-        return JpaManagementHelper.findAllWithCountBySpec(rolloutRepository, pageable, Collections
-                .singletonList(RolloutSpecification.isDeletedWithDistributionSet(deleted, pageable.getSort())));
+    public long count() {
+        return rolloutRepository.count(RolloutSpecification.isDeleted(false, Sort.by(Direction.DESC, AbstractJpaBaseEntity_.ID)));
     }
 
     @Override
-    public Page<Rollout> findByRsql(final Pageable pageable, final String rsqlParam, final boolean deleted) {
-        final List<Specification<JpaRollout>> specList = new ArrayList<>(2);
-        specList.add(
-                RSQLUtility.buildRsqlSpecification(rsqlParam, RolloutFields.class, virtualPropertyReplacer, database));
-        specList.add(RolloutSpecification.isDeletedWithDistributionSet(deleted, pageable.getSort()));
-
-        return JpaManagementHelper.findAllWithCountBySpec(rolloutRepository, pageable, specList);
+    public long countByFilters(final String searchText) {
+        return rolloutRepository.count(RolloutSpecification.likeName(searchText, false));
     }
 
     @Override
-    public Optional<Rollout> get(final long rolloutId) {
-        return rolloutRepository.findById(rolloutId).map(Rollout.class::cast);
-    }
-
-    @Override
-    @Transactional
-    @Retryable(include = {
-            ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX, backoff = @Backoff(delay = Constants.TX_RT_DELAY))
-    public Rollout create(@NotNull @Valid RolloutCreate create, int amountGroup, boolean confirmationRequired,
-            @NotNull RolloutGroupConditions conditions) {
-        return create(create, amountGroup, confirmationRequired, conditions, null);
+    public long countByDistributionSetIdAndRolloutIsStoppable(final long setId) {
+        return rolloutRepository.countByDistributionSetIdAndStatusIn(setId, ROLLOUT_STATUS_STOPPABLE);
     }
 
     @Override
     @Transactional
-    @Retryable(include = {
-            ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX, backoff = @Backoff(delay = Constants.TX_RT_DELAY))
-    public Rollout create(final RolloutCreate rollout, final int amountGroup, final boolean confirmationRequired,
+    @Retryable(retryFor = { ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX,
+            backoff = @Backoff(delay = Constants.TX_RT_DELAY))
+    public Rollout create(
+            final RolloutCreate rollout, final int amountGroup, final boolean confirmationRequired,
+            final RolloutGroupConditions conditions, final DynamicRolloutGroupTemplate dynamicRolloutGroupTemplate) {
+        return create0(rollout, amountGroup, confirmationRequired, conditions, dynamicRolloutGroupTemplate);
+    }
+    private Rollout create0(
+            final RolloutCreate rollout, final int amountGroup, final boolean confirmationRequired,
             final RolloutGroupConditions conditions, final DynamicRolloutGroupTemplate dynamicRolloutGroupTemplate) {
         if (amountGroup < 0) {
             throw new ValidationException("The amount of groups cannot be lower than or equal to zero for static rollouts");
         } else if (amountGroup == 0) {
             if (dynamicRolloutGroupTemplate == null) {
                 throw new ValidationException(
-                    "When amount of groups is 0, the rollouts shall be dynamic and a dynamic group template must be provided");
+                        "When amount of groups is 0, the rollouts shall be dynamic and a dynamic group template must be provided");
             }
         } else {
             RolloutHelper.verifyRolloutGroupAmount(amountGroup, quotaManagement);
@@ -215,193 +214,301 @@ public class JpaRolloutManagement implements RolloutManagement {
             throw new ValidationException("Dynamic group template is only allowed for dynamic rollouts");
         }
 
-        final JpaRollout savedRollout = createRollout(rolloutRequest, amountGroup == 0);
-        return createRolloutGroups(amountGroup, conditions, savedRollout, confirmationRequired, dynamicRolloutGroupTemplate);
+        return createRolloutGroups(
+                amountGroup, conditions, createRollout(rolloutRequest, amountGroup == 0), confirmationRequired, dynamicRolloutGroupTemplate);
     }
 
     @Override
     @Transactional
-    @Retryable(include = {
-            ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX, backoff = @Backoff(delay = Constants.TX_RT_DELAY))
-    public Rollout create(final RolloutCreate rollout, final List<RolloutGroupCreate> groups,
-            final RolloutGroupConditions conditions) {
+    @Retryable(retryFor = { ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX,
+            backoff = @Backoff(delay = Constants.TX_RT_DELAY))
+    public Rollout create(
+            @NotNull @Valid RolloutCreate create, int amountGroup, boolean confirmationRequired,
+            @NotNull RolloutGroupConditions conditions) {
+        return create0(create, amountGroup, confirmationRequired, conditions, null);
+    }
+
+    @Override
+    @Transactional
+    @Retryable(retryFor = { ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX,
+            backoff = @Backoff(delay = Constants.TX_RT_DELAY))
+    public Rollout create(final RolloutCreate rollout, final List<RolloutGroupCreate> groups, final RolloutGroupConditions conditions) {
         if (groups.isEmpty()) {
             throw new ValidationException("The amount of groups cannot be 0");
         }
         RolloutHelper.verifyRolloutGroupAmount(groups.size(), quotaManagement);
-        final JpaRollout rolloutRequest = (JpaRollout) rollout.build();
-        final JpaRollout savedRollout = createRollout(rolloutRequest, false);
-        return createRolloutGroups(groups, conditions, savedRollout);
+        return createRolloutGroups(groups, conditions, createRollout((JpaRollout) rollout.build(), false));
     }
 
-    private JpaRollout createRollout(final JpaRollout rollout, final boolean pureDynamic) {
-        WeightValidationHelper.usingContext(systemSecurityContext, tenantConfigurationManagement).validate(rollout);
-        final JpaDistributionSet distributionSet = (JpaDistributionSet) rollout.getDistributionSet();
+    @Override
+    @Async
+    public CompletableFuture<RolloutGroupsValidation> validateTargetsInGroups(
+            final List<RolloutGroupCreate> groups, final String targetFilter, final Long createdAt, final Long dsTypeId) {
 
-        if (pureDynamic) {
-            rollout.setTotalTargets(0);
-        } else {
-            final long totalTargets;
-            final String errMsg;
-            if (RolloutHelper.isRolloutRetried(rollout.getTargetFilterQuery())) {
-                totalTargets = targetManagement.countByFailedInRollout(
-                        RolloutHelper.getIdFromRetriedTargetFilter(rollout.getTargetFilterQuery()),
-                        distributionSet.getType().getId());
-                errMsg = "No failed targets in Rollout";
-            } else {
-                totalTargets = targetManagement.countByRsqlAndCompatible(rollout.getTargetFilterQuery(),
-                        distributionSet.getType().getId());
-                errMsg = "Rollout does not match any existing targets";
+        final TargetCount targets = calculateTargets(targetFilter, createdAt, dsTypeId);
+        long totalTargets = targets.total();
+        final String baseFilter = targets.filter();
+
+        if (totalTargets == 0) {
+            throw new ConstraintDeclarationException("Rollout target filter does not match any targets");
+        }
+
+        return CompletableFuture.completedFuture(
+                validateTargetsInGroups(groups.stream().map(RolloutGroupCreate::build).toList(), baseFilter, totalTargets, dsTypeId));
+    }
+
+    @Override
+    public Page<Rollout> findAll(final Pageable pageable, final boolean deleted) {
+        return JpaManagementHelper.convertPage(
+                rolloutRepository.findAll(RolloutSpecification.isDeleted(deleted, pageable.getSort()), pageable), pageable);
+    }
+
+    @Override
+    public Slice<Rollout> findAllWithDetailedStatus(final Pageable pageable, final boolean deleted) {
+        final Slice<Rollout> rollouts = JpaManagementHelper.convertPage(
+                rolloutRepository.findAll(RolloutSpecification.isDeleted(deleted, pageable.getSort()), JpaRollout_.GRAPH_ROLLOUT_DS, pageable), pageable);
+        setRolloutStatusDetails(rollouts);
+        return rollouts;
+    }
+
+    @Override
+    public Page<Rollout> findByRsql(final Pageable pageable, final String rsqlParam, final boolean deleted) {
+        final List<Specification<JpaRollout>> specList = new ArrayList<>(2);
+        specList.add(RSQLUtility.buildRsqlSpecification(rsqlParam, RolloutFields.class, virtualPropertyReplacer, database));
+        specList.add(RolloutSpecification.isDeleted(deleted, pageable.getSort()));
+        return JpaManagementHelper.convertPage(
+                rolloutRepository.findAll(JpaManagementHelper.combineWithAnd(specList), JpaRollout_.GRAPH_ROLLOUT_DS, pageable), pageable);
+    }
+
+    @Override
+    public Slice<Rollout> findByFiltersWithDetailedStatus(final Pageable pageable, final String searchText,
+            final boolean deleted) {
+        final Slice<Rollout> findAll = JpaManagementHelper.findAllWithoutCountBySpec(rolloutRepository, pageable,
+                Collections.singletonList(RolloutSpecification.likeName(searchText, deleted)));
+        setRolloutStatusDetails(findAll);
+        return findAll;
+    }
+
+    @Override
+    public List<Long> findActiveRollouts() {
+        return rolloutRepository.findByStatusIn(ACTIVE_ROLLOUTS);
+    }
+
+    @Override
+    public Optional<Rollout> get(final long rolloutId) {
+        return rolloutRepository.findById(rolloutId).map(Rollout.class::cast);
+    }
+
+    @Override
+    public Optional<Rollout> getByName(final String rolloutName) {
+        return rolloutRepository.findByName(rolloutName);
+    }
+
+    @Override
+    public Optional<Rollout> getWithDetailedStatus(final long rolloutId) {
+        final Optional<Rollout> rollout = get(rolloutId);
+        if (rollout.isEmpty()) {
+            return rollout;
+        }
+
+        List<TotalTargetCountActionStatus> rolloutStatusCountItems = rolloutStatusCache.getRolloutStatus(rolloutId);
+
+        if (CollectionUtils.isEmpty(rolloutStatusCountItems)) {
+            rolloutStatusCountItems = actionRepository.getStatusCountByRolloutId(rolloutId);
+            rolloutStatusCache.putRolloutStatus(rolloutId, rolloutStatusCountItems);
+        }
+
+        final TotalTargetCountStatus totalTargetCountStatus = new TotalTargetCountStatus(rolloutStatusCountItems,
+                rollout.get().getTotalTargets(), rollout.get().getActionType());
+        ((JpaRollout) rollout.get()).setTotalTargetCountStatus(totalTargetCountStatus);
+        return rollout;
+    }
+
+    @Override
+    public boolean exists(final long rolloutId) {
+        return rolloutRepository.existsById(rolloutId);
+    }
+
+    @Override
+    @Transactional
+    @Retryable(retryFor = { ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX,
+            backoff = @Backoff(delay = Constants.TX_RT_DELAY))
+    public void pauseRollout(final long rolloutId) {
+        final JpaRollout rollout = getRolloutOrThrowExceptionIfNotFound(rolloutId);
+        if (RolloutStatus.RUNNING != rollout.getStatus()) {
+            throw new RolloutIllegalStateException("Rollout can only be paused in state running but current state is " +
+                    rollout.getStatus().name().toLowerCase());
+        }
+        // setting the complete rollout only in paused state. This is sufficient due the currently running groups will be completed and
+        // new groups are not started until rollout goes back to running state again. The periodically check for running rollouts will skip
+        // rollouts in pause state.
+        rollout.setStatus(RolloutStatus.PAUSED);
+        rolloutRepository.save(rollout);
+    }
+
+    @Override
+    @Transactional
+    @Retryable(retryFor = { ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX,
+            backoff = @Backoff(delay = Constants.TX_RT_DELAY))
+    public void resumeRollout(final long rolloutId) {
+        final JpaRollout rollout = getRolloutOrThrowExceptionIfNotFound(rolloutId);
+        if (RolloutStatus.PAUSED != rollout.getStatus()) {
+            throw new RolloutIllegalStateException("Rollout can only be resumed in state paused but current state is " +
+                    rollout.getStatus().name().toLowerCase());
+        }
+        rollout.setStatus(RolloutStatus.RUNNING);
+        rolloutRepository.save(rollout);
+    }
+
+    @Override
+    @Transactional
+    @Retryable(retryFor = { ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX,
+            backoff = @Backoff(delay = Constants.TX_RT_DELAY))
+    public Rollout approveOrDeny(final long rolloutId, final Rollout.ApprovalDecision decision) {
+        return approveOrDeny0(rolloutId, decision, null);
+    }
+
+    @Override
+    @Transactional
+    @Retryable(retryFor = { ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX,
+            backoff = @Backoff(delay = Constants.TX_RT_DELAY))
+    public Rollout approveOrDeny(final long rolloutId, final Rollout.ApprovalDecision decision, final String remark) {
+        return approveOrDeny0(rolloutId, decision, remark);
+    }
+    private Rollout approveOrDeny0(final long rolloutId, final Rollout.ApprovalDecision decision, final String remark) {
+        log.debug("approveOrDeny rollout called for rollout {} with decision {}", rolloutId, decision);
+        final JpaRollout rollout = getRolloutOrThrowExceptionIfNotFound(rolloutId);
+        RolloutHelper.verifyRolloutInStatus(rollout, RolloutStatus.WAITING_FOR_APPROVAL);
+        switch (decision) {
+            case APPROVED: {
+                rollout.setStatus(RolloutStatus.READY);
+                break;
             }
-            if (totalTargets == 0) {
-                throw new ValidationException(errMsg);
+            case DENIED: {
+                rollout.setStatus(RolloutStatus.APPROVAL_DENIED);
+                break;
             }
-            rollout.setTotalTargets(totalTargets);
+            default: {
+                throw new IllegalArgumentException("Unknown approval decision: " + decision);
+            }
         }
-
-        if (((JpaDistributionSetManagement)distributionSetManagement).isImplicitLockApplicable(distributionSet)) {
-            distributionSetManagement.lock(distributionSet.getId());
+        rollout.setApprovalDecidedBy(rolloutApprovalStrategy.getApprovalUser(rollout));
+        if (remark != null) {
+            rollout.setApprovalRemark(remark);
         }
-
-        if (rollout.getWeight().isEmpty()) {
-            rollout.setWeight(repositoryProperties.getActionWeightIfAbsent());
-        }
-        contextAware.getCurrentContext().ifPresent(rollout::setAccessControlContext);
         return rolloutRepository.save(rollout);
     }
 
-    private Rollout createRolloutGroups(final int amountOfGroups, final RolloutGroupConditions conditions,
-            final JpaRollout rollout, final boolean isConfirmationRequired, final DynamicRolloutGroupTemplate dynamicRolloutGroupTemplate) {
-        RolloutHelper.verifyRolloutInStatus(rollout, RolloutStatus.CREATING);
-        RolloutHelper.verifyRolloutGroupConditions(conditions);
+    @Override
+    @Transactional
+    @Retryable(retryFor = { ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX,
+            backoff = @Backoff(delay = Constants.TX_RT_DELAY))
+    public Rollout start(final long rolloutId) {
+        log.debug("startRollout called for rollout {}", rolloutId);
 
-        RolloutGroup lastSavedGroup = null;
-        if (amountOfGroups == 0) {
-            if (dynamicRolloutGroupTemplate == null) {
-                throw new ConstraintDeclarationException(
-                        "At least one static rollout group must be defined for a static rollout");
-            }
-        } else {
-            // we can enforce the 'max targets per group' quota right here because
-            // we want to distribute the targets equally to the different groups
-            assertTargetsPerRolloutGroupQuota(rollout.getTotalTargets() / amountOfGroups);
-
-            for (int i = 0; i < amountOfGroups; i++) {
-                final String nameAndDesc = "group-" + (i + 1);
-                final JpaRolloutGroup group = new JpaRolloutGroup();
-                group.setName(nameAndDesc);
-                group.setDescription(nameAndDesc);
-                group.setRollout(rollout);
-                group.setParent(lastSavedGroup);
-                group.setStatus(RolloutGroupStatus.CREATING);
-                group.setConfirmationRequired(isConfirmationRequired);
-
-                addSuccessAndErrorConditionsAndActions(group, conditions);
-
-                // total percent of the all devices. Before, it was relative percent -
-                // the percent of the "rest" of the devices. Thus, if you have
-                // first a group 10% (the rest is 90%) and the second group is 50%
-                // then the percent would be 50% of 90% - 45%.
-                // This is very unintuitive and is switched in order to be interpreted easier.
-                // the "new style" (vs "old style") rollouts could be detected by
-                // JpaRollout#isNewStyleTargetPercent (which uses that old style rollouts
-                // have null as dynamic
-                group.setTargetPercentage(100.0F / amountOfGroups);
-
-                lastSavedGroup = rolloutGroupRepository.save(group);
-                publishRolloutGroupCreatedEventAfterCommit(lastSavedGroup, rollout);
-            }
-        }
-
-        if (dynamicRolloutGroupTemplate != null && rollout.isDynamic()) { // if not null then it is a dynamic rollout (already validated), but for sure
-            // create first template rollout group
-            final String nameAndDesc = "group-" + (amountOfGroups + 1) + dynamicRolloutGroupTemplate.getNameSuffix();
-            final JpaRolloutGroup group = new JpaRolloutGroup();
-            group.setName(nameAndDesc);
-            group.setDescription(nameAndDesc);
-            group.setRollout(rollout);
-            group.setParent(lastSavedGroup);
-            group.setDynamic(true);
-            group.setStatus(RolloutGroupStatus.READY);
-            group.setConfirmationRequired(isConfirmationRequired);
-
-            addSuccessAndErrorConditionsAndActions(group, conditions);
-
-            // for dynamic groups the target count is kept in target percentage
-            group.setTargetPercentage(dynamicRolloutGroupTemplate.getTargetCount());
-
-            lastSavedGroup = rolloutGroupRepository.save(group);
-            publishRolloutGroupCreatedEventAfterCommit(lastSavedGroup, rollout);
-        }
-
-        // lastSavedGroup is never null! amountOfGroups > 0 (and has static groups) or dynamicRolloutGroupTemplate is
-        // not null (validated) and (validated) the rollout is dynamic, so has dynamic group
-        rollout.setRolloutGroupsCreated(lastSavedGroup.isDynamic() ? amountOfGroups + 1 : amountOfGroups);
+        final JpaRollout rollout = getRolloutOrThrowExceptionIfNotFound(rolloutId);
+        RolloutHelper.checkIfRolloutCanStarted(rollout, rollout);
+        rollout.setStatus(RolloutStatus.STARTING);
+        rollout.setLastCheck(0);
         return rolloutRepository.save(rollout);
     }
 
-    private Rollout createRolloutGroups(final List<RolloutGroupCreate> groupList,
-            final RolloutGroupConditions conditions, final Rollout rollout) {
-        RolloutHelper.verifyRolloutInStatus(rollout, RolloutStatus.CREATING);
-        final JpaRollout savedRollout = (JpaRollout) rollout;
-        final DistributionSetType distributionSetType = savedRollout.getDistributionSet().getType();
+    @Override
+    @Transactional
+    @Retryable(retryFor = { ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX,
+            backoff = @Backoff(delay = Constants.TX_RT_DELAY))
+    public Rollout update(final RolloutUpdate u) {
+        final GenericRolloutUpdate update = (GenericRolloutUpdate) u;
+        final JpaRollout rollout = getRolloutOrThrowExceptionIfNotFound(update.getId());
 
-        // prepare the groups
-        final List<RolloutGroup> groups = groupList.stream()
-                .map(group -> prepareRolloutGroupWithDefaultConditions(group, conditions)).collect(Collectors.toList());
-        groups.forEach(RolloutHelper::verifyRolloutGroupHasConditions);
+        checkIfDeleted(update.getId(), rollout.getStatus());
 
-        RolloutHelper.verifyRemainingTargets(calculateRemainingTargets(groups, savedRollout.getTargetFilterQuery(),
-                savedRollout.getCreatedAt(), distributionSetType.getId()));
+        update.getName().ifPresent(rollout::setName);
+        update.getDescription().ifPresent(rollout::setDescription);
+        return rolloutRepository.save(rollout);
+    }
 
-        // check if we need to enforce the 'max targets per group' quota
-        if (quotaManagement.getMaxTargetsPerRolloutGroup() > 0) {
-            validateTargetsInGroups(groups, savedRollout.getTargetFilterQuery(), savedRollout.getCreatedAt(),
-                    distributionSetType.getId()).getTargetsPerGroup().forEach(this::assertTargetsPerRolloutGroupQuota);
+    @Override
+    @Transactional
+    @Retryable(retryFor = { ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX,
+            backoff = @Backoff(delay = Constants.TX_RT_DELAY))
+    public void delete(final long rolloutId) {
+        final JpaRollout jpaRollout = rolloutRepository.findById(rolloutId)
+                .orElseThrow(() -> new EntityNotFoundException(Rollout.class, rolloutId));
+
+        if (jpaRollout == null) {
+            throw new EntityNotFoundException(Rollout.class, rolloutId);
         }
 
-        // create and persist the groups (w/o filling them with targets)
-        RolloutGroup lastSavedGroup = null;
-        for (final RolloutGroup srcGroup : groups) {
-            final JpaRolloutGroup group = new JpaRolloutGroup();
-            group.setName(srcGroup.getName());
-            group.setDescription(srcGroup.getDescription());
-            group.setRollout(savedRollout);
-            group.setParent(lastSavedGroup);
-            group.setStatus(RolloutGroupStatus.CREATING);
-            group.setConfirmationRequired(srcGroup.isConfirmationRequired());
-
-            group.setTargetPercentage(srcGroup.getTargetPercentage());
-            if (srcGroup.getTargetFilterQuery() != null) {
-                group.setTargetFilterQuery(srcGroup.getTargetFilterQuery());
-            } else {
-                group.setTargetFilterQuery("");
-            }
-
-            addSuccessAndErrorConditionsAndActions(group, srcGroup.getSuccessCondition(),
-                    srcGroup.getSuccessConditionExp(), srcGroup.getSuccessAction(), srcGroup.getSuccessActionExp(),
-                    srcGroup.getErrorCondition(), srcGroup.getErrorConditionExp(), srcGroup.getErrorAction(),
-                    srcGroup.getErrorActionExp());
-
-            lastSavedGroup = rolloutGroupRepository.save(group);
-            publishRolloutGroupCreatedEventAfterCommit(lastSavedGroup, rollout);
+        if (RolloutStatus.DELETING == jpaRollout.getStatus()) {
+            return;
         }
 
-        savedRollout.setRolloutGroupsCreated(groups.size());
-        return rolloutRepository.save(savedRollout);
+        jpaRollout.setStatus(RolloutStatus.DELETING);
+        rolloutRepository.save(jpaRollout);
+    }
+
+    @Override
+    @Transactional
+    public void cancelRolloutsForDistributionSet(final DistributionSet set) {
+        // stop all rollouts for this distribution set
+        rolloutRepository.findByDistributionSetAndStatusIn(set, ROLLOUT_STATUS_STOPPABLE).forEach(rollout -> {
+            final JpaRollout jpaRollout = (JpaRollout) rollout;
+            jpaRollout.setStatus(RolloutStatus.STOPPING);
+            rolloutRepository.save(jpaRollout);
+            log.debug("Rollout {} stopped", jpaRollout.getId());
+        });
+    }
+
+    @Override
+    @Transactional
+    @Retryable(retryFor = { ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX,
+            backoff = @Backoff(delay = Constants.TX_RT_DELAY))
+    public void triggerNextGroup(final long rolloutId) {
+        final JpaRollout rollout = getRolloutOrThrowExceptionIfNotFound(rolloutId);
+        if (RolloutStatus.RUNNING != rollout.getStatus()) {
+            throw new RolloutIllegalStateException("Rollout is not in running state");
+        }
+        final List<RolloutGroup> groups = rollout.getRolloutGroups();
+
+        final boolean isNextGroupTriggerable = groups.stream()
+                .anyMatch(g -> RolloutGroupStatus.SCHEDULED.equals(g.getStatus()));
+
+        if (!isNextGroupTriggerable) {
+            throw new RolloutIllegalStateException("Rollout does not have any groups left to be triggered");
+        }
+
+        final RolloutGroup latestRunning = groups.stream()
+                .sorted(Comparator.comparingLong(RolloutGroup::getId).reversed())
+                .filter(g -> RolloutGroupStatus.RUNNING.equals(g.getStatus()))
+                .findFirst()
+                .orElseThrow(() -> new RolloutIllegalStateException("No group is running"));
+
+        startNextRolloutGroupAction.exec(rollout, latestRunning);
+    }
+
+    @Override
+    public void setRolloutStatusDetails(final Slice<Rollout> rollouts) {
+        final List<Long> rolloutIds = rollouts.getContent().stream().map(Rollout::getId).toList();
+        final Map<Long, List<TotalTargetCountActionStatus>> allStatesForRollout = getStatusCountItemForRollout(rolloutIds);
+
+        if (!allStatesForRollout.isEmpty()) {
+            rollouts.forEach(rollout -> {
+                final TotalTargetCountStatus totalTargetCountStatus = new TotalTargetCountStatus(
+                        allStatesForRollout.get(rollout.getId()), rollout.getTotalTargets(), rollout.getActionType());
+                ((JpaRollout) rollout).setTotalTargetCountStatus(totalTargetCountStatus);
+            });
+        }
     }
 
     /**
-     * In case the given group is missing conditions or actions, they will be set
-     * from the supplied default conditions.
+     * In case the given group is missing conditions or actions, they will be set from the supplied default conditions.
      *
-     * @param create
-     *            group to check
-     * @param conditions
-     *            default conditions and actions
+     * @param create group to check
+     * @param conditions default conditions and actions
      */
-    private static JpaRolloutGroup prepareRolloutGroupWithDefaultConditions(final RolloutGroupCreate create,
-            final RolloutGroupConditions conditions) {
+    private static JpaRolloutGroup prepareRolloutGroupWithDefaultConditions(
+            final RolloutGroupCreate create, final RolloutGroupConditions conditions) {
         final JpaRolloutGroup group = ((JpaRolloutGroupCreate) create).build();
 
         if (group.getSuccessCondition() == null) {
@@ -433,224 +540,196 @@ public class JpaRolloutManagement implements RolloutManagement {
         return group;
     }
 
-    public void publishRolloutGroupCreatedEventAfterCommit(final RolloutGroup group, final Rollout rollout) {
-        afterCommit.afterCommit(() -> eventPublisherHolder.getEventPublisher().publishEvent(
-                new RolloutGroupCreatedEvent(group, rollout.getId(), eventPublisherHolder.getApplicationId())));
-    }
-
-    @Override
-    @Transactional
-    @Retryable(include = {
-            ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX, backoff = @Backoff(delay = Constants.TX_RT_DELAY))
-    public Rollout approveOrDeny(final long rolloutId, final Rollout.ApprovalDecision decision) {
-        return this.approveOrDeny(rolloutId, decision, null);
-    }
-
-    @Override
-    @Transactional
-    @Retryable(include = {
-            ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX, backoff = @Backoff(delay = Constants.TX_RT_DELAY))
-    public Rollout approveOrDeny(final long rolloutId, final Rollout.ApprovalDecision decision, final String remark) {
-        log.debug("approveOrDeny rollout called for rollout {} with decision {}", rolloutId, decision);
-        final JpaRollout rollout = getRolloutAndThrowExceptionIfNotFound(rolloutId);
-        RolloutHelper.verifyRolloutInStatus(rollout, RolloutStatus.WAITING_FOR_APPROVAL);
-        switch (decision) {
-        case APPROVED:
-            rollout.setStatus(RolloutStatus.READY);
-            break;
-        case DENIED:
-            rollout.setStatus(RolloutStatus.APPROVAL_DENIED);
-            break;
-        default:
-            throw new IllegalArgumentException("Unknown approval decision: " + decision);
-        }
-        rollout.setApprovalDecidedBy(rolloutApprovalStrategy.getApprovalUser(rollout));
-        if (remark != null) {
-            rollout.setApprovalRemark(remark);
-        }
-        return rolloutRepository.save(rollout);
-    }
-
-    @Override
-    @Transactional
-    @Retryable(include = {
-            ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX, backoff = @Backoff(delay = Constants.TX_RT_DELAY))
-    public Rollout start(final long rolloutId) {
-        log.debug("startRollout called for rollout {}", rolloutId);
-
-        final JpaRollout rollout = getRolloutAndThrowExceptionIfNotFound(rolloutId);
-        RolloutHelper.checkIfRolloutCanStarted(rollout, rollout);
-        rollout.setStatus(RolloutStatus.STARTING);
-        rollout.setLastCheck(0);
-        return rolloutRepository.save(rollout);
-    }
-
-    @Override
-    @Transactional
-    @Retryable(include = {
-            ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX, backoff = @Backoff(delay = Constants.TX_RT_DELAY))
-    public void pauseRollout(final long rolloutId) {
-        final JpaRollout rollout = getRolloutAndThrowExceptionIfNotFound(rolloutId);
-        if (RolloutStatus.RUNNING != rollout.getStatus()) {
-            throw new RolloutIllegalStateException("Rollout can only be paused in state running but current state is "
-                    + rollout.getStatus().name().toLowerCase());
-        }
-        // setting the complete rollout only in paused state. This is sufficient
-        // due the currently running groups will be completed and new groups are
-        // not started until rollout goes back to running state again. The
-        // periodically check for running rollouts will skip rollouts in pause
-        // state.
-        rollout.setStatus(RolloutStatus.PAUSED);
-        rolloutRepository.save(rollout);
-    }
-
-    @Override
-    @Transactional
-    @Retryable(include = {
-            ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX, backoff = @Backoff(delay = Constants.TX_RT_DELAY))
-    public void resumeRollout(final long rolloutId) {
-        final JpaRollout rollout = getRolloutAndThrowExceptionIfNotFound(rolloutId);
-        if (RolloutStatus.PAUSED != rollout.getStatus()) {
-            throw new RolloutIllegalStateException("Rollout can only be resumed in state paused but current state is "
-                    + rollout.getStatus().name().toLowerCase());
-        }
-        rollout.setStatus(RolloutStatus.RUNNING);
-        rolloutRepository.save(rollout);
-    }
-
-    public static String createRolloutLockKey(final String tenant) {
-        return tenant + "-rollout";
-    }
-
-    @Override
-    @Transactional
-    @Retryable(include = {
-            ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX, backoff = @Backoff(delay = Constants.TX_RT_DELAY))
-    public void delete(final long rolloutId) {
-        final JpaRollout jpaRollout = rolloutRepository.findById(rolloutId)
-                .orElseThrow(() -> new EntityNotFoundException(Rollout.class, rolloutId));
-
-        if (jpaRollout == null) {
-            throw new EntityNotFoundException(Rollout.class, rolloutId);
-        }
-
-        if (RolloutStatus.DELETING == jpaRollout.getStatus()) {
-            return;
-        }
-
-        jpaRollout.setStatus(RolloutStatus.DELETING);
-        rolloutRepository.save(jpaRollout);
-    }
-
-    @Override
-    public long count() {
-        return rolloutRepository.count(
-                RolloutSpecification.isDeletedWithDistributionSet(false, Sort.by(Direction.DESC, JpaRollout_.ID)));
-    }
-
-    @Override
-    public long countByFilters(final String searchText) {
-        return rolloutRepository.count(RolloutSpecification.likeName(searchText, false));
-    }
-
-    @Override
-    public long countByDistributionSetIdAndRolloutIsStoppable(final long setId) {
-        return rolloutRepository.countByDistributionSetIdAndStatusIn(setId, ROLLOUT_STATUS_STOPPABLE);
-    }
-
-    @Override
-    public Slice<Rollout> findByFiltersWithDetailedStatus(final Pageable pageable, final String searchText,
-            final boolean deleted) {
-        final Slice<Rollout> findAll = JpaManagementHelper.findAllWithoutCountBySpec(rolloutRepository, pageable,
-                Collections.singletonList(RolloutSpecification.likeName(searchText, deleted)));
-        setRolloutStatusDetails(findAll);
-        return findAll;
-    }
-
-    @Override
-    public List<Long> findActiveRollouts() {
-        return rolloutRepository.findByStatusIn(ACTIVE_ROLLOUTS);
-    }
-
-    @Override
-    public Optional<Rollout> getByName(final String rolloutName) {
-        return rolloutRepository.findByName(rolloutName);
-    }
-
-    @Override
-    @Transactional
-    @Retryable(include = {
-            ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX, backoff = @Backoff(delay = Constants.TX_RT_DELAY))
-    public Rollout update(final RolloutUpdate u) {
-        final GenericRolloutUpdate update = (GenericRolloutUpdate) u;
-        final JpaRollout rollout = getRolloutAndThrowExceptionIfNotFound(update.getId());
-
-        checkIfDeleted(update.getId(), rollout.getStatus());
-
-        update.getName().ifPresent(rollout::setName);
-        update.getDescription().ifPresent(rollout::setDescription);
-        return rolloutRepository.save(rollout);
-    }
-
     private static void checkIfDeleted(final Long rolloutId, final RolloutStatus status) {
         if (RolloutStatus.DELETING == status || RolloutStatus.DELETED == status) {
             throw new EntityReadOnlyException("Rollout " + rolloutId + " is soft deleted and cannot be changed");
         }
     }
 
-    private JpaRollout getRolloutAndThrowExceptionIfNotFound(final Long rolloutId) {
+    private JpaRollout createRollout(final JpaRollout rollout, final boolean pureDynamic) {
+        WeightValidationHelper.usingContext(systemSecurityContext, tenantConfigurationManagement).validate(rollout);
+
+        rollout.setCreatedAt(System.currentTimeMillis());
+
+        final JpaDistributionSet distributionSet = rollout.getDistributionSet();
+        if (pureDynamic) {
+            rollout.setTotalTargets(0);
+        } else {
+            final long totalTargets;
+            final String errMsg;
+            if (RolloutHelper.isRolloutRetried(rollout.getTargetFilterQuery())) {
+                totalTargets = targetManagement.countByFailedInRollout(
+                        RolloutHelper.getIdFromRetriedTargetFilter(rollout.getTargetFilterQuery()),
+                        distributionSet.getType().getId());
+                errMsg = "No failed targets in Rollout";
+            } else {
+                totalTargets = targetManagement.countByRsqlAndCompatible(rollout.getTargetFilterQuery(),
+                        distributionSet.getType().getId());
+                errMsg = "Rollout does not match any existing targets";
+            }
+            if (totalTargets == 0) {
+                throw new ValidationException(errMsg);
+            }
+            rollout.setTotalTargets(totalTargets);
+        }
+
+        if (((JpaDistributionSetManagement) distributionSetManagement).isImplicitLockApplicable(distributionSet)) {
+            distributionSetManagement.lock(distributionSet.getId());
+        }
+
+        if (rollout.getWeight().isEmpty()) {
+            rollout.setWeight(repositoryProperties.getActionWeightIfAbsent());
+        }
+        contextAware.getCurrentContext().ifPresent(rollout::setAccessControlContext);
+        return rollout;
+    }
+
+    @SuppressWarnings("java:S2259") // java:S2259 - false positive, see the java:S2259 comment in code
+    private Rollout createRolloutGroups(
+            final int amountOfGroups, final RolloutGroupConditions conditions,
+            final JpaRollout rollout, final boolean isConfirmationRequired, final DynamicRolloutGroupTemplate dynamicRolloutGroupTemplate) {
+        RolloutHelper.verifyRolloutInStatus(rollout, RolloutStatus.CREATING);
+        RolloutHelper.verifyRolloutGroupConditions(conditions);
+
+        final List<JpaRolloutGroup> groups = new ArrayList<>();
+        JpaRolloutGroup lastGroup = null;
+        if (amountOfGroups == 0) {
+            if (dynamicRolloutGroupTemplate == null) {
+                throw new ConstraintDeclarationException(
+                        "At least one static rollout group must be defined for a static rollout");
+            }
+        } else {
+            // we can enforce the 'max targets per group' quota right here because
+            // we want to distribute the targets equally to the different groups
+            assertTargetsPerRolloutGroupQuota(rollout.getTotalTargets() / amountOfGroups);
+
+            for (int i = 0; i < amountOfGroups; i++) {
+                final String nameAndDesc = "group-" + (i + 1);
+                final JpaRolloutGroup group = new JpaRolloutGroup();
+                group.setName(nameAndDesc);
+                group.setDescription(nameAndDesc);
+                group.setRollout(rollout);
+                group.setParent(lastGroup);
+                group.setStatus(RolloutGroupStatus.CREATING);
+                group.setConfirmationRequired(isConfirmationRequired);
+
+                addSuccessAndErrorConditionsAndActions(group, conditions);
+
+                // total percent of the all devices. Before, it was relative percent - the percent of the "rest" of the devices. Thus,
+                // if you have first a group 10% (the rest is 90%) and the second group is 50% then the percent would be 50% of 90% - 45%.
+                // This is very unintuitive and is switched in order to be interpreted easier. The "new style" (vs "old style") rollouts could
+                // be detected by JpaRollout#isNewStyleTargetPercent (which uses that old style rollouts have null as dynamic
+                group.setTargetPercentage(100.0F / amountOfGroups);
+
+                groups.add(group);
+                lastGroup = group;
+                publishRolloutGroupCreatedEventAfterCommit(lastGroup, rollout);
+            }
+        }
+
+        if (dynamicRolloutGroupTemplate != null && rollout.isDynamic()) { // if not null then it is a dynamic rollout (already validated), but for sure
+            // create first template rollout group
+            final String nameAndDesc = "group-" + (amountOfGroups + 1) + dynamicRolloutGroupTemplate.getNameSuffix();
+            final JpaRolloutGroup group = new JpaRolloutGroup();
+            group.setName(nameAndDesc);
+            group.setDescription(nameAndDesc);
+            group.setRollout(rollout);
+            group.setParent(lastGroup);
+            group.setDynamic(true);
+            group.setStatus(RolloutGroupStatus.READY);
+            group.setConfirmationRequired(isConfirmationRequired);
+
+            addSuccessAndErrorConditionsAndActions(group, conditions);
+
+            // for dynamic groups the target count is kept in target percentage
+            group.setTargetPercentage(dynamicRolloutGroupTemplate.getTargetCount());
+
+            groups.add(group);
+            lastGroup = group;
+            publishRolloutGroupCreatedEventAfterCommit(lastGroup, rollout);
+        }
+
+        // java:S2259 - lastSavedGroup is never null! amountOfGroups > 0 (and has static groups) or dynamicRolloutGroupTemplate is
+        // not null (validated) and (validated) the rollout is dynamic, so has dynamic group
+        rollout.setRolloutGroupsCreated(lastGroup.isDynamic() ? amountOfGroups + 1 : amountOfGroups);
+        final JpaRollout savedRollout = rolloutRepository.save(rollout);
+        rolloutGroupRepository.saveAll(groups);
+        return savedRollout;
+    }
+
+    private Rollout createRolloutGroups(
+            final List<RolloutGroupCreate> groupList, final RolloutGroupConditions conditions, final JpaRollout rollout) {
+        RolloutHelper.verifyRolloutInStatus(rollout, RolloutStatus.CREATING);
+        final DistributionSetType distributionSetType = rollout.getDistributionSet().getType();
+
+        // prepare the groups
+        final List<RolloutGroup> srcGroups = groupList.stream()
+                .map(group -> prepareRolloutGroupWithDefaultConditions(group, conditions))
+                .map(RolloutGroup.class::cast)
+                .toList();
+        srcGroups.forEach(RolloutHelper::verifyRolloutGroupHasConditions);
+
+        RolloutHelper.verifyRemainingTargets(calculateRemainingTargets(
+                srcGroups, rollout.getTargetFilterQuery(), rollout.getCreatedAt(), distributionSetType.getId()));
+
+        // check if we need to enforce the 'max targets per group' quota
+        if (quotaManagement.getMaxTargetsPerRolloutGroup() > 0) {
+            validateTargetsInGroups(
+                    srcGroups, rollout.getTargetFilterQuery(), rollout.getCreatedAt(),
+                    distributionSetType.getId()).getTargetsPerGroup().forEach(this::assertTargetsPerRolloutGroupQuota);
+        }
+
+        // create and persist the groups (w/o filling them with targets)
+        final List<JpaRolloutGroup> groups = new ArrayList<>();
+        JpaRolloutGroup lastGroup = null;
+        for (final RolloutGroup srcGroup : srcGroups) {
+            final JpaRolloutGroup group = new JpaRolloutGroup();
+            group.setName(srcGroup.getName());
+            group.setDescription(srcGroup.getDescription());
+            group.setRollout(rollout);
+            group.setParent(lastGroup);
+            group.setStatus(RolloutGroupStatus.CREATING);
+            group.setConfirmationRequired(srcGroup.isConfirmationRequired());
+
+            group.setTargetPercentage(srcGroup.getTargetPercentage());
+            if (srcGroup.getTargetFilterQuery() != null) {
+                group.setTargetFilterQuery(srcGroup.getTargetFilterQuery());
+            } else {
+                group.setTargetFilterQuery("");
+            }
+
+            addSuccessAndErrorConditionsAndActions(group, srcGroup.getSuccessCondition(),
+                    srcGroup.getSuccessConditionExp(), srcGroup.getSuccessAction(), srcGroup.getSuccessActionExp(),
+                    srcGroup.getErrorCondition(), srcGroup.getErrorConditionExp(), srcGroup.getErrorAction(),
+                    srcGroup.getErrorActionExp());
+
+            groups.add(group);
+            lastGroup = group;
+            publishRolloutGroupCreatedEventAfterCommit(lastGroup, rollout);
+        }
+
+        rollout.setRolloutGroupsCreated(groups.size());
+
+        final JpaRollout savedRollout = rolloutRepository.save(rollout);
+        rolloutGroupRepository.saveAll(groups);
+        return savedRollout;
+    }
+
+    private JpaRollout getRolloutOrThrowExceptionIfNotFound(final Long rolloutId) {
         return rolloutRepository.findById(rolloutId)
                 .orElseThrow(() -> new EntityNotFoundException(Rollout.class, rolloutId));
     }
 
-    @Override
-    public Slice<Rollout> findAllWithDetailedStatus(final Pageable pageable, final boolean deleted) {
-        final Slice<Rollout> rollouts = JpaManagementHelper.findAllWithoutCountBySpec(rolloutRepository, pageable,
-                Collections
-                        .singletonList(RolloutSpecification.isDeletedWithDistributionSet(deleted, pageable.getSort())));
-        setRolloutStatusDetails(rollouts);
-        return rollouts;
-    }
-
-    @Override
-    public Optional<Rollout> getWithDetailedStatus(final long rolloutId) {
-        final Optional<Rollout> rollout = get(rolloutId);
-
-        if (!rollout.isPresent()) {
-            return rollout;
-        }
-
-        List<TotalTargetCountActionStatus> rolloutStatusCountItems = rolloutStatusCache.getRolloutStatus(rolloutId);
-
-        if (CollectionUtils.isEmpty(rolloutStatusCountItems)) {
-            rolloutStatusCountItems = actionRepository.getStatusCountByRolloutId(rolloutId);
-            rolloutStatusCache.putRolloutStatus(rolloutId, rolloutStatusCountItems);
-        }
-
-        final TotalTargetCountStatus totalTargetCountStatus = new TotalTargetCountStatus(rolloutStatusCountItems,
-                rollout.get().getTotalTargets(), rollout.get().getActionType());
-        ((JpaRollout) rollout.get()).setTotalTargetCountStatus(totalTargetCountStatus);
-        return rollout;
-    }
-
-    @Override
-    public boolean exists(final long rolloutId) {
-        return rolloutRepository.existsById(rolloutId);
-    }
-
-    private Map<Long, List<TotalTargetCountActionStatus>> getStatusCountItemForRollout(final List<Long> rollouts) {
+    private @NotNull  Map<Long, List<TotalTargetCountActionStatus>> getStatusCountItemForRollout(final List<Long> rollouts) {
         if (rollouts.isEmpty()) {
-            return null;
+            return Collections.emptyMap();
         }
 
         final Map<Long, List<TotalTargetCountActionStatus>> fromCache = rolloutStatusCache.getRolloutStatus(rollouts);
 
-        final List<Long> rolloutIds = rollouts.stream().filter(id -> !fromCache.containsKey(id))
-                .collect(Collectors.toList());
-
+        final List<Long> rolloutIds = rollouts.stream().filter(id -> !fromCache.containsKey(id)).toList();
         if (!rolloutIds.isEmpty()) {
-            final List<TotalTargetCountActionStatus> resultList = actionRepository
-                    .getStatusCountByRolloutId(rolloutIds);
+            final List<TotalTargetCountActionStatus> resultList = actionRepository.getStatusCountByRolloutIds(rolloutIds);
             final Map<Long, List<TotalTargetCountActionStatus>> fromDb = resultList.stream()
                     .collect(Collectors.groupingBy(TotalTargetCountActionStatus::getId));
 
@@ -662,60 +741,31 @@ public class JpaRolloutManagement implements RolloutManagement {
         return fromCache;
     }
 
-    @Override
-    public void setRolloutStatusDetails(final Slice<Rollout> rollouts) {
-        final List<Long> rolloutIds = rollouts.getContent().stream().map(Rollout::getId).collect(Collectors.toList());
-        final Map<Long, List<TotalTargetCountActionStatus>> allStatesForRollout = getStatusCountItemForRollout(
-                rolloutIds);
-
-        if (allStatesForRollout != null) {
-            rollouts.forEach(rollout -> {
-                final TotalTargetCountStatus totalTargetCountStatus = new TotalTargetCountStatus(
-                        allStatesForRollout.get(rollout.getId()), rollout.getTotalTargets(), rollout.getActionType());
-                ((JpaRollout) rollout).setTotalTargetCountStatus(totalTargetCountStatus);
-            });
-        }
-    }
-
     /**
-     * Enforces the quota defining the maximum number of {@link Target}s per
-     * {@link RolloutGroup}.
+     * Enforces the quota defining the maximum number of {@link Target}s per {@link RolloutGroup}.
      *
-     * @param requested
-     *            number of targets to check
+     * @param requested number of targets to check
      */
     private void assertTargetsPerRolloutGroupQuota(final long requested) {
         final int quota = quotaManagement.getMaxTargetsPerRolloutGroup();
         QuotaHelper.assertAssignmentQuota(requested, quota, Target.class, RolloutGroup.class);
     }
 
-    @Override
-    @Transactional
-    public void cancelRolloutsForDistributionSet(final DistributionSet set) {
-        // stop all rollouts for this distribution set
-        rolloutRepository.findByDistributionSetAndStatusIn(set, ROLLOUT_STATUS_STOPPABLE).forEach(rollout -> {
-            final JpaRollout jpaRollout = (JpaRollout) rollout;
-            jpaRollout.setStatus(RolloutStatus.STOPPING);
-            rolloutRepository.save(jpaRollout);
-            log.debug("Rollout {} stopped", jpaRollout.getId());
-        });
-    }
-
-    private RolloutGroupsValidation validateTargetsInGroups(final List<RolloutGroup> groups, final String baseFilter,
-            final long totalTargets, final Long dsTypeId) {
+    private RolloutGroupsValidation validateTargetsInGroups(
+            final List<RolloutGroup> groups, final String baseFilter, final long totalTargets, final Long dsTypeId) {
         final List<Long> groupTargetCounts = new ArrayList<>(groups.size());
         Map<String, Long> targetFilterCounts;
         if (!RolloutHelper.isRolloutRetried(baseFilter)) {
             targetFilterCounts = groups.stream()
-                .map(group -> RolloutHelper.getGroupTargetFilter(baseFilter, group)).distinct()
-                .collect(Collectors.toMap(Function.identity(),
-                    groupTargetFilter -> targetManagement.countByRsqlAndCompatible(groupTargetFilter, dsTypeId)));
+                    .map(group -> RolloutHelper.getGroupTargetFilter(baseFilter, group)).distinct()
+                    .collect(Collectors.toMap(Function.identity(),
+                            groupTargetFilter -> targetManagement.countByRsqlAndCompatible(groupTargetFilter, dsTypeId)));
         } else {
             targetFilterCounts = groups.stream()
-                .map(group -> RolloutHelper.getGroupTargetFilter(baseFilter, group)).distinct()
-                .collect(Collectors.toMap(Function.identity(),
-                    groupTargetFilter -> targetManagement.countByFailedInRollout(
-                        RolloutHelper.getIdFromRetriedTargetFilter(baseFilter), dsTypeId)));
+                    .map(group -> RolloutHelper.getGroupTargetFilter(baseFilter, group)).distinct()
+                    .collect(Collectors.toMap(Function.identity(),
+                            groupTargetFilter -> targetManagement.countByFailedInRollout(
+                                    RolloutHelper.getIdFromRetriedTargetFilter(baseFilter), dsTypeId)));
         }
 
         long unusedTargetsCount = 0;
@@ -742,8 +792,7 @@ public class JpaRolloutManagement implements RolloutManagement {
             // new style percent - total percent
             final double percentFromRest = RolloutHelper.toPercentFromTheRest(group, groups);
 
-            final long reducedTargetsInGroup = Math
-                    .round(percentFromRest / 100 * (double) realTargetsInGroup);
+            final long reducedTargetsInGroup = Math.round(percentFromRest / 100 * realTargetsInGroup);
             groupTargetCounts.add(reducedTargetsInGroup);
             unusedTargetsCount += realTargetsInGroup - reducedTargetsInGroup;
         }
@@ -770,76 +819,27 @@ public class JpaRolloutManagement implements RolloutManagement {
         }
     }
 
-    private long calculateRemainingTargets(final List<RolloutGroup> groups, final String targetFilter,
-            final Long createdAt, final Long dsTypeId) {
-
+    private long calculateRemainingTargets(final List<RolloutGroup> groups, final String targetFilter, final Long createdAt, final Long dsTypeId) {
         final TargetCount targets = calculateTargets(targetFilter, createdAt, dsTypeId);
-        long totalTargets = targets.total();
-        final String baseFilter = targets.filter();
 
+        final long totalTargets = targets.total();
         if (totalTargets == 0) {
             throw new ConstraintDeclarationException("Rollout target filter does not match any targets");
         }
 
-        final RolloutGroupsValidation validation = validateTargetsInGroups(groups, baseFilter, totalTargets, dsTypeId);
-
+        final RolloutGroupsValidation validation = validateTargetsInGroups(groups, targets.filter(), totalTargets, dsTypeId);
         return totalTargets - validation.getTargetsInGroups();
     }
 
-    @Override
-    @Async
-    public ListenableFuture<RolloutGroupsValidation> validateTargetsInGroups(final List<RolloutGroupCreate> groups,
-            final String targetFilter, final Long createdAt, final Long dsTypeId) {
-
-        final TargetCount targets = calculateTargets(targetFilter, createdAt, dsTypeId);
-        long totalTargets = targets.total();
-        final String baseFilter = targets.filter();
-
-        if (totalTargets == 0) {
-            throw new ConstraintDeclarationException("Rollout target filter does not match any targets");
-        }
-
-        return new AsyncResult<>(
-                validateTargetsInGroups(groups.stream().map(RolloutGroupCreate::build).collect(Collectors.toList()),
-                        baseFilter, totalTargets, dsTypeId));
-    }
-
-    @Override
-    @Transactional
-    @Retryable(include = {
-            ConcurrencyFailureException.class }, maxAttempts = Constants.TX_RT_MAX, backoff = @Backoff(delay = Constants.TX_RT_DELAY))
-    public void triggerNextGroup(final long rolloutId) {
-        final JpaRollout rollout = getRolloutAndThrowExceptionIfNotFound(rolloutId);
-        if (RolloutStatus.RUNNING != rollout.getStatus()) {
-            throw new RolloutIllegalStateException("Rollout is not in running state");
-        }
-        final List<RolloutGroup> groups = rollout.getRolloutGroups();
-
-        final boolean isNextGroupTriggerable = groups.stream()
-                .anyMatch(g -> RolloutGroupStatus.SCHEDULED.equals(g.getStatus()));
-
-        if (!isNextGroupTriggerable) {
-            throw new RolloutIllegalStateException("Rollout does not have any groups left to be triggered");
-        }
-
-        final RolloutGroup latestRunning = groups.stream()
-                .sorted(Comparator.comparingLong(RolloutGroup::getId).reversed())
-                .filter(g -> RolloutGroupStatus.RUNNING.equals(g.getStatus())).findFirst()
-                .orElseThrow(() -> new RolloutIllegalStateException("No group is running"));
-
-        startNextRolloutGroupAction.exec(rollout, latestRunning);
-    }
-
     private TargetCount calculateTargets(final String targetFilter, final Long createdAt, final Long dsTypeId) {
-        String baseFilter;
-        long totalTargets;
+        final String baseFilter;
+        final long totalTargets;
         if (!RolloutHelper.isRolloutRetried(targetFilter)) {
             baseFilter = RolloutHelper.getTargetFilterQuery(targetFilter, createdAt);
             totalTargets = targetManagement.countByRsqlAndCompatible(baseFilter, dsTypeId);
         } else {
-            totalTargets = targetManagement.countByFailedInRollout(
-                RolloutHelper.getIdFromRetriedTargetFilter(targetFilter), dsTypeId);
             baseFilter = targetFilter;
+            totalTargets = targetManagement.countByFailedInRollout(RolloutHelper.getIdFromRetriedTargetFilter(targetFilter), dsTypeId);
         }
 
         return new TargetCount(totalTargets, baseFilter);
