@@ -22,6 +22,8 @@ import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
+import cz.jirutka.rsql.parser.ParseException;
+import cz.jirutka.rsql.parser.RSQLParserException;
 import lombok.extern.slf4j.Slf4j;
 import org.eclipse.hawkbit.repository.TargetFields;
 import org.eclipse.hawkbit.repository.exception.RSQLParameterSyntaxException;
@@ -32,21 +34,17 @@ import org.eclipse.hawkbit.repository.rsql.SuggestToken;
 import org.eclipse.hawkbit.repository.rsql.SuggestionContext;
 import org.eclipse.hawkbit.repository.rsql.SyntaxErrorContext;
 import org.eclipse.hawkbit.repository.rsql.ValidationOracleContext;
-import org.eclipse.persistence.exceptions.ConversionException;
 import org.springframework.orm.jpa.JpaSystemException;
 import org.springframework.util.CollectionUtils;
-
-import cz.jirutka.rsql.parser.ParseException;
-import cz.jirutka.rsql.parser.RSQLParserException;
 
 /**
  * An implementation of {@link RsqlValidationOracle} which retrieves the
  * exception using the {@link ParseException} to retrieve the suggestions.
- * 
+ *
  * The suggestion only works when there are syntax errors existing because the
  * information about current and next tokens in the RSQL syntax are from the
  * {@link ParseException}.
- * 
+ *
  * There is a feature request on the GitHub project
  * <a href="https://github.com/jirutka/rsql-parser/issues/22">https://github.com
  * /jirutka/rsql-parser/issues/22</a>
@@ -54,9 +52,9 @@ import cz.jirutka.rsql.parser.RSQLParserException;
 @Slf4j
 public class RsqlParserValidationOracle implements RsqlValidationOracle {
 
+    @SuppressWarnings("java:S1872") // intentionally don't use class but name - class could be unavailable
     @Override
     public ValidationOracleContext suggest(final String rsqlQuery, final int cursorPosition) {
-
         final List<SuggestToken> expectedTokens = new ArrayList<>();
         final ValidationOracleContext context = new ValidationOracleContext();
         context.setSyntaxError(true);
@@ -77,8 +75,12 @@ public class RsqlParserValidationOracle implements RsqlValidationOracle {
         } catch (final RSQLParameterUnsupportedFieldException | IllegalArgumentException ex) {
             errorContext.setErrorMessage(getCustomMessage(ex.getMessage(), null));
             log.trace("Illegal argument on parsing :", ex);
-        } catch (@SuppressWarnings("squid:S1166") final ConversionException | JpaSystemException e) {
+        } catch (final JpaSystemException e) {
             // noop
+        } catch (final RuntimeException e) {
+            if (!"org.eclipse.persistence.exceptions.ConversionException".equals(e.getClass().getName())) {
+                throw e;
+            }
         }
         return context;
     }
@@ -92,8 +94,8 @@ public class RsqlParserValidationOracle implements RsqlValidationOracle {
             final Collection<String> tokenImages = TokenDescription.getTokenImage(TokenDescription.LOGICAL_OP);
             final List<SuggestToken> logicalOps = new ArrayList<>(tokenImages.size());
             for (final String tokenImage : tokenImages) {
-                logicalOps.add(new SuggestToken(currentQueryLength, currentQueryLength + tokenImage.length(), null,
-                        tokenImage));
+                logicalOps.add(
+                        new SuggestToken(currentQueryLength, currentQueryLength + tokenImage.length(), null, tokenImage));
             }
             return logicalOps;
         }
@@ -148,7 +150,7 @@ public class RsqlParserValidationOracle implements RsqlValidationOracle {
             final int currentQueryLength = rsqlQuery.length() - 1;
             final Collection<String> tokenImages = TokenDescription.getTokenImage(TokenDescription.COMPARATOR);
             return tokenImages.stream().map(tokenImage -> new SuggestToken(currentQueryLength,
-                    currentQueryLength + tokenImage.length(), null, tokenImage)).collect(Collectors.toList());
+                    currentQueryLength + tokenImage.length(), null, tokenImage)).toList();
         }
 
         return Collections.emptyList();
@@ -212,8 +214,8 @@ public class RsqlParserValidationOracle implements RsqlValidationOracle {
     }
 
     private static ParseException findParseException(final Throwable e) {
-        if (e instanceof ParseException) {
-            return (ParseException) e;
+        if (e instanceof ParseException parseException) {
+            return parseException;
         } else if (e.getCause() != null) {
             return findParseException(e.getCause());
         }
@@ -227,15 +229,15 @@ public class RsqlParserValidationOracle implements RsqlValidationOracle {
             return builder;
         }
 
-        builder = message.substring(message.indexOf(':') + 1, message.length());
-        if (builder.indexOf("Was expecting") != -1) {
+        builder = message.substring(message.indexOf(':') + 1);
+        if (builder.contains("Was expecting")) {
             builder = builder.substring(0, builder.lastIndexOf("Was expecting"));
         }
 
         if (!CollectionUtils.isEmpty(expectedTokens)) {
             final StringBuilder tokens = new StringBuilder();
-            expectedTokens.stream().forEach(value -> tokens.append(value.getSuggestion() + ","));
-            builder = builder.concat("Was expecting :" + tokens.toString().substring(0, tokens.length() - 1));
+            expectedTokens.stream().forEach(value -> tokens.append(value.getSuggestion()).append(","));
+            builder = builder.concat("Was expecting :" + tokens.substring(0, tokens.length() - 1));
         }
         builder = builder.replace('\r', ' ');
         builder = builder.replace('\n', ' ');
@@ -292,7 +294,7 @@ public class RsqlParserValidationOracle implements RsqlValidationOracle {
             final String finalTmpTokenName = tmpTokenName;
             return Arrays.stream(TargetFields.values())
                     .filter(field -> field.toString().equalsIgnoreCase(finalTmpTokenName))
-                    .map(TargetFields::getSubEntityAttributes).flatMap(List::stream).count() > 0;
+                    .map(TargetFields::getSubEntityAttributes).mapToLong(List::size).sum() > 0;
         }
 
         private static boolean isMap(final String tokenImageName) {
@@ -305,29 +307,27 @@ public class RsqlParserValidationOracle implements RsqlValidationOracle {
                 final String tokenImageName) {
             return FIELD_NAMES.stream()
                     .map(field -> new SuggestToken(beginToken, endToken, tokenImageName, field.toLowerCase()))
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         private static List<SuggestToken> toSubSuggestToken(final int beginToken, final int endToken,
                 final String topToken, final String tokenImageName) {
             return Arrays.stream(TargetFields.values()).filter(field -> field.toString().equalsIgnoreCase(topToken))
                     .map(TargetFields::getSubEntityAttributes).flatMap(List::stream)
-                    .map(subentity -> new SuggestToken(beginToken, endToken, tokenImageName, subentity))
-                    .collect(Collectors.toList());
+                    .map(subEntity -> new SuggestToken(beginToken, endToken, tokenImageName, subEntity))
+                    .toList();
         }
 
         private static boolean containsValue(final String imageName) {
             if (!imageName.contains(".")) {
-                return FIELD_NAMES.stream().filter(value -> value.equalsIgnoreCase(imageName)).count() > 0;
+                return FIELD_NAMES.stream().anyMatch(value -> value.equalsIgnoreCase(imageName));
             }
             final String[] split = imageName.split("\\.");
             if (split.length > 1 && FIELD_NAMES.contains(split[0].toLowerCase())) {
                 return SUB_NAMES.get(split[0].toLowerCase()).stream()
-                        .filter(subname -> (split[0] + "." + subname).equalsIgnoreCase(imageName)).count() > 0;
+                        .anyMatch(subname -> (split[0] + "." + subname).equalsIgnoreCase(imageName));
             }
-            return FIELD_NAMES.stream().filter(value -> value.equalsIgnoreCase(imageName)).count() > 0;
+            return FIELD_NAMES.stream().anyMatch(value -> value.equalsIgnoreCase(imageName));
         }
-
     }
-
 }
