@@ -11,10 +11,11 @@ package org.eclipse.hawkbit.repository.event.remote;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
+import io.qameta.allure.Description;
+import io.qameta.allure.Feature;
+import io.qameta.allure.Story;
 import org.eclipse.hawkbit.repository.jpa.model.JpaAction;
 import org.eclipse.hawkbit.repository.model.Action;
 import org.eclipse.hawkbit.repository.model.Action.ActionType;
@@ -23,23 +24,18 @@ import org.eclipse.hawkbit.repository.model.ActionProperties;
 import org.eclipse.hawkbit.repository.model.DistributionSet;
 import org.junit.jupiter.api.Test;
 
-import io.qameta.allure.Description;
-import io.qameta.allure.Feature;
-import io.qameta.allure.Story;
-
 @Feature("Component Tests - Repository")
 @Story("RemoteTenantAwareEvent Tests")
-public class RemoteTenantAwareEventTest extends AbstractRemoteEventTest {
+class RemoteTenantAwareEventTest extends AbstractRemoteEventTest {
 
     private static final String TENANT_DEFAULT = "DEFAULT";
     private static final String APPLICATION_ID_DEFAULT = "Node";
 
     @Test
     @Description("Verifies that a testMultiActionAssignEvent can be properly serialized and deserialized")
-    public void testMultiActionAssignEvent() {
-        final List<String> controllerIds = Arrays.asList("id0", "id1", "id2", "id3",
-                "id4loooooooooooooooooooooooooooooooooooonnnnnnnnnnnnnnnnnng");
-        final List<Action> actions = controllerIds.stream().map(this::createAction).collect(Collectors.toList());
+    void testMultiActionAssignEvent() {
+        final List<String> controllerIds = List.of("id0", "id1", "id2", "id3", "id4loooooooooooooooooooooooooooooooooooonnnnnnnnnnnnnnnnnng");
+        final List<Action> actions = controllerIds.stream().map(this::createAction).toList();
 
         final MultiActionAssignEvent assignEvent = new MultiActionAssignEvent(TENANT_DEFAULT, APPLICATION_ID_DEFAULT,
                 actions);
@@ -53,22 +49,11 @@ public class RemoteTenantAwareEventTest extends AbstractRemoteEventTest {
         assertThat(remoteAssignEventJackson.getControllerIds()).containsExactlyElementsOf(controllerIds);
     }
 
-    private Action createAction(final String controllerId) {
-        long id = 1;
-        final JpaAction generateAction = new JpaAction();
-        generateAction.setId(id++);
-        generateAction.setActionType(ActionType.FORCED);
-        generateAction.setTarget(testdataFactory.createTarget(controllerId));
-        generateAction.setStatus(Status.RUNNING);
-        return generateAction;
-    }
-
     @Test
     @Description("Verifies that a MultiActionCancelEvent can be properly serialized and deserialized")
-    public void testMultiActionCancelEvent() {
-        final List<String> controllerIds = Arrays.asList("id0", "id1", "id2", "id3",
-                "id4loooooooooooooooooooooooooooooooooooonnnnnnnnnnnnnnnnnng");
-        final List<Action> actions = controllerIds.stream().map(this::createAction).collect(Collectors.toList());
+    void testMultiActionCancelEvent() {
+        final List<String> controllerIds = List.of("id0", "id1", "id2", "id3", "id4loooooooooooooooooooooooooooooooooooonnnnnnnnnnnnnnnnnng");
+        final List<Action> actions = controllerIds.stream().map(this::createAction).toList();
 
         final MultiActionCancelEvent cancelEvent = new MultiActionCancelEvent(TENANT_DEFAULT, APPLICATION_ID_DEFAULT,
                 actions);
@@ -84,7 +69,7 @@ public class RemoteTenantAwareEventTest extends AbstractRemoteEventTest {
 
     @Test
     @Description("Verifies that a DownloadProgressEvent can be properly serialized and deserialized")
-    public void reloadDownloadProgessByRemoteEvent() {
+    void reloadDownloadProgressByRemoteEvent() {
         final DownloadProgressEvent downloadProgressEvent = new DownloadProgressEvent(TENANT_DEFAULT, 1L, 3L,
                 APPLICATION_ID_DEFAULT);
 
@@ -97,7 +82,7 @@ public class RemoteTenantAwareEventTest extends AbstractRemoteEventTest {
 
     @Test
     @Description("Verifies that a TargetAssignDistributionSetEvent can be properly serialized and deserialized")
-    public void testTargetAssignDistributionSetEvent() {
+    void testTargetAssignDistributionSetEvent() {
 
         final DistributionSet dsA = testdataFactory.createDistributionSet("");
 
@@ -112,7 +97,7 @@ public class RemoteTenantAwareEventTest extends AbstractRemoteEventTest {
         final Action action = actionRepository.save(generateAction);
 
         final TargetAssignDistributionSetEvent assignmentEvent = new TargetAssignDistributionSetEvent(
-                action.getTenant(), dsA.getId(), Arrays.asList(action), serviceMatcher.getBusId(),
+                action.getTenant(), dsA.getId(), List.of(action), serviceMatcher.getBusId(),
                 action.isMaintenanceWindowAvailable());
 
         final TargetAssignDistributionSetEvent remoteEventProtoStuff = createProtoStuffEvent(assignmentEvent);
@@ -124,7 +109,7 @@ public class RemoteTenantAwareEventTest extends AbstractRemoteEventTest {
 
     @Test
     @Description("Verifies that a TargetAssignDistributionSetEvent can be properly serialized and deserialized")
-    public void testCancelTargetAssignmentEvent() {
+    void testCancelTargetAssignmentEvent() {
 
         final DistributionSet dsA = testdataFactory.createDistributionSet("");
 
@@ -148,21 +133,30 @@ public class RemoteTenantAwareEventTest extends AbstractRemoteEventTest {
         assertCancelTargetAssignmentEvent(action, remoteEventJackson);
     }
 
+    private Action createAction(final String controllerId) {
+        final JpaAction generateAction = new JpaAction();
+        generateAction.setId(1L);
+        generateAction.setActionType(ActionType.FORCED);
+        generateAction.setTarget(testdataFactory.createTarget(controllerId));
+        generateAction.setStatus(Status.RUNNING);
+        return generateAction;
+    }
+
     private void assertTargetAssignDistributionSetEvent(final Action action,
             final TargetAssignDistributionSetEvent underTest) {
 
-        assertThat(underTest.getActions().size()).isEqualTo(1);
+        assertThat(underTest.getActions()).hasSize(1);
         final ActionProperties actionProperties = underTest.getActions().get(action.getTarget().getControllerId());
         assertThat(actionProperties).isNotNull();
-        assertThat(actionProperties).isEqualToComparingFieldByField(new ActionProperties(action));
+        assertThat(actionProperties).usingRecursiveComparison().comparingOnlyFields().isEqualTo(new ActionProperties(action));
         assertThat(underTest.getDistributionSetId()).isEqualTo(action.getDistributionSet().getId());
     }
 
     private void assertCancelTargetAssignmentEvent(final Action action, final CancelTargetAssignmentEvent underTest) {
-        assertThat(underTest.getActions().size()).isEqualTo(1);
+        assertThat(underTest.getActions()).hasSize(1);
         final ActionProperties actionProperties = underTest.getActions().get(action.getTarget().getControllerId());
         assertThat(actionProperties).isNotNull();
-        assertThat(actionProperties).isEqualToComparingFieldByField(new ActionProperties(action));
+        assertThat(actionProperties).usingRecursiveComparison().comparingOnlyFields().isEqualTo(new ActionProperties(action));
         assertThat(underTest.getActionPropertiesForController(action.getTarget().getControllerId())).isPresent();
     }
 }
