@@ -16,13 +16,13 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.function.Function;
-import java.util.stream.Collectors;
+import java.util.function.Supplier;
 
 import org.eclipse.hawkbit.ContextAware;
 import org.eclipse.hawkbit.im.authentication.SpPermission.SpringEvalExpressions;
-import org.eclipse.hawkbit.im.authentication.TenantAwareAuthenticationDetails;
-import org.eclipse.hawkbit.im.authentication.TenantAwareUser;
 import org.eclipse.hawkbit.tenancy.TenantAware;
+import org.eclipse.hawkbit.tenancy.TenantAwareAuthenticationDetails;
+import org.eclipse.hawkbit.tenancy.TenantAwareUser;
 import org.eclipse.hawkbit.tenancy.UserAuthoritiesResolver;
 import org.springframework.lang.Nullable;
 import org.springframework.security.core.Authentication;
@@ -35,60 +35,59 @@ import org.springframework.security.oauth2.core.oidc.user.OidcUser;
 
 /**
  * A {@link ContextAware} (hence of {@link TenantAware}) that uses spring security context propagation
- * mechanisms and  which retrieves the ID of the tenant
- * from the {@link SecurityContext#getAuthentication()}
- * {@link Authentication#getDetails()} which holds the
- * {@link TenantAwareAuthenticationDetails} object.
+ * mechanisms and  which retrieves the ID of the tenant from the {@link SecurityContext#getAuthentication()}
+ * {@link Authentication#getDetails()} which holds the {@link TenantAwareAuthenticationDetails} object.
  */
 public class SecurityContextTenantAware implements ContextAware {
 
     public static final String SYSTEM_USER = "system";
-    private static final Collection<? extends GrantedAuthority> SYSTEM_AUTHORITIES = Collections
-            .singletonList(new SimpleGrantedAuthority(SpringEvalExpressions.SYSTEM_ROLE));
+
+    private static final Collection<? extends GrantedAuthority> SYSTEM_AUTHORITIES =
+            List.of(new SimpleGrantedAuthority(SpringEvalExpressions.SYSTEM_ROLE));
 
     private final UserAuthoritiesResolver authoritiesResolver;
     private final SecurityContextSerializer securityContextSerializer;
+    private final TenantResolver tenantResolver;
 
     /**
-     * Creates the {@link SecurityContextTenantAware} based on the given
-     * {@link UserAuthoritiesResolver}.
+     * Creates the {@link SecurityContextTenantAware} based on the given {@link UserAuthoritiesResolver}.
      *
-     * @param authoritiesResolver
-     *            Resolver to retrieve the authorities for a given user. Must
-     *            not be <code>null</code>..
+     * @param authoritiesResolver Resolver to retrieve the authorities for a given user. Must not be <code>null</code>..
      */
     public SecurityContextTenantAware(final UserAuthoritiesResolver authoritiesResolver) {
-        this.authoritiesResolver = authoritiesResolver;
-        this.securityContextSerializer = SecurityContextSerializer.NOP;
+        this(authoritiesResolver, null, null);
     }
 
     /**
-     * Creates the {@link SecurityContextTenantAware} based on the given
-     * {@link UserAuthoritiesResolver}.
-     * 
-     * @param authoritiesResolver
-     *            Resolver to retrieve the authorities for a given user. Must
-     *            not be <code>null</code>.
-     * @param  securityContextSerializer
-     *            Serializer that is used to serialize / deserialize {@link SecurityContext}s.
+     * Creates the {@link SecurityContextTenantAware} based on the given {@link UserAuthoritiesResolver}.
+     *
+     * @param authoritiesResolver Resolver to retrieve the authorities for a given user. Must not be <code>null</code>.
+     * @param securityContextSerializer Serializer that is used to serialize / deserialize {@link SecurityContext}s.
      */
-    public SecurityContextTenantAware(final UserAuthoritiesResolver authoritiesResolver, @Nullable final SecurityContextSerializer securityContextSerializer) {
+    public SecurityContextTenantAware(
+            final UserAuthoritiesResolver authoritiesResolver,
+            @Nullable final SecurityContextSerializer securityContextSerializer) {
+        this(authoritiesResolver, securityContextSerializer, null);
+    }
+
+    /**
+     * Creates the {@link SecurityContextTenantAware} based on the given {@link UserAuthoritiesResolver}.
+     *
+     * @param authoritiesResolver Resolver to retrieve the authorities for a given user. Must not be <code>null</code>.
+     * @param securityContextSerializer Serializer that is used to serialize / deserialize {@link SecurityContext}s.
+     */
+    public SecurityContextTenantAware(
+            final UserAuthoritiesResolver authoritiesResolver,
+            @Nullable final SecurityContextSerializer securityContextSerializer,
+            @Nullable final TenantResolver tenantResolver) {
         this.authoritiesResolver = authoritiesResolver;
         this.securityContextSerializer = securityContextSerializer == null ? SecurityContextSerializer.NOP : securityContextSerializer;
+        this.tenantResolver = tenantResolver == null ? new DefaultTenantResolver() : tenantResolver;
     }
 
     @Override
     public String getCurrentTenant() {
-        final SecurityContext context = SecurityContextHolder.getContext();
-        if (context.getAuthentication() != null) {
-            final Object principal = context.getAuthentication().getPrincipal();
-            if (context.getAuthentication().getDetails() instanceof TenantAwareAuthenticationDetails) {
-                return ((TenantAwareAuthenticationDetails) context.getAuthentication().getDetails()).getTenant();
-            } else if (principal instanceof TenantAwareUser) {
-                return ((TenantAwareUser) principal).getTenant();
-            }
-        }
-        return null;
+        return tenantResolver.resolveTenant();
     }
 
     @Override
@@ -96,11 +95,11 @@ public class SecurityContextTenantAware implements ContextAware {
         final SecurityContext context = SecurityContextHolder.getContext();
         if (context.getAuthentication() != null) {
             final Object principal = context.getAuthentication().getPrincipal();
-            if (principal instanceof OidcUser) {
-                return ((OidcUser) principal).getPreferredUsername();
+            if (principal instanceof OidcUser oidcUser) {
+                return oidcUser.getPreferredUsername();
             }
-            if (principal instanceof User) {
-                return ((User) principal).getUsername();
+            if (principal instanceof User user) {
+                return user.getUsername();
             }
         }
         return null;
@@ -108,17 +107,19 @@ public class SecurityContextTenantAware implements ContextAware {
 
     @Override
     public <T> T runAsTenant(final String tenant, final TenantRunner<T> tenantRunner) {
-        return runInContext(buildSystemSecurityContext(tenant), tenantRunner);
+        return runInContext(buildUserSecurityContext(tenant, SYSTEM_USER, SYSTEM_AUTHORITIES), tenantRunner::run);
     }
 
     @Override
     public <T> T runAsTenantAsUser(final String tenant, final String username, final TenantRunner<T> tenantRunner) {
         Objects.requireNonNull(tenant);
         Objects.requireNonNull(username);
+
         final List<SimpleGrantedAuthority> authorities = runAsSystem(
-                () -> authoritiesResolver.getUserAuthorities(tenant, username).stream().map(SimpleGrantedAuthority::new)
-                        .collect(Collectors.toList()));
-        return runInContext(buildUserSecurityContext(tenant, username, authorities), tenantRunner);
+                () -> authoritiesResolver.getUserAuthorities(tenant, username).stream()
+                        .map(SimpleGrantedAuthority::new)
+                        .toList());
+        return runInContext(buildUserSecurityContext(tenant, username, authorities), tenantRunner::run);
     }
 
     @Override
@@ -133,45 +134,35 @@ public class SecurityContextTenantAware implements ContextAware {
         final SecurityContext securityContext = securityContextSerializer.deserialize(serializedContext);
         Objects.requireNonNull(securityContext);
 
+        return runInContext(securityContext, () -> function.apply(t));
+    }
+
+    private static <T> T runInContext(final SecurityContext securityContext, final Supplier<T> supplier) {
         final SecurityContext originalContext = SecurityContextHolder.getContext();
         if (Objects.equals(securityContext, originalContext)) {
-            return function.apply(t);
+            return supplier.get();
         } else {
             SecurityContextHolder.setContext(securityContext);
             try {
-                return function.apply(t);
+                return MdcHandler.getInstance().callWithAuthRE(supplier::get);
             } finally {
                 SecurityContextHolder.setContext(originalContext);
             }
         }
     }
 
-    private static <T> T runInContext(final SecurityContext context, final TenantRunner<T> tenantRunner) {
-        final SecurityContext originalContext = SecurityContextHolder.getContext();
-        try {
-            SecurityContextHolder.setContext(context);
-            return tenantRunner.run();
-        } finally {
-            SecurityContextHolder.setContext(originalContext);
-        }
-    }
-
-    private static SecurityContext buildSystemSecurityContext(final String tenant) {
-        return buildUserSecurityContext(tenant, SYSTEM_USER, SYSTEM_AUTHORITIES);
-    }
-
     private static <T> T runAsSystem(final TenantRunner<T> tenantRunner) {
         final SecurityContext currentContext = SecurityContextHolder.getContext();
+        SystemSecurityContext.setSystemContext(currentContext);
         try {
-            SystemSecurityContext.setSystemContext(currentContext);
-            return tenantRunner.run();
+            return MdcHandler.getInstance().callWithAuthRE(tenantRunner::run);
         } finally {
             SecurityContextHolder.setContext(currentContext);
         }
     }
 
-    private static SecurityContext buildUserSecurityContext(final String tenant, final String username,
-            final Collection<? extends GrantedAuthority> authorities) {
+    private static SecurityContext buildUserSecurityContext(
+            final String tenant, final String username, final Collection<? extends GrantedAuthority> authorities) {
         final SecurityContext securityContext = SecurityContextHolder.createEmptyContext();
         securityContext.setAuthentication(new AuthenticationDelegate(
                 SecurityContextHolder.getContext().getAuthentication(), tenant, username, authorities));
@@ -179,9 +170,8 @@ public class SecurityContextTenantAware implements ContextAware {
     }
 
     /**
-     * An {@link Authentication} implementation to delegate to an existing
-     * {@link Authentication} object except setting the details specifically for
-     * a specific tenant and user.
+     * An {@link Authentication} implementation to delegate to an existing {@link Authentication} object except setting the details
+     * specifically for a specific tenant and user.
      */
     private static final class AuthenticationDelegate implements Authentication {
 
@@ -189,31 +179,35 @@ public class SecurityContextTenantAware implements ContextAware {
         private static final long serialVersionUID = 1L;
 
         private final Authentication delegate;
-
         private final TenantAwareUser principal;
-
         private final TenantAwareAuthenticationDetails tenantAwareAuthenticationDetails;
 
         private AuthenticationDelegate(final Authentication delegate, final String tenant, final String username,
                 final Collection<? extends GrantedAuthority> authorities) {
             this.delegate = delegate;
-            this.principal = new TenantAwareUser(username, username, authorities, tenant);
+            principal = new TenantAwareUser(username, username, authorities, tenant);
             tenantAwareAuthenticationDetails = new TenantAwareAuthenticationDetails(tenant, false);
-        }
-
-        @Override
-        public boolean equals(final Object another) {
-            return Objects.equals(delegate, another);
-        }
-
-        @Override
-        public String toString() {
-            return delegate != null ? delegate.toString() : null;
         }
 
         @Override
         public int hashCode() {
             return delegate != null ? delegate.hashCode() : -1;
+        }
+
+        @Override
+        public boolean equals(final Object another) {
+            if (another instanceof Authentication anotherAuthentication) {
+                return Objects.equals(delegate, anotherAuthentication) &&
+                        Objects.equals(principal, anotherAuthentication.getPrincipal()) &&
+                        Objects.equals(tenantAwareAuthenticationDetails, anotherAuthentication.getDetails());
+            } else {
+                return false;
+            }
+        }
+
+        @Override
+        public String toString() {
+            return delegate != null ? delegate.toString() : null;
         }
 
         @Override
